--- a/_posts/2009-11-1-2-01500.md
+++ b/_posts/2009-11-1-2-01500.md
@@ -141,4 +141,4 @@ The terrain slowly rose, though not obviously. They were now going uphill. The l
 "Is that so? Did she catch a cold?" Guo Yi said, sitting down with a plop and taking out his Type 64 pistol from his pocket. He was anxious to check the condition of the gun. It was a bit surprising that the bandits would return his pistol. Whatever their motives, it saved him a lot of trouble—losing a gun was a big problem.
 
 "No, she wouldn't." Xue Ziliang was about to say something when a rapid gong sound suddenly came from the grass. The three of them were startled, and then a dozen or so feathered arrows shot out from the grass and woods!
-[y001]: /characters/y001 "萧子山"
+[y001]: /characters/y001 "Xiao Zishan"
