--- a/_posts/2009-9-13-1-01300.md
+++ b/_posts/2009-9-13-1-01300.md
@@ -6,7 +6,7 @@ path: 2009-9-13-1-01300.md
 tag: [normal]
 ---
 
-"[Zishan][y001], I think you have quite the temperament of a landlord," [Wen Desi][y002] chuckled. "People talk about a protagonist's aura, but you have the 威 (wei - might/prestige) of a landlord."
+"[Zishan][y001], I think you have quite the temperament of a landlord," [Wen Desi][y002] chuckled. "People talk about a protagonist's aura, but you have the wei (might/prestige) of a landlord."
 
 "Maybe my ancestors were landlords. My dream has always been to have a large manor, grow vegetables, raise chickens, put up a grape trellis, place a wicker chair underneath, and slowly sip tea from a teapot..."
 
@@ -114,8 +114,8 @@ After receiving the phone invitation from [Wen Desi][y002], he packed his bags w
 
 He was not going to Guangzhou, but to a county-level city he had never heard of. After getting off the train, he still had to transfer to a long-distance bus. This place was the departure base that [Xiao Zishan][y001] had found. Here, the transmigrators would prepare their horses and sharpen their weapons, get ready, and embark on a one-way road to conquer a parallel world.
 
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
-[y004]: /characters/y004 "展无涯"
-[y005]: /characters/y005 "马千瞩"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
+[y004]: /characters/y004 "Zhan Wuya"
+[y005]: /characters/y005 "Ma Qianzhu"
