--- a/_posts/2009-9-26-1-02600.md
+++ b/_posts/2009-9-26-1-02600.md
@@ -156,5 +156,5 @@ The three urban nerds were all flustered for a moment, collapsing in their chair
 
 Things were becoming more and more complicated. Thinking of Gao Ju's uneasy look today, their thoughts were all a little tense.
 
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
