--- a/_posts/2009-9-3-1-00300.md
+++ b/_posts/2009-9-3-1-00300.md
@@ -64,6 +64,6 @@ Master Gao took the paper box half-believingly, but was startled. The box was in
 
 He thought to himself: Truly strange. He carefully opened the box. Inside was a small, oval, flat box. The material was neither jade nor porcelain, and like the paper box, it seemed to have a layer of porcelain glaze. The color was a vibrant pink he had never seen on porcelain before, and it was very light in his hand. Master Gao had been dealing in foreign goods for many years and was very knowledgeable, but he couldn't tell what it was made of. It looked similar to a woman's powder box. He tried to lift the lid, and it opened like a clamshell. He saw a bright, shining surface inside. He looked closely, and his face turned ashen!
 
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
