--- a/_posts/2010-11-1-3-19700.md
+++ b/_posts/2010-11-1-3-19700.md
@@ -28,7 +28,7 @@ Everyone was pleased that the Industrial and Energy Committee had produced such 
 
 In fact, the call for producing refrigeration equipment had been growing louder recently, and not just for the ZIMINLOU. The communications center needed ice to cool its equipment, the explosives workshop needed it for cooling to ensure production safety, the canteen needed it to preserve food, and the Ministry of Health needed it to preserve corpses for dissection...
 
-The穿越 Group's number of refrigerators was pitifully small—no one had thought much about them initially. The cold storage on the *Fengcheng* was a bit far from Bairen City, and the ship's cold storage ran on its auxiliary engine, which burned precious diesel fuel. [Ma Qianzhu][y005] had been hoping the Industrial and Energy Committee could come up with a more economical refrigeration solution than the ship's cold storage.
+The transmigration group's number of refrigerators was pitifully small—no one had thought much about them initially. The cold storage on the *Fengcheng* was a bit far from Bairen City, and the ship's cold storage ran on its auxiliary engine, which burned precious diesel fuel. [Ma Qianzhu][y005] had been hoping the Industrial and Energy Committee could come up with a more economical refrigeration solution than the ship's cold storage.
 
 The Industrial and Energy Committee had already held several meetings on this issue. They had long since found a relatively simple, feasible, and economical method to meet [Ma Qianzhu][y005]'s request: the gas refrigerator mentioned by Liang Xin.
 
@@ -48,7 +48,7 @@ The Industrial and Energy Committee had neither foam plastic nor asbestos. The o
 
 After ignition, the cold storage ran continuously for 24 hours, proving it could reach a minimum temperature of -16°C and maintain it stably.
 
-Everyone was quite satisfied with this. The theoretical -40°C had no special significance for the 穿越 Group. -16°C was already sufficient for long-term storage of all kinds of fresh food, making ice, and producing various cold drinks.
+Everyone was quite satisfied with this. The theoretical -40°C had no special significance for the Transmigration Group. -16°C was already sufficient for long-term storage of all kinds of fresh food, making ice, and producing various cold drinks.
 
 Thanks to the construction of a cold storage facility that could cheaply produce large quantities of ice, not only were dietary needs met, but it also served as a form of air conditioning to some extent. The traditional cooling method of placing large blocks of ice from the cold storage in a room to melt naturally quickly became popular in the dormitories and offices of the transmigrators. To prevent a mad rush for ice, the Planning Committee, after meticulous calculations, issued ice tickets. In addition to a daily personal quota of several kilograms for each transmigrator, different departments received varying quotas based on their needs.
 
