--- a/_posts/2010-11-27-3-22300.md
+++ b/_posts/2010-11-27-3-22300.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 "I don't think that's a good idea. The common people would be in a state of panic. If they get caught and forced to work for a minor misstep on the road, you might think you're correcting a violation, but they'll think we're press-ganging them," Dongmen Chuiyu said after further consideration. "This is different from theft or fighting. Everyone knows those are wrong—but no one thinks walking is a crime. So we need to publicize the rules and make them known to everyone before we can implement punishments. Let's focus on education and publicity for now, for a period of half a year."
 
-"But that still requires manpower, doesn't it?" Shan Daoqian said, his interest waning. "I can't just create my own road administration agency, can I?" This thought suddenly excited him. He came from a railway background and was very familiar with the all-encompassing system of the railways. From the current situation, it seemed that the future transportation authority of the穿越empire would be his. If he started a road administration now, his Ministry of Transportation would have its own law enforcement department. In the future, there might even be a traffic public security bureau, a traffic procuratorate, and a traffic court...
+"But that still requires manpower, doesn't it?" Shan Daoqian said, his interest waning. "I can't just create my own road administration agency, can I?" This thought suddenly excited him. He came from a railway background and was very familiar with the all-encompassing system of the railways. From the current situation, it seemed that the future transportation authority of the transmigrator empire would be his. If he started a road administration now, his Ministry of Transportation would have its own law enforcement department. In the future, there might even be a traffic public security bureau, a traffic procuratorate, and a traffic court...
 
 Shan Daoqian's mind wandered. In fact, when he was in the railway department, he had been scornful of this all-encompassing system, but when it was his turn to hold the power of this system, it suddenly seemed very reasonable. This kind of psychology was probably human nature.
 
