--- a/_posts/2010-3-16-2-15000.md
+++ b/_posts/2010-3-16-2-15000.md
@@ -109,7 +109,7 @@ The finished glassware was placed in the annealing kiln for annealing. Then, the
 The first batch of finished glassware was cherished by the entire glass research team. Upon receiving this good news, the Executive Committee ordered that one of each type of glassware from this batch be sent to the Planning Committee for permanent preservation as an "important historical artifact."
 
 [Ji Situi][y044], building on this success, went ahead and, as requested by Guo Yi in his telegram, had Xiao Bailang design a set of molds based on the shape of a flat Red Star Erguotou bottle and produced three hundred of them in one go. This small item had a simple shape and used little material, making it perfect for the new workers to practice on.
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
-[y009]: /characters/y009 "吴南海"
-[y044]: /characters/y044 "季思退"
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
+[y009]: /characters/y009 "Wu Nanhai"
+[y044]: /characters/y044 "Ji Situi"
