--- a/_posts/2010-5-1-3-01300.md
+++ b/_posts/2010-5-1-3-01300.md
@@ -12,7 +12,7 @@ Unfortunately, coal reserves were running low. Transporting coal and iron from G
 
 The remote exploration team's previous surveys hadn't ventured deep into Qiongshan, so the situation there was unknown. They hadn't heard any news of coal from the merchants who came to trade, likely because any local deposits were too small and there was no local demand, so they remained undeveloped.
 
-Walking into the next workshop, they saw local workers under the direction of the穿越众 (transmigrators) from the machine factory, carefully installing sections of ceramic pipes. The pipes were fixed to the ceiling and walls with wrought iron brackets. Ma Qianzhu asked and learned that these were for collecting and transporting waste heat. The excess heat from places like the glass workshop, after being recycled for its own use, could be supplied to other workshops through a unified pipe system for centralized collection and utilization.
+Walking into the next workshop, they saw local workers under the direction of the transmigrators from the machine factory, carefully installing sections of ceramic pipes. The pipes were fixed to the ceiling and walls with wrought iron brackets. Ma Qianzhu asked and learned that these were for collecting and transporting waste heat. The excess heat from places like the glass workshop, after being recycled for its own use, could be supplied to other workshops through a unified pipe system for centralized collection and utilization.
 
 As for the industrial wastewater, the transmigrators didn't yet have a good solution. For now, they were simply discharging it. Since the Wenlan River was their main water source and the Bopu Harbor base was at its mouth, they couldn't afford to pollute their own backyard. The final decision was to expend the effort to dig a covered drainage channel along the main road to discharge the industrial wastewater into the open sea off Cape Lingao. The transmigrators had no time to worry about any potential ecological consequences.
 
@@ -32,7 +32,7 @@ After their tour, they returned to the office for a short meeting, and the burea
 
 Before the sun was up, a strangely attired team emerged silently from the morning mist. Dressed head-to-toe in camouflage, with mosquito nets over their heads and field packs on their backs, they advanced cautiously, maintaining a set distance from one another. Occasionally, a member would pick something up from the ground or chip a piece off a rock to store away. Others would take out strange-looking instruments from their packs to take measurements. This was the Remote Exploration Team, a unit under the Ministry of Resources.
 
-Back in the planning meetings before the穿越 (transmigration), some far-sighted individuals had pointed out that a single small county would not be enough for future development. Therefore, it was essential to conduct detailed resource reconnaissance in other parts of Hainan, especially the core areas, to lay the groundwork for unifying the island and future construction. Thus, a secret remote exploration team was formed shortly after their landing.
+Back in the planning meetings before the transmigration, some far-sighted individuals had pointed out that a single small county would not be enough for future development. Therefore, it was essential to conduct detailed resource reconnaissance in other parts of Hainan, especially the core areas, to lay the groundwork for unifying the island and future construction. Thus, a secret remote exploration team was formed shortly after their landing.
 
 The team was composed based on several principles. It was made up of young people with experience in fieldwork. Professionals in forestry, geology, and surveying were the natural mainstays, supplemented by a few experts in wilderness survival. Since the military veterans were the core of the military department, they were not assigned to the exploration team. Instead, security was provided on a mission-by-mission basis by members of the Special Reconnaissance Team. In practice, many long-range reconnaissance missions were joint operations.
 
