--- a/_posts/2010-5-27-3-03900.md
+++ b/_posts/2010-5-27-3-03900.md
@@ -78,7 +78,7 @@ Bai Guoshi had a better idea. He told everyone to go and cut long bamboo poles a
 
 He demonstrated the technique of harvesting coconuts with a bamboo pole and then solemnly said, "Attention, you must wear a safety helmet or—"
 
-Before he could finish, there was a dull thud, followed by a慘叫 (miserable scream). Everyone looked and saw that someone had been hit on the head by a coconut and had been "gloriously sacrificed" on the spot.
+Before he could finish, there was a dull thud, followed by a (miserable scream). Everyone looked and saw that someone had been hit on the head by a coconut and had been "gloriously sacrificed" on the spot.
 
 Without anyone saying a word, the crowd scattered, scrambling back to the ship to get their rattan safety helmets. The "martyr" was carried back to the ship. The diagnosis was a slight concussion and a large bump. Fortunately, the falling fruit was still small, and the person was wearing a straw hat, which provided some cushioning and didn't crack his skull.
 
@@ -121,4 +121,4 @@ Chang Chai? She pondered the meaning of these two words for a long time. Often u
 There was a round lid on the red top cover. Li Huamei tried to pull it, but it didn't budge. She tried to twist it, and it loosened. She unscrewed it and looked inside. It was dark and seemed to be filled with some kind of water, but the smell was pungent. She took out a paper spill, dipped it in, and took it out. It felt like some kind of oil.
 
 [Note: The fire-starting tool Li Huamei used was an ancient fire-starting tool, commonly known as a "huo zhe zi." It was actually a slow-burning fuse in a tubular container.]
-[y003]: /characters/y003 "王洛宾"
+[y003]: /characters/y003 "Wang Luobin"
