--- a/_posts/2010-7-5-3-07800.md
+++ b/_posts/2010-7-5-3-07800.md
@@ -42,7 +42,7 @@ News from Guangzhou offered a sliver of comfort: the silver supply in Guangzhou 
 
 He immediately sent another five thousand taels to Gu Dachun, telling them to buy cannons and add ships as soon as possible, expand their fleet, and completely blockade Haian Port. As long as the sugar ships couldn't get out and the silver ships couldn't get in, Huanan would still be finished.
 
-The穿越众 (chuānyuèzhòng - "transmigrators") at Huanan had already anticipated Zhu An's calculations in their meetings. Breaking the naval blockade was now a matter for the Navy to handle; they didn't need to worry about it. The key was to deal with potential sabotage like arson. For the people of this time, the simplest, most effective, and hardest-to-prevent form of revenge was arson. It was the most common method used by tenants and servants to rebel against their masters. Arson was a serious crime, but it was difficult to investigate in ancient society. The entire Huanan Sugar Factory was filled with flammable materials; a fire would be spectacular.
+The transmigrators at Huanan had already anticipated Zhu An's calculations in their meetings. Breaking the naval blockade was now a matter for the Navy to handle; they didn't need to worry about it. The key was to deal with potential sabotage like arson. For the people of this time, the simplest, most effective, and hardest-to-prevent form of revenge was arson. It was the most common method used by tenants and servants to rebel against their masters. Arson was a serious crime, but it was difficult to investigate in ancient society. The entire Huanan Sugar Factory was filled with flammable materials; a fire would be spectacular.
 
 Fortunately, the geography of the Huanan Sugar Factory was favorable. It stood alone on a piece of wasteland, with a river on one side, a main road on another, and a large part of a third side protected by the Nanmen Pond. The fourth side, originally a large open space, was now being developed into the "workers' village." This reduced the number of areas that needed heavy defense. Mei Lin tirelessly directed the ongoing construction: building firewalls on all four sides and digging firebreaks—especially between the workers' village and the factory. They also dug reservoirs within the factory grounds for firefighting. The area for drying sugarcane bagasse was isolated from the workshops, warehouses, and living quarters by firewalls to ensure that even if a fire broke out, it wouldn't spread to other buildings. Wen Tong also had Liao Dahua prepare firefighting equipment like torches, lanterns, hooks, buckets, and axes. They even acquired two hand-pumped water carts and had the core militia double as a fire brigade, training daily.
 
