--- a/_posts/2011-10-25-4-17300.md
+++ b/_posts/2011-10-25-4-17300.md
@@ -32,7 +32,7 @@ A middle-aged man in his forties next to him said, "The old master's health stil
 
 "The Luo family are the local tyrants here. They can do whatever they want. If he had designs on your senior sister, he could have acted just now. If he had taken her to his mansion, she would have been at his mercy. There's no need to release us first and then cause trouble," the middle-aged man said.
 
-"Who knows what evil plans he has. These rich people, not a single one of them is good," the young man said愤愤不平, his face bearing a scar, probably from the fists and clubs of the militia earlier. "You can tell from his lackeys that this master is no good person either."
+"Who knows what evil plans he has. These rich people, not a single one of them is good," the young man said indignantly, his face bearing a scar, probably from the fists and clubs of the militia earlier. "You can tell from his lackeys that this master is no good person either."
 
 The middle-aged woman looked out the window nervously. "Good or bad, it's none of our business. Let's let the old master rest for a few days. We'll leave as soon as he can travel. But we have no money, and with our horses and equipment, we'll have to hire a large boat to leave. We'll have to perform for a few more days."
 
