--- a/_posts/2011-10-29-4-17700.md
+++ b/_posts/2011-10-29-4-17700.md
@@ -86,7 +86,7 @@ After the watchtower was captured, the Kun thieves dragged the cannon out of the
 
 "Quick! Go and see if the Kun... the Aussies have left..."
 
-The clerk went out with a愁眉苦脸. He came back a while later and reported that the Aussies were all gone. They had even closed the main gate for them.
+The clerk went out with a long face. He came back a while later and reported that the Aussies were all gone. They had even closed the main gate for them.
 
 Liu Deshan quickly went out to see. Indeed, everyone was gone. The two side rooms where the goods were stored, one had its lock intact, the other had its lock broken, but a temporary seal had been put on it—the paste was not yet dry. Liu Deshan was startled, thinking that his goods had been confiscated. But then he saw the words "Private property, belongs to the original owner, do not open without permission" written on it. He quickly ordered someone to break the seal.
 
