--- a/_posts/2011-4-1-3-34800.md
+++ b/_posts/2011-4-1-3-34800.md
@@ -26,7 +26,7 @@ After a few "uh-huhs," he asked, "Are we just going to let it go?" After listeni
 
 "As of the end of yesterday's shift, we were still short six thousand straw hats and three thousand safety helmets," the clerk reported, consulting his notebook.
 
-"Starting today, extend the workday by four hours. We must complete the production plan on time!" Hai Lin ordered. According to the穿越 (Time-Cross) Group's standard work system, a normal factory shift was 10 hours long. Enterprises that required round-the-clock operation used an 8-hour, three-shift system. This wasn't out of respect for workers' rights, but because most of the three-shift factories were critical enterprises where long hours could easily lead to accidents.
+"Starting today, extend the workday by four hours. We must complete the production plan on time!" Hai Lin ordered. According to the Transmigrator Group's standard work system, a normal factory shift was 10 hours long. Enterprises that required round-the-clock operation used an 8-hour, three-shift system. This wasn't out of respect for workers' rights, but because most of the three-shift factories were critical enterprises where long hours could easily lead to accidents.
 
 However, the head of each enterprise had the authority to order overtime, as long as the total overtime did not exceed one-third of the normal monthly working hours. Overtime was paid at the standard rate.
 
@@ -40,19 +40,19 @@ Apparently, Xi Yazhou complained, because Hai Lin continued, "My production sche
 
 He hung up the phone with a sneer. Outside the window, he could see the tall chimney of the distant wood processing plant's drying kiln. Since its construction, the chimney had been spewing fire and smoke day and night, with only a few days of downtime for maintenance and cleaning.
 
-Hai Lin knew that a large shipment of timber had recently arrived from Leizhou, and the wood processing plant was working around the clock to process it. The timber industry was one of the穿越 (Time-Cross) Group's most important industrial sectors. With the scarcity of steel, wood served as a substitute in many areas. It was not only widely used in construction and shipbuilding, but also for less demanding machinery and even as a replacement for I-beams. The General Construction Company had also developed a steel-wood composite material to conserve steel.
+Hai Lin knew that a large shipment of timber had recently arrived from Leizhou, and the wood processing plant was working around the clock to process it. The timber industry was one of the Transmigrator Group's most important industrial sectors. With the scarcity of steel, wood served as a substitute in many areas. It was not only widely used in construction and shipbuilding, but also for less demanding machinery and even as a replacement for I-beams. The General Construction Company had also developed a steel-wood composite material to conserve steel.
 
 Although timber was easier to obtain than pig iron, the supply was still limited by the total available quantity—Lingao itself had scarce timber resources. The mangrove forest at Bopu had been completely cleared by Wu Kuangming's logging team. More abundant timber resources could only be found in the southern regions near the Li minority areas, but logging and transportation there were inconvenient.
 
 The timber supply, which had long plagued the Forestry Department, had greatly improved since the circumnavigation of the island and the establishment of Yulin Fortress. Ships continuously transported timber from the southern part of Hainan Island. In the last six months, they had also opened up channels to obtain timber from the Leizhou Peninsula and Vietnam. Ma Qianzhan continuously increased investment in the Forestry Department, and steam-powered wood processing equipment replaced the previous rudimentary water-powered machinery.
 
-The timber industry bore the brunt of the construction pressure, but it was not the focus of the穿越 (Time-Cross) Group's industrial efforts. Both the former Industrial and Energy Committee and the Planning Committee viewed the wood processing industry as a transitional measure until the steel industry was established. In the Executive Committee, the Forestry Department had little say and was not prioritized in resource allocation.
+The timber industry bore the brunt of the construction pressure, but it was not the focus of the Transmigrator Group's industrial efforts. Both the former Industrial and Energy Committee and the Planning Committee viewed the wood processing industry as a transitional measure until the steel industry was established. In the Executive Committee, the Forestry Department had little say and was not prioritized in resource allocation.
 
 The facilities of the various enterprises under the Forestry Department were still very rudimentary. While the department provided a great deal of building materials for the structures springing up all over Lingao, the condition of its own factories was poor. The office of the worst-off wood processing plant was still a temporary wooden shed built shortly after D-Day. After a year and a half of exposure to the elements, it was cracked and warped. Its location was also terrible—at the time, to facilitate defense, all the facilities were built very close together. The office was too close to the wood drying kiln, making it unbearably hot even in winter, and there was a foul smell of tar. Wu Kuangming's repeated requests to rebuild the office area had been rejected.
 
-Because the conditions were so poor, almost no穿越 (Time-Cross) members were willing to work for the Forestry Department. In this woodworking factory, for example, Hai Lin was the only穿越 (Time-Cross) member, leading over 100 native workers—he didn't even have anyone to talk to.
+Because the conditions were so poor, almost no transmigrator members were willing to work for the Forestry Department. In this woodworking factory, for example, Hai Lin was the only transmigrator member, leading over 100 native workers—he didn't even have anyone to talk to.
 
-His woodworking factory was an enterprise under the Forestry Department. In the current stage of the穿越 (Time-Cross) Group, this enterprise was very valuable—Wu Kuangming and Mo Xiao'an had fought fiercely for ownership of the factory. In the end, because it housed a lot of professional wood processing equipment brought from another dimension, it remained under the Forestry Department's establishment.
+His woodworking factory was an enterprise under the Forestry Department. In the current stage of the Transmigrator Group, this enterprise was very valuable—Wu Kuangming and Mo Xiao'an had fought fiercely for ownership of the factory. In the end, because it housed a lot of professional wood processing equipment brought from another dimension, it remained under the Forestry Department's establishment.
 
 The woodworking factory not only had many specialized woodworking machines, but also equipment for making rattan, straw, and bamboo products, most of which were replicas made by the machinery factory based on prototypes and drawings from the other world. Some were very simple—like the straw-braiding machine, which was technically just a primitive hand-cranked device, but its production efficiency was hundreds of times higher than manual labor.
 
@@ -60,13 +60,13 @@ The result was the complete decimation of the local straw, bamboo, and rattan pr
 
 Now, Lingao's red and white rattan were no longer exported directly but were processed locally into high-end rattan products and sold to the Guangdong region. The straw hats produced by the factory, with their low price and good quality, had swept the entire Hainan market. "Lingao straw hats" became a suddenly booming local product, attracting not only small vendors from neighboring prefectures but also merchants from as far away as Yazhou and Wenchang.
 
-However, this meant little to Hai Lin. The穿越 (Time-Cross) Group was a typical planned economy; he was only responsible for producing according to the Planning Committee's arrangements. The tasks assigned by the Planning Committee were becoming heavier and heavier, but they were very strict when it came to allocating resources: the procedures were cumbersome, and allocations were often reduced. Being undervalued, having a low status, a heavy workload, and poor treatment—all these problems combined to make Hai Lin very dissatisfied.
+However, this meant little to Hai Lin. The Transmigrator Group was a typical planned economy; he was only responsible for producing according to the Planning Committee's arrangements. The tasks assigned by the Planning Committee were becoming heavier and heavier, but they were very strict when it came to allocating resources: the procedures were cumbersome, and allocations were often reduced. Being undervalued, having a low status, a heavy workload, and poor treatment—all these problems combined to make Hai Lin very dissatisfied.
 
 Of course, his superiors and colleagues were also dissatisfied, which led to the formation of an anti-Ma faction within the Forestry Department. The recent general election, in which Ma Qianzhan was no longer the People's Commissar for Planning, did not satisfy them. The anti-Ma faction in the Forestry Department had intended to seize the opportunity of the Dugu Qiuhun incident to launch a fierce attack on Ma Qianzhan, hoping to at least discredit him, if not bring him down. They hadn't expected the Tribunal to play this hand. Hai Lin thought to himself that this matter would require a long-term strategy.
 
 "This is the Tribunal's proposed resolution for the Dugu Qiuhun case," Ma Jia announced, presenting the plan at the Executive Committee meeting.
 
-The committee members silently passed the document around. The proposed resolution was severe. It not only recommended stripping Dugu Qiuhun of all his administrative positions but also demanded the permanent revocation of his elder status. This essentially meant that Dugu Qiuhun's career in the security forces was over, and he would be barred from holding any official position in other departments of the穿越 (Time-Cross) Group for the rest of his life. He would be relegated to being a "hatless" chief, only entitled to his dividends. According to the Common Program, his elder status could only be restored to his heir after his death.
+The committee members silently passed the document around. The proposed resolution was severe. It not only recommended stripping Dugu Qiuhun of all his administrative positions but also demanded the permanent revocation of his elder status. This essentially meant that Dugu Qiuhun's career in the security forces was over, and he would be barred from holding any official position in other departments of the Transmigrator Group for the rest of his life. He would be relegated to being a "hatless" chief, only entitled to his dividends. According to the Common Program, his elder status could only be restored to his heir after his death.
 
 "Isn't this a bit too harsh?" Xiao Zishan began to say after reading it, but Ma Qianzhan cut him off. "Not at all. For someone who has committed such a serious organizational error, not executing him is already letting him off easy. I think this verdict is very appropriate. I suggest we add a clause requiring him to write a deep self-criticism, and then send him to the most arduous post for a year of reflection. After a year, we can consider assigning him other work based on his performance."
 
