--- a/_posts/2011-4-10-3-35700.md
+++ b/_posts/2011-4-10-3-35700.md
@@ -12,7 +12,7 @@ He then also changed the office location. Although the original Internal Affairs
 
 Zhao Manxiongski set up the offices of the Investigation Department and the Execution Department at the Political Security Bureau's training camp outside the county seat. This not only facilitated the entry and exit of personnel but also allowed for immediate on-site interrogation of arrested individuals, eliminating the need for back-and-forth transfers. Only the General Bureau Office and the Technical Department were kept within the Political Security Bureau compound, where all technical equipment and archival materials were also stored.
 
-Wu Mu suggested requesting the Executive Committee to reinforce the internal affairs troops and formally place them under the jurisdiction of the General Political Security Bureau to facilitate the execution of various tasks and the security of the agency. In the past, an internal affairs unit composed entirely of 穿越 (Time-Cross) members had indeed been established as a means of self-preservation in emergencies. As the army and navy expanded and security issues diminished, and with not enough 穿越 (Time-Cross) members to maintain the force, the internal affairs troops had informally disbanded, leaving only an empty designation.
+Wu Mu suggested requesting the Executive Committee to reinforce the internal affairs troops and formally place them under the jurisdiction of the General Political Security Bureau to facilitate the execution of various tasks and the security of the agency. In the past, an internal affairs unit composed entirely of transmigrator members had indeed been established as a means of self-preservation in emergencies. As the army and navy expanded and security issues diminished, and with not enough transmigrator members to maintain the force, the internal affairs troops had informally disbanded, leaving only an empty designation.
 
 Since the designation had not been revoked and was still under the Internal Affairs Committee, it was justifiable for the General Political Security Bureau to inherit it.
 
