--- a/_posts/2011-4-13-3-36000.md
+++ b/_posts/2011-4-13-3-36000.md
@@ -12,7 +12,7 @@ Everyone had experience living in dormitories at the quarantine camp and had lon
 
 The other girls in the dormitory were all from Bairen Commune. In fact, in this recruitment, only Bairen Commune had female applicants besides her.
 
-The members of Bairen Commune were the earliest natives to submit to the 穿越 (Time-Cross) Group, whether they were local people or immigrants from outside. They were also the most deeply influenced by the 穿越 (Time-Cross) Group, so it was not surprising that they were at the forefront of new trends.
+The members of Bairen Commune were the earliest natives to submit to the Transmigrator Group, whether they were local people or immigrants from outside. They were also the most deeply influenced by the Transmigrator Group, so it was not surprising that they were at the forefront of new trends.
 
 Lu Cheng felt that these girls looked down on her a little. When they heard that she was from the newly established Jialai Commune, their tone of voice became much more arrogant.
 
