--- a/_posts/2011-4-14-3-36100.md
+++ b/_posts/2011-4-14-3-36100.md
@@ -40,7 +40,7 @@ Those who showed special talents in the training class would be specially noted 
 
 The disciplinary code emphasized the loyalty and discipline of security cadres, especially discipline. Zhao Manxiong was not worried about loyalty. If someone was not loyal enough, there were many ways to remind him how to be loyal or to directly not need his loyalty anymore. But for a cadre who was loyal enough but lacked a sense of discipline, the situation would become unpleasant.
 
-The cadres of the General Political Security Bureau occupied the most favorable position among the violent institutions of the 穿越 (Time-Cross) Group. Due to the needs of their work, they would inevitably have a lot of power and access to core secrets. When the situation was still small, he could closely monitor the behavior of everyone and promptly stop and punish all undisciplined behavior. When the situation became large, it would be difficult for him to do so.
+The cadres of the General Political Security Bureau occupied the most favorable position among the violent institutions of the Transmigrator Group. Due to the needs of their work, they would inevitably have a lot of power and access to core secrets. When the situation was still small, he could closely monitor the behavior of everyone and promptly stop and punish all undisciplined behavior. When the situation became large, it would be difficult for him to do so.
 
 After the end of the first month, the first thing the trainees did after getting up every morning was to recite the five disciplinary rules for security personnel.
 
@@ -60,9 +60,9 @@ Lu Cheng and the others recited these five disciplinary rules every day as if th
 
 After the end of the first month, the study began to shift to professional training, and the rules and regulations became stricter. Lu Cheng felt that the study class was a hundred times stricter than the quarantine camp she had been in. The rules were as numerous as the hairs on an ox, and the strictest was secrecy. There was a post office in the Fangcaodi Education Park that specially handled the mail of the trainees. The trainees of the military and political school system could send mail for free, but the trainees of the political security short-term training class were not allowed to write letters home. They could only send a postcard home every month with the words "Everything is fine, don't worry." Trainees in the same dormitory were not allowed to inquire about each other's learning content. They could only review and read books in the classroom, and not a single piece of paper was allowed to be taken out of the classroom.
 
-The political security textbooks blatantly treated the 穿越 (Time-Cross) Group as a country and clearly regarded the Ming Dynasty as an "enemy." This was a great rebellion in Lingao, which was still under the rule of the Ming Dynasty.
+The political security textbooks blatantly treated the Transmigrator Group as a country and clearly regarded the Ming Dynasty as an "enemy." This was a great rebellion in Lingao, which was still under the rule of the Ming Dynasty.
 
-What the Australians were doing in Lingao had spread throughout the Guangdong region, but after all, this was just a "rumor." The government preferred to do less than more and would rather pretend to be ignorant. But once written materials were leaked, the nature would be completely different. This would become the "ironclad evidence" of the 穿越 (Time-Cross) Group's secession and rebellion in Lingao. The Executive Committee did not want to provoke this trouble for the time being.
+What the Australians were doing in Lingao had spread throughout the Guangdong region, but after all, this was just a "rumor." The government preferred to do less than more and would rather pretend to be ignorant. But once written materials were leaked, the nature would be completely different. This would become the "ironclad evidence" of the Transmigrator Group's secession and rebellion in Lingao. The Executive Committee did not want to provoke this trouble for the time being.
 
 However, the impact of these materials on the trainees was enormous. Many people made a living under the Australians and were grateful to them, but few had thought about what the Australians really wanted to do—only a few intelligent or restless people had thought: the ambition of this group of Australians who came on large iron ships was to rebel.
 
