--- a/_posts/2011-4-15-3-36200.md
+++ b/_posts/2011-4-15-3-36200.md
@@ -6,7 +6,7 @@ path: 2011-4-15-3-36200.md
 tag: [normal]
 ---
 
-In a terrible dream, the government troops attacked, the Australians were defeated, and the chiefs were all dragged to the execution ground to be beheaded. Somehow, her whole family was there: her father, mother, brother, her younger brother who had died in infancy, and her grandparents who had passed away many years ago. They were all tied up with ropes and had execution warrants stuck in their backs. The ground was already a river of blood. She wanted to explain to the officials at the execution ground that her family were not髡贼 (髡zei, a derogatory term for the Time-Crossers), but just refugees who had been swept up in the events, but she couldn't speak. Later, she wanted to escape. She was clearly not tied up, and no one was guarding her, but she couldn't move her feet. She was so anxious that she cried out.
+In a terrible dream, the government troops attacked, the Australians were defeated, and the chiefs were all dragged to the execution ground to be beheaded. Somehow, her whole family was there: her father, mother, brother, her younger brother who had died in infancy, and her grandparents who had passed away many years ago. They were all tied up with ropes and had execution warrants stuck in their backs. The ground was already a river of blood. She wanted to explain to the officials at the execution ground that her family were not (a derogatory term for the Time-Crossers), but just refugees who had been swept up in the events, but she couldn't speak. Later, she wanted to escape. She was clearly not tied up, and no one was guarding her, but she couldn't move her feet. She was so anxious that she cried out.
 
 Similar dreams occurred several times. A few times, when she woke up from a nightmare, she made up her mind to drop out of school the next day, go back and tell her family to run away, far away from this place.
 
@@ -42,7 +42,7 @@ Several girls giggled, waking up the others. Women were always talkative, and on
 
 "There are several of them," Ke Yun said. "Besides, once we learn how to shoot, I'm not afraid of you, a small soldier, or even a great general in full armor. With the chiefs' six-star repeating guns, anyone who comes will die."
 
-The so-called "six-star repeating gun" was actually a revolver. Among the large number of pistols purchased by the 穿越 (Time-Cross) Group through the North American branch were many S&W 9mm revolvers. Many 穿越 (Time-Cross) members found this kind of pistol convenient to use—especially women, almost everyone had one.
+The so-called "six-star repeating gun" was actually a revolver. Among the large number of pistols purchased by the Transmigrator Group through the North American branch were many S&W 9mm revolvers. Many transmigrator members found this kind of pistol convenient to use—especially women, almost everyone had one.
 
 "That's for the chiefs. Will they give them to us?" Yao Yulan had been in Bairen Commune for more than half a year and knew that the things given to the natives, although dozens of times better than similar items in this time and space, were far inferior to what they used themselves. "Besides, even if they give them to us, I wouldn't dare to go into battle with a gun. I'm scared when hundreds of soldiers in the army shout together during drills."
 
@@ -84,7 +84,7 @@ Wu Mu decided to check this person's file after he went back.
 
 "Lu Cheng often has nightmares at night," Ke Yun continued her report. "She often wakes up with a start. She never says what dreams she has, but once I heard her say in her sleep: '...was coerced to come.' I think her position is wavering."
 
-The so-called "being coerced" was nothing more than saying that she was not working for the Australians voluntarily, but was forced to. In this way, Lu Cheng's confidence in the 穿越 (Time-Cross) Group was very poor, and she believed that sooner or later they would be wiped out by the government troops—otherwise she would not have such a dream.
+The so-called "being coerced" was nothing more than saying that she was not working for the Australians voluntarily, but was forced to. In this way, Lu Cheng's confidence in the Transmigrator Group was very poor, and she believed that sooner or later they would be wiped out by the government troops—otherwise she would not have such a dream.
 
 Then she reported on the ideological situation of several other people and gave her own evaluation of each of them. While listening, Wu Mu took notes and secretly admired Ran Yao: without the foundation he had laid, he really didn't know how to do this work. The training of personnel alone was a great achievement.
 
