--- a/_posts/2011-4-16-3-36300.md
+++ b/_posts/2011-4-16-3-36300.md
@@ -24,7 +24,7 @@ Fear can erupt into powerful hatred. The more fear, the crazier one becomes. Fro
 
 And this group of native students, each with a tragic life story, had just lived a few stable days. What they feared most was that such days would be interrupted and they would be thrown back into the terrible life of the past.
 
-Not only should they recall past bitterness and think of present sweetness, but they should also be made to see clearly that their fate was tied to the 穿越 (Time-Cross) Group, a relationship of mutual prosperity and mutual loss. The failure of the 穿越 (Time-Cross) Group would mean their own destruction, and using all means to defend the 穿越 (Time-Cross) Group was to defend themselves.
+Not only should they recall past bitterness and think of present sweetness, but they should also be made to see clearly that their fate was tied to the Transmigrator Group, a relationship of mutual prosperity and mutual loss. The failure of the Transmigrator Group would mean their own destruction, and using all means to defend the Transmigrator Group was to defend themselves.
 
 "I'll think of a way to do this. You go and sort out the wavering elements," Zhao Manxiongski gave the order.
 
@@ -62,7 +62,7 @@ If he was strict, the safest way to deal with her was to expel her directly. But
 
 After thinking it over and over, Wu Mu still wrote "further observation" on her handling opinion. After writing it, he considered for a while and added a sentence, "key observation."
 
-A few days later, the Lingao Puppet Troupe came to the short-term training class to perform, which caused a sensation. There were too few entertainment projects in the local area—if the 穿越 (Time-Cross) members had things like movies to watch, the natives had almost nothing. The newly established Lingao Puppet Troupe had already become a hit and was the most popular performance group in the county. Although there were only a few plays in their repertoire, and they were all "propaganda plays" like "The Storm of the South China Sea," which were hastily made and very rough by modern standards, they relied on modern stage design and performance techniques heavily plagiarized from modern Minnan glove puppetry to create an unprecedented sensation, so much so that the performance schedule was already booked for more than half a year. The trainees of the short-term training class were suffering from the torture of training. They were very excited to hear that they could see the famous puppet show in the county.
+A few days later, the Lingao Puppet Troupe came to the short-term training class to perform, which caused a sensation. There were too few entertainment projects in the local area—if the transmigrator members had things like movies to watch, the natives had almost nothing. The newly established Lingao Puppet Troupe had already become a hit and was the most popular performance group in the county. Although there were only a few plays in their repertoire, and they were all "propaganda plays" like "The Storm of the South China Sea," which were hastily made and very rough by modern standards, they relied on modern stage design and performance techniques heavily plagiarized from modern Minnan glove puppetry to create an unprecedented sensation, so much so that the performance schedule was already booked for more than half a year. The trainees of the short-term training class were suffering from the torture of training. They were very excited to hear that they could see the famous puppet show in the county.
 
 Lu Cheng was also dragged along by the excited Yao Yulan—she originally didn't want to go. She was having a hard time with her studies recently. It was rare to have a day off from class. She wanted to sleep in the dormitory and rest, but Yao Yulan insisted on dragging her along and vividly described how beautiful the puppet show was. She had already seen a performance at the commune.
 
@@ -76,7 +76,7 @@ Yao Yulan went to buy two cups of peach-flavored kvass. Lu Cheng listened to her
 
 With a "clang" of the gong, the whole room fell silent. The curtains were also drawn, and the room became dark. At this time, a beam of light hit the curtain, and the red velvet curtain slowly opened to both sides. The audience had already let out the first sigh of surprise. The scene was too beautiful!
 
-The scenery pieces, made by professional artists in the 穿越 (Time-Cross) Group, were rich in color and accurate in perspective, looking very realistic. It was a pastoral scene, with green mountains and farmland in the distance, and a stream, a wooden bridge, and a few houses in the foreground. Using special effects, there was even the effect of water flowing in the stream. A soft and cheerful music floated in the air, and the recorder also produced the sound effects of breeze, birdsong, and flowing water.
+The scenery pieces, made by professional artists in the Transmigrator Group, were rich in color and accurate in perspective, looking very realistic. It was a pastoral scene, with green mountains and farmland in the distance, and a stream, a wooden bridge, and a few houses in the foreground. Using special effects, there was even the effect of water flowing in the stream. A soft and cheerful music floated in the air, and the recorder also produced the sound effects of breeze, birdsong, and flowing water.
 
 These very simple special effects were absolutely sensational at the time. The trainees present were almost all stunned. Lu Cheng stared blankly, forgetting to drink her kvass. Yao Yulan poked her and whispered, "What do you think? You came to the right place, right?"
 
