--- a/_posts/2011-4-17-3-36400.md
+++ b/_posts/2011-4-17-3-36400.md
@@ -24,7 +24,7 @@ Not only were the puppets' faces carved to look either vicious or ugly, but the 
 
 Even someone like Wu Mu, who was not concerned with historical details, knew that this scene deviated from reality, but it didn't matter. To arouse the masses' hatred, a little exaggeration and concentration were necessary.
 
-Next came the discussion of various vicious schemes to exploit the people. The 穿越 (Time-Cross) members had plenty of material, from any time and space, all condensed and gathered together, which made the trainees below grit their teeth.
+Next came the discussion of various vicious schemes to exploit the people. The transmigrator members had plenty of material, from any time and space, all condensed and gathered together, which made the trainees below grit their teeth.
 
 The third act entered the climax. The yamen runners entered the village to collect grain and taxes, smashing, looting, and bullying men and women along the way. They even snatched the widow's last chicken and didn't let it go. When the widow cried that she had nothing left, they began to tear down her house to sell the straw from the roof.
 
