--- a/_posts/2011-4-18-3-36500.md
+++ b/_posts/2011-4-18-3-36500.md
@@ -50,11 +50,11 @@ This made Ding Ding look at his ability with new eyes. It should be known that i
 
 "It doesn't have an official name yet. It's temporarily called 'Greenstone Village'," Tian Mao said. "The play was rehearsed in a hurry these few days, and it's very rough."
 
-It turned out that this play was a new play recently rehearsed by the puppet troupe. However, at the request of Zhao Manxiong, Ding Ding had made a rush adaptation of the script, adding a lot of content that was not originally there. The originally not-so-sharp anti-court tendency was deliberately highlighted in this play. Zhao Manxiongski believed that there was no need to be evasive on this issue with the "sword and shield of the 穿越 (Time-Cross) Group." A lack of clear purpose would only make the staff feel at a loss.
+It turned out that this play was a new play recently rehearsed by the puppet troupe. However, at the request of Zhao Manxiong, Ding Ding had made a rush adaptation of the script, adding a lot of content that was not originally there. The originally not-so-sharp anti-court tendency was deliberately highlighted in this play. Zhao Manxiongski believed that there was no need to be evasive on this issue with the "sword and shield of the Transmigrator Group." A lack of clear purpose would only make the staff feel at a loss.
 
 "This name lacks boldness. I think we should call it 'The Test'!" Wu Mu waved his hand with passion. "The revolutionary tide is mighty. Those who cannot stand the test will be eliminated."
 
-Thus, "The Test," one of the "twelve classic works" that would be performed for a long time in the future 穿越 (Time-Cross) country and adapted into countless different art forms, was born.
+Thus, "The Test," one of the "twelve classic works" that would be performed for a long time in the future transmigrator country and adapted into countless different art forms, was born.
 
 Subsequently, he secretly met with the members of the ten-person groups one by one, affirmed and praised their performance, and at the same time gave instructions on how to hold the class meeting in the evening: "Get the atmosphere going and expose the cowards."
 
@@ -72,11 +72,11 @@ Wu Mu was not psychologically prepared for such a fanatic. He was startled by he
 
 "You can go first."
 
-That evening, a major discussion on "The Test" was held. In each themed class meeting, everyone spoke freely. Under the encouragement of the ten-person groups and Wu Mu's patient guidance, the trainees expressed their determination to resolutely follow the 穿越 (Time-Cross) Group and protect the 穿越 (Time-Cross) country, and stated that they would wage the "most cruel and merciless struggle" against "all enemies."
+That evening, a major discussion on "The Test" was held. In each themed class meeting, everyone spoke freely. Under the encouragement of the ten-person groups and Wu Mu's patient guidance, the trainees expressed their determination to resolutely follow the Transmigrator Group and protect the transmigrator country, and stated that they would wage the "most cruel and merciless struggle" against "all enemies."
 
 Zhao Manxiongski did not specify the method of study, but he indicated that Wu Mu could do it freely. Wu Mu instructed that one hour should be set aside for political study every evening to ensure that "everyone passes the test."
 
-For a time, all the political security training classes—according to Zhao Manxiongski's instructions, all training units within the political security system used the names "training class" or "training course," not "study class," which was for the unreliable elements of the empire—whether it was the "short-term training class" established by Zhao Manxiong after he came to power, or the "non-commissioned officer student training class" left over from Ran Yao's time, all launched an ideological and political movement of "swearing to defend the 穿越 (Time-Cross) Group to the death and deeply digging out cowardly and surrendering thoughts." All trainees had to write their thoughts after watching "The Test" and read them out in the class meeting.
+For a time, all the political security training classes—according to Zhao Manxiongski's instructions, all training units within the political security system used the names "training class" or "training course," not "study class," which was for the unreliable elements of the empire—whether it was the "short-term training class" established by Zhao Manxiong after he came to power, or the "non-commissioned officer student training class" left over from Ran Yao's time, all launched an ideological and political movement of "swearing to defend the Transmigrator Group to the death and deeply digging out cowardly and surrendering thoughts." All trainees had to write their thoughts after watching "The Test" and read them out in the class meeting.
 
 Each thought had to be read out in the class meeting and then discussed by the whole class. If the discussion did not pass, it was not over—it was sent back to be rewritten. Finally, all the manuscripts had to be sent to Wu Mu's desk, and he had to pass them one by one.
 
