--- a/_posts/2011-4-19-3-36600.md
+++ b/_posts/2011-4-19-3-36600.md
@@ -12,15 +12,15 @@ So everyone adopted the method of using unofficial histories as much as possible
 
 After the first volume was published internally, only sixty copies were printed. The Great Library gave forty copies to the General Political Security Bureau, ten copies to the Great Library for collection, the history data group kept two copies for itself, and the rest were sent to the Executive Committee for review.
 
-This book immediately attracted everyone's attention. At present, the 穿越 (Time-Cross) Group has not yet completely broken with the Ming Dynasty, but that day is not far away. Once the break occurs, the disguise will be completely abandoned, and the 穿越 (Time-Cross) Group must find enough "rationality" for its actions. It should be known that not everyone will be deceived by the ambition of rebelling to become a king or marquis and gain wealth. What they have to fight against is the Ming Dynasty, which has existed for nearly three hundred years—the banner of orthodoxy is very important in the hearts of the Chinese people.
+This book immediately attracted everyone's attention. At present, the Transmigrator Group has not yet completely broken with the Ming Dynasty, but that day is not far away. Once the break occurs, the disguise will be completely abandoned, and the Transmigrator Group must find enough "rationality" for its actions. It should be known that not everyone will be deceived by the ambition of rebelling to become a king or marquis and gain wealth. What they have to fight against is the Ming Dynasty, which has existed for nearly three hundred years—the banner of orthodoxy is very important in the hearts of the Chinese people.
 
 This book happened to meet the needs of this new situation. Many people called to request additional printing of this book, preparing to use it to gradually brainwash the native cadres under their command. The Executive Committee had to announce that the distribution of this book could not be expanded for the time being, and no additional printing was allowed until after full demonstration.
 
-After reading this book, Ding Ding felt great pressure. The idea was actually very simple and not difficult to implement—it was nothing more than compiling black materials, but how could he not have thought of it? Now Wu Mu has taken the lead! The internal consensus of the 穿越 (Time-Cross) Group was that Wu Mu of the General Political Security Bureau was very good at producing propaganda and black materials.
+After reading this book, Ding Ding felt great pressure. The idea was actually very simple and not difficult to implement—it was nothing more than compiling black materials, but how could he not have thought of it? Now Wu Mu has taken the lead! The internal consensus of the Transmigrator Group was that Wu Mu of the General Political Security Bureau was very good at producing propaganda and black materials.
 
 So Ding Ding couldn't wait to submit a report to the Executive Committee, requesting that the Propaganda and Culture Department take the lead in organizing a team to compile it. Not only should they continue to compile "A Record of the Usurping Ming's Atrocities," but they should also compile "A Record of the Zheng Family's Atrocities" and "A Record of the Eastern Captives' Atrocities" to prepare public opinion for future wars with these two forces.
 
-This later became a custom. Whenever the 穿越 (Time-Cross) Group was about to go to war with someone, it would throw out a copy of "A Record of XX's Atrocities"—anyway, in this time and space, no place had as much information as the Great Library of the 穿越 (Time-Cross) Group.
+This later became a custom. Whenever the Transmigrator Group was about to go to war with someone, it would throw out a copy of "A Record of XX's Atrocities"—anyway, in this time and space, no place had as much information as the Great Library of the Transmigrator Group.
 
 But the originality of this idea still belonged to Wu Mu. Ding Ding personally went to the General Political Security Bureau and asked Wu Mu to hand over the specific compilation work of "A Record of the Usurping Ming's Atrocities" to the Propaganda and Culture Department for overall management. In theory, this request was not necessary. Wu Mu had only made a suggestion, but Ding Ding decided to be cautious—you can't be too cautious when dealing with the secret police.
 
@@ -64,9 +64,9 @@ Then he gave instructions on the work report submitted by Wu Mu:
 
 "This, I don't understand—" Wu Mu didn't know what this meant.
 
-"The Ming Dynasty has a system problem, but will the future 穿越 (Time-Cross) Empire not have a system problem?" Zhao Manxiongski snorted. "We just need to tell the students: 'The Ming is bad, the 穿越 (Time-Cross) Group is good'."
+"The Ming Dynasty has a system problem, but will the future transmigrator Empire not have a system problem?" Zhao Manxiongski snorted. "We just need to tell the students: 'The Ming is bad, the Transmigrator Group is good'."
 
-"Yes, I understand!" Wu Mu said. "In the future, it will be 'The Tartars are bad, the 穿越 (Time-Cross) Group is good'."
+"Yes, I understand!" Wu Mu said. "In the future, it will be 'The Tartars are bad, the Transmigrator Group is good'."
 
 "Absolutely correct," Zhao Manxiong nodded. At the end of the conversation, Zhao Manxiong reminded him, "People who do secret work are best not to be famous."
 
