--- a/_posts/2011-4-20-3-36700.md
+++ b/_posts/2011-4-20-3-36700.md
@@ -22,11 +22,11 @@ Wu Mu returned to his office and thought for a long time. Finally, he called He 
 
 Yao Yulan's "passing the test" was very difficult. First, she didn't have much resonance with "The Test," so she couldn't be "sincere and heartfelt." Second, her usual flamboyance brought her a lot of trouble. In the political study section, the classmates who were dissatisfied with her sense of superiority took the opportunity to attack her and rejected her reflection paper several times. Yao Yulan had to rewrite it six times. Full of complaints, she thought about dropping out, but she felt it was a bit of a loss to drop out after suffering so much. In the end, she barely passed with the help of Lu Cheng. Of course, after that, her way of dealing with people became much more low-key.
 
-The deepening of political study greatly improved the learning enthusiasm of the entire training class. Wu Mu now understood some of the mysteries of this—that is, to keep the students in a state of excitement at all times. This excitement could not be simply filled with study courses, so he arranged many cultural and sports activities: they could not only exercise their bodies but also prevent the students from having wild thoughts. In particular, a visit was arranged every week to let the students fully experience the power of the 穿越 (Time-Cross) Group and build up the belief that the 穿越 (Time-Cross) Group was "invincible."
+The deepening of political study greatly improved the learning enthusiasm of the entire training class. Wu Mu now understood some of the mysteries of this—that is, to keep the students in a state of excitement at all times. This excitement could not be simply filled with study courses, so he arranged many cultural and sports activities: they could not only exercise their bodies but also prevent the students from having wild thoughts. In particular, a visit was arranged every week to let the students fully experience the power of the Transmigrator Group and build up the belief that the Transmigrator Group was "invincible."
 
 The students' professional studies were getting deeper and deeper. The short-term training class strived to be fast, so it could not be like the non-commissioned officer student training class, starting from the basics and teaching slowly. Zhao Manxiong invited many people to give lectures: Ran Yao taught an introduction to political security; Mu Min taught the organization and implementation of political security work and investigation methods; Zhou Dongtian taught interrogation methods; Zhou Botao taught secret investigation; Liu Zheng taught wilderness survival skills; Xue Ziliang taught traceology, and was also responsible for team building training and fighting skills lectures...
 
-"The 穿越 (Time-Cross) members are really full of talents," Zhao Manxiong couldn't help but sigh. "It's a gathering of heroes."
+"The transmigrator members are really full of talents," Zhao Manxiong couldn't help but sigh. "It's a gathering of heroes."
 
 Because some people were too professional—Zhao Manxiong had to remind them many times: the students were a group of natives who didn't even have a primary school level, and the enemy's level would not be much higher. Teaching those overly professional knowledge and skills was not like using a bull's knife to kill a chicken, but using a Gatling gun to kill a chicken.
 
@@ -72,7 +72,7 @@ Private detectives are best at secretly taking pictures of evidence, so Zhou Bot
 
 In order to improve the physical fitness of each student, Chen Sigen was responsible for the physical training of the student team. Chen Sigen was a professional fitness coach and a doctor of nutrition. His current title was "Director of the Nutrition and Fitness Department of the Ministry of Health." He was responsible for formulating the menus for both the elders and the natives.
 
-Because the recruits were immigrants who had been in Lingao for six months, their nutritional status and physical fitness were much better than those of the ordinary natives in this time and space. However, Chen Sigen believed that this was not enough for someone who was about to engage in political security work. Although secret police and intelligence personnel, like most people, spent most of their time doing office work, the 穿越 (Time-Cross) Group was relatively short of manpower and would not have detailed internal and external service personnel. Every security cadre might have to go out on duty and, when necessary, take up arms to defend the regime. Their physical fitness directly affected their work efficiency.
+Because the recruits were immigrants who had been in Lingao for six months, their nutritional status and physical fitness were much better than those of the ordinary natives in this time and space. However, Chen Sigen believed that this was not enough for someone who was about to engage in political security work. Although secret police and intelligence personnel, like most people, spent most of their time doing office work, the Transmigrator Group was relatively short of manpower and would not have detailed internal and external service personnel. Every security cadre might have to go out on duty and, when necessary, take up arms to defend the regime. Their physical fitness directly affected their work efficiency.
 
 Chen Sigen decided to raise the food standard of the political security students to the same level as that of the army and navy non-commissioned officer student class.
 
