--- a/_posts/2011-4-21-3-36800.md
+++ b/_posts/2011-4-21-3-36800.md
@@ -72,11 +72,11 @@ Another weapon that enhanced the students' confidence was the pistol.
 
 While teaching fighting techniques, the students began formal light weapons shooting training, using the so-called "six-star repeating gun." Of course, this was not an S&W revolver, but a Lingao version of a revolver self-made by the machinery factory based on the creativity of the weapons design team.
 
-As the administration deepened to the grassroots level and various administrative agencies continued to expand, the 穿越 (Time-Cross) Group urgently needed to equip the growing number of native cadres, police, intelligence personnel, and security personnel with an effective self-defense weapon.
+As the administration deepened to the grassroots level and various administrative agencies continued to expand, the Transmigrator Group urgently needed to equip the growing number of native cadres, police, intelligence personnel, and security personnel with an effective self-defense weapon.
 
-At present, the native cadres had no weapons. The police only had standard batons and bayonets, and only a small number were equipped with rifles, which was far from meeting the demand. Although the social order in Lingao had greatly improved after the suppression of bandits, no one could guarantee that there were no other hostile elements that had not yet emerged: Gou Er and his son were still at large, and the suppression of bandits, the takeover of the county yamen, and the clearing of farmland had inevitably touched the interests of some people. These people were afraid of the violent machinery of the 穿越 (Time-Cross) Group and dared not take open hostile actions, but the possibility of them attacking and retaliating against the native collaborators of the 穿越 (Time-Cross) members was very high. The native cadres were the most reliable human resources of the 穿越 (Time-Cross) members. Once they were killed, it would not only be difficult to replace them in a short time, but it would also shake the confidence of the natives to serve the 穿越 (Time-Cross) Group.
+At present, the native cadres had no weapons. The police only had standard batons and bayonets, and only a small number were equipped with rifles, which was far from meeting the demand. Although the social order in Lingao had greatly improved after the suppression of bandits, no one could guarantee that there were no other hostile elements that had not yet emerged: Gou Er and his son were still at large, and the suppression of bandits, the takeover of the county yamen, and the clearing of farmland had inevitably touched the interests of some people. These people were afraid of the violent machinery of the Transmigrator Group and dared not take open hostile actions, but the possibility of them attacking and retaliating against the native collaborators of the transmigrator members was very high. The native cadres were the most reliable human resources of the transmigrator members. Once they were killed, it would not only be difficult to replace them in a short time, but it would also shake the confidence of the natives to serve the Transmigrator Group.
 
-In the past, the machinery factory had manufactured some Derringer pistols for the 穿越 (Time-Cross) members who were active in enemy-occupied areas. The feedback was satisfactory, but everyone felt that the firepower of this kind of pistol was too poor, and the large-caliber pistol was too bulky. Since there was still controversy over whether it was necessary to manufacture this kind of gun, the machinery factory was not interested in mass-producing the Lingao version of the Derringer pistol.
+In the past, the machinery factory had manufactured some Derringer pistols for the transmigrator members who were active in enemy-occupied areas. The feedback was satisfactory, but everyone felt that the firepower of this kind of pistol was too poor, and the large-caliber pistol was too bulky. Since there was still controversy over whether it was necessary to manufacture this kind of gun, the machinery factory was not interested in mass-producing the Lingao version of the Derringer pistol.
 
 Before the second general assembly was held, Wu De had instructed his subordinates to conduct a special investigation on this issue. The conclusion was that it was necessary to equip the cadres with weapons, especially the grassroots cadres. They had almost no self-protection ability in the face of hostile elements, and the nature of their work required them to often be active in the field, where they were easily attacked.
 
