--- a/_posts/2011-4-23-3-37000.md
+++ b/_posts/2011-4-23-3-37000.md
@@ -14,7 +14,7 @@ Another idea to simplify the process was to cancel the rifling—some people hel
 
 "This won't do," Li Yi'ao strongly objected. "Canceling the rifling will have too great an impact on the gun's performance!"
 
-Without rifling, the range and accuracy of the pistol would decrease too much. Most people opposed this simplification—processing rifling was not a very difficult matter for the 穿越 (Time-Cross) Group, and they had already manufactured special equipment for drawing rifling. It was just a matter of changing the cutter head.
+Without rifling, the range and accuracy of the pistol would decrease too much. Most people opposed this simplification—processing rifling was not a very difficult matter for the Transmigrator Group, and they had already manufactured special equipment for drawing rifling. It was just a matter of changing the cutter head.
 
 "This is not a good continuation!" Bai Yu firmly objected. If a smoothbore was used, there would be no need for the 9mm Para cartridge dimensions.
 
@@ -40,11 +40,11 @@ Most of a student knew that this was a weapon exclusive to the Australians. Some
 
 "From today on, you will learn how to use this weapon," Xue Ziliang announced. Then he introduced the red-haired woman next to him, "This is Salina."
 
-There were many professional and amateur experts in weapons shooting in the 穿越 (Time-Cross) Group, but Zhao Manxiong did not need shooting competition contestants. He wanted people who could correctly use pistols in law enforcement or covert operations, and in this respect, no one was more professional than the two ATF agents.
+There were many professional and amateur experts in weapons shooting in the Transmigrator Group, but Zhao Manxiong did not need shooting competition contestants. He wanted people who could correctly use pistols in law enforcement or covert operations, and in this respect, no one was more professional than the two ATF agents.
 
 "The three rules of using a gun," Xue Ziliang said to the students word by word, "Never point the muzzle at people! Do not use a gun to joke! When holding a gun, do not put your finger on the trigger! Whoever violates any of these rules will be kicked out immediately!"
 
-This was what Xue Ziliang hated the most. When he was teaching the 穿越 (Time-Cross) members, many people pointed their pistols at each other, which gave Xue Ziliang a cold sweat—because many people were also habitually "golden fingers."
+This was what Xue Ziliang hated the most. When he was teaching the transmigrator members, many people pointed their pistols at each other, which gave Xue Ziliang a cold sweat—because many people were also habitually "golden fingers."
 
 There were not many pistols, so the student teams took turns practicing. The weapons design group and the Planning院 (Yuan) were eager to know the performance of the guns, so they generously provided a large number of paper-cased cartridges. For a time, the shooting range was filled with the sound of gunfire and smoke. The students were full of curiosity about this new toy in their hands. This thing was really easy to use. A single shot could kill someone, and it could fire continuously. It should be known that even the famous long guns used by the brothers in the army could not do this!
 
