--- a/_posts/2011-4-24-3-37100.md
+++ b/_posts/2011-4-24-3-37100.md
@@ -26,19 +26,19 @@ Secret work was the main tactic of the Political Security Bureau in its struggle
 
 The most valuable property Ran Yao left him was the "ten-person group" in the army. This system could effectively control the army, and the "ten-person group" was essentially a work network.
 
-Now, the army system has been completely infiltrated by the work network, and the work of this system has been very effective. Zhao Manxiong decided to promote this system to the entire Lingao, and in the future, to all areas under the control of the 穿越 (Time-Cross) Group.
+Now, the army system has been completely infiltrated by the work network, and the work of this system has been very effective. Zhao Manxiong decided to promote this system to the entire Lingao, and in the future, to all areas under the control of the Transmigrator Group.
 
 In his vision, the task of building, supervising, and managing the work network would be undertaken by special commissioners. One of the main tasks of the special commissioners was to build a wide work network. In the countryside and cities, the special commissioners would select a number of politically firm basic masses who had been tested by struggle to form a secret work network of three-person groups or single-line contacts, engaged in the tasks of understanding the enemy's situation, social conditions, and monitoring the dynamics of various unstable factors in the local area.
 
-The staff of the work network were actually "informants," and Zhao Manxiongski was not shy about this. The 穿越 (Time-Cross) Group lacked the necessary technical investigation means and did not have enough trained personnel. The grassroots organizations had not yet been established, so he could only rely on the most primitive means: part-time informants to monitor the entire social system. Informants had their own normal work and social identity, and could not show off their special duties. They would contact the special commissioners at regular intervals through secret liaison.
+The staff of the work network were actually "informants," and Zhao Manxiongski was not shy about this. The Transmigrator Group lacked the necessary technical investigation means and did not have enough trained personnel. The grassroots organizations had not yet been established, so he could only rely on the most primitive means: part-time informants to monitor the entire social system. Informants had their own normal work and social identity, and could not show off their special duties. They would contact the special commissioners at regular intervals through secret liaison.
 
-The specific tasks that Zhao Manxiong formulated for the work network were to pay attention to politically suspicious matters and chaos in the cities and villages, in the army and navy, and in various mass organizations; to monitor and pay attention to politically suspicious elements; to monitor the relationship between internal and external merchants and commerce, the capital, business status, and profitability of merchants, the performance of visiting and staying merchants, and whether there was manipulation of finance and prices; in the countryside, to monitor those who might be dissatisfied with the 穿越 (Time-Cross) Group, especially those whose interests were harmed by the administration of the 穿越 (Time-Cross) Group; and finally, to investigate and prevent all hostile elements and organizations from infiltrating the group's controlled areas from the outside to carry out activities, or from infiltrating government agencies, the army, and state-owned industrial and agricultural enterprises and secretly developing their organizations.
+The specific tasks that Zhao Manxiong formulated for the work network were to pay attention to politically suspicious matters and chaos in the cities and villages, in the army and navy, and in various mass organizations; to monitor and pay attention to politically suspicious elements; to monitor the relationship between internal and external merchants and commerce, the capital, business status, and profitability of merchants, the performance of visiting and staying merchants, and whether there was manipulation of finance and prices; in the countryside, to monitor those who might be dissatisfied with the Transmigrator Group, especially those whose interests were harmed by the administration of the Transmigrator Group; and finally, to investigate and prevent all hostile elements and organizations from infiltrating the group's controlled areas from the outside to carry out activities, or from infiltrating government agencies, the army, and state-owned industrial and agricultural enterprises and secretly developing their organizations.
 
 The reason why Zhao Manxiong was in a hurry to train cadres was largely due to the need to expand the work network—with the current human resources, it was very difficult even to control the several communes.
 
 A meeting of the main cadres was held in the Security Bureau. A new map of Lingao was hung in the conference room—this was the latest one drawn by the exploration team.
 
-At the meeting, it was decided that the Security Bureau would first build a work network in several important locations. A special commissioner would be dispatched to each location. The special commissioners would be temporarily served by 穿越 (Time-Cross) members, and each special commissioner would be equipped with 2-3 native cadres as assistants.
+At the meeting, it was decided that the Security Bureau would first build a work network in several important locations. A special commissioner would be dispatched to each location. The special commissioners would be temporarily served by transmigrator members, and each special commissioner would be equipped with 2-3 native cadres as assistants.
 
 The informants in the work network would be developed from ordinary native employees. The number of personnel to be developed would be set according to the size, importance, and population of the stationed area. In principle, each department and each enterprise should have at least 2 informants who do not know each other, so as to facilitate cross-confirmation of intelligence materials.
 
@@ -58,7 +58,7 @@ Only then did everyone remember that there was a "financial budget" problem in t
 
 "Since it's a system, it must be followed," Zhao Manxiong briefly interrupted his complaint and said, "Let's discuss how to allocate manpower first."
 
-The main human resources were deployed to Bopu—this was the gateway to and from Lingao. The vast majority of personnel and material flows passed through this place. There were many people coming and going, and the composition was complex. Moreover, Bopu was also an important industrial base and naval base of the 穿越 (Time-Cross) Group, so it was the focus of the internal control and defense of the General Political Security Bureau.
+The main human resources were deployed to Bopu—this was the gateway to and from Lingao. The vast majority of personnel and material flows passed through this place. There were many people coming and going, and the composition was complex. Moreover, Bopu was also an important industrial base and naval base of the Transmigrator Group, so it was the focus of the internal control and defense of the General Political Security Bureau.
 
 The General Political Security Bureau already had an important stronghold in the Bopu area—the quarantine camp's review office, which was currently under the direct management of the quarantine camp's director, Yang He. This office had no full-time personnel: the interrogations were directly presided over by Zhou Dongtian, and the monitoring of immigrants was carried out by a team of informants known as the "permanent residents of the quarantine camp"—of course, they were not permanent. People's complexions would gradually improve in a relatively stable and prosperous living environment. New immigrants who were slightly attentive would soon discover that this group of "compatriots" had an unusually good complexion. So after about three or four batches, they would be formally settled. Only those who were naturally thin and had a dark complexion could continue their work.
 
