--- a/_posts/2011-4-25-3-37200.md
+++ b/_posts/2011-4-25-3-37200.md
@@ -22,7 +22,7 @@ The most difficult to deal with was the port affairs office. This institution wa
 
 Everyone had no idea how to establish this mechanism, but seeing that the leader was calm and composed, with an unfathomable appearance, they no longer asked. It was a basic principle of the General Political Security Bureau not to ask what should not be asked.
 
-The second work focus proposed by Zhao Manxiong was the Nanbao area. Wu Fo raised an objection: although the Nanbao area was the 穿越 (Time-Cross) Group's source of ore and timber resources and a window to the Li area, there was not much local population. The Nanbao Commune established by the 穿越 (Time-Cross) Group was mainly composed of miners and their families. Except for a small number of Li people who came to trade, there was almost no floating population. Moreover, this place was located in the inland, and the power of the Ming Dynasty was very weak. He could not see the necessity of making it a work focus.
+The second work focus proposed by Zhao Manxiong was the Nanbao area. Wu Fo raised an objection: although the Nanbao area was the Transmigrator Group's source of ore and timber resources and a window to the Li area, there was not much local population. The Nanbao Commune established by the Transmigrator Group was mainly composed of miners and their families. Except for a small number of Li people who came to trade, there was almost no floating population. Moreover, this place was located in the inland, and the power of the Ming Dynasty was very weak. He could not see the necessity of making it a work focus.
 
 "No matter how you look at it, it should be the Dongmen City-Bairen Commune area that is more important. This is our 'capital' and also an important industrial and agricultural base."
 
@@ -38,11 +38,11 @@ Of course, the General Political Security Bureau could add flowers to the brocad
 
 "The problem of the Li area on Hainan Island will have to be solved sooner or later," Zhao Manxiong said to himself, ignoring his interjection. "To develop Hainan, we must control the Li area. This work must start now."
 
-The Li area was the heart of Hainan Island. In the future, when the 穿越 (Time-Cross) Group was to launch a continental campaign, Hainan Island would become the most reliable base. This base could not be a ring-shaped zone with no strategic depth, let alone a place with the danger of internal rebellion at any time.
+The Li area was the heart of Hainan Island. In the future, when the Transmigrator Group was to launch a continental campaign, Hainan Island would become the most reliable base. This base could not be a ring-shaped zone with no strategic depth, let alone a place with the danger of internal rebellion at any time.
 
-If the Li people were incited by hostile forces—this was not impossible, and people in the Ming government with a little strategic sense would not give up this possibility. The 穿越 (Time-Cross) Group would immediately face the danger of being attacked from both front and rear, and then would have to be mired in a long-term punitive campaign.
+If the Li people were incited by hostile forces—this was not impossible, and people in the Ming government with a little strategic sense would not give up this possibility. The Transmigrator Group would immediately face the danger of being attacked from both front and rear, and then would have to be mired in a long-term punitive campaign.
 
-Of course, the military strength of the Li people was not worth mentioning, but no matter how insignificant the force was, once it stirred up a storm, it would seriously damage the base that the 穿越 (Time-Cross) Group had painstakingly built, and at the same time, it would tie up the already limited military forces.
+Of course, the military strength of the Li people was not worth mentioning, but no matter how insignificant the force was, once it stirred up a storm, it would seriously damage the base that the Transmigrator Group had painstakingly built, and at the same time, it would tie up the already limited military forces.
 
 At present, the work on the Li area was carried out by the Li and Miao Affairs Office and the Religious Office. Both institutions were infiltrating the Li area. The former was mainly engaged in diplomatic and commercial activities, while the latter had already begun missionary activities, hoping to strengthen control over the Li area through religious means.
 
@@ -66,16 +66,16 @@ Zhao Manxiong nodded, "We should and must carry out some work in the enemy-occup
 
 In order to distinguish it from the "work network" active in our own territory, he named the intelligence network deployed in the enemy-occupied areas the "reconnaissance network."
 
-The reconnaissance network in Zhao Manxiong's plan was to be set up in the "yellow zone." According to the color-coded alert standard of the 穿越 (Time-Cross) Group, the green zone was an absolutely safe zone—only Bairen City, Bopu Camp, and Gaoshanling Camp met this standard. In this zone, 穿越 (Time-Cross) members did not need to carry weapons at all times, did not need to maintain a state of alert, and could walk freely and safely day and night. The blue zone was a basically safe area under the rule of the 穿越 (Time-Cross) Group, where 穿越 (Time-Cross) members could travel in groups of two or three during the day with weapons, without the need for armed escort, such as Lingao County, several communes, and Dongmen City. The blue zone was a ruling area that the 穿越 (Time-Cross) Group could control. In this area, safety could not be guaranteed, and there was a possibility of attacks at any time. Not only did 穿越 (Time-Cross) members have to travel in groups, but they also needed to be equipped with more guards, which roughly corresponded to other areas of Lingao.
+The reconnaissance network in Zhao Manxiong's plan was to be set up in the "yellow zone." According to the color-coded alert standard of the Transmigrator Group, the green zone was an absolutely safe zone—only Bairen City, Bopu Camp, and Gaoshanling Camp met this standard. In this zone, transmigrator members did not need to carry weapons at all times, did not need to maintain a state of alert, and could walk freely and safely day and night. The blue zone was a basically safe area under the rule of the Transmigrator Group, where transmigrator members could travel in groups of two or three during the day with weapons, without the need for armed escort, such as Lingao County, several communes, and Dongmen City. The blue zone was a ruling area that the Transmigrator Group could control. In this area, safety could not be guaranteed, and there was a possibility of attacks at any time. Not only did transmigrator members have to travel in groups, but they also needed to be equipped with more guards, which roughly corresponded to other areas of Lingao.
 
-The yellow, orange, and red zones belonged to the "enemy-occupied areas." The yellow zone was an area bordering the 穿越 (Time-Cross) Group where the enemy's ruling power was not strong, and our side had strong influence and execution power. At present, the northern counties of Hainan Island and the Li area all belonged to the yellow zone. The orange zone was an area where the enemy's rule was strong and our side had no influence, such as the mainland. The red zone was the core area of the enemy's rule, such as the provincial capital, the capital, and so on.
+The yellow, orange, and red zones belonged to the "enemy-occupied areas." The yellow zone was an area bordering the Transmigrator Group where the enemy's ruling power was not strong, and our side had strong influence and execution power. At present, the northern counties of Hainan Island and the Li area all belonged to the yellow zone. The orange zone was an area where the enemy's rule was strong and our side had no influence, such as the mainland. The red zone was the core area of the enemy's rule, such as the provincial capital, the capital, and so on.
 
-The reconnaissance network of the General Political Security Bureau would be deployed in the yellow zone—Zhao Manxiong did not intend to interfere in more distant places. He did not want to risk offending the future director of the Foreign Intelligence Bureau, and he did not have so many resources to use. He could only be satisfied with simpler goals: first, to provide early warning information of enemy attacks for the 穿越 (Time-Cross) Group, and second, to collect local information in preparation for the 穿越 (Time-Cross) Group to occupy this area. This included social, military, political, and economic aspects. Once the 穿越 (Time-Cross) Group formally occupied this area, it could grasp enough information to begin social reform and eliminate potential dangerous elements.
+The reconnaissance network of the General Political Security Bureau would be deployed in the yellow zone—Zhao Manxiong did not intend to interfere in more distant places. He did not want to risk offending the future director of the Foreign Intelligence Bureau, and he did not have so many resources to use. He could only be satisfied with simpler goals: first, to provide early warning information of enemy attacks for the Transmigrator Group, and second, to collect local information in preparation for the Transmigrator Group to occupy this area. This included social, military, political, and economic aspects. Once the Transmigrator Group formally occupied this area, it could grasp enough information to begin social reform and eliminate potential dangerous elements.
 
 After the meeting, Zhao Manxiong found Ma Jia and talked with him about some of his views on establishing a coordination mechanism for internal security among the powerful departments. As the official director, Ma Jia was of course obliged to promote it, so he proposed this plan at the working meeting of the Executive Committee.
 
 This proposal eventually led to the establishment of the "Internal Security Meeting" mechanism—but it was more familiar to people by the name of the Eight-Man Meeting. Its name came from the departments participating in the meeting: the General Political Security Bureau, the Tribunal's Investigation and Execution Bureau, the Army, the Navy, the Foreign Intelligence Bureau, the National Police, the Customs, and the Cheka. At the meeting, the relevant departments exchanged intelligence from the previous week, their opinions and views on the current security situation, and reported on the work to be carried out by each department in the next week. When cooperation was needed, it was also communicated at the meeting. This was much more efficient than the heads of various departments calling each other or visiting each other, and there were meeting minutes on file. If there were any problems, the archives could be directly consulted, and any problem could be seen at a glance.
 
-At the first Internal Security Meeting, the 穿越 (Time-Cross) members who had recently been promoted to senior positions learned of the top-secret event that shocked them: the "Dongsha Island American Shipwreck Incident," also known as "Incident A."
+At the first Internal Security Meeting, the transmigrator members who had recently been promoted to senior positions learned of the top-secret event that shocked them: the "Dongsha Island American Shipwreck Incident," also known as "Incident A."
 
-The American fishing boat that sank on the reef of Dongsha Island had been the top secret of the 穿越 (Time-Cross) Group since the day it was discovered, even more secret than the origin of the 穿越 (Time-Cross) Group itself. The incident had been kept under wraps, even among senior cadres—only the parties who discovered and surveyed the fishing boat and a few members of the Executive Committee knew about it. The relevant reports and materials were not archived in the files of the General Political Security Bureau, but were stored in the confidential archives of the General Office of the Executive Committee—the place where the highest-level secret documents were stored.
+The American fishing boat that sank on the reef of Dongsha Island had been the top secret of the Transmigrator Group since the day it was discovered, even more secret than the origin of the Transmigrator Group itself. The incident had been kept under wraps, even among senior cadres—only the parties who discovered and surveyed the fishing boat and a few members of the Executive Committee knew about it. The relevant reports and materials were not archived in the files of the General Political Security Bureau, but were stored in the confidential archives of the General Office of the Executive Committee—the place where the highest-level secret documents were stored.
