--- a/_posts/2011-4-26-3-37300.md
+++ b/_posts/2011-4-26-3-37300.md
@@ -12,9 +12,9 @@ After Zhou Weisen and others finished their investigation, the Executive Committ
 
 In addition to salvaging items, the salvage team also had the task of establishing a temporary support base on Dongsha Island to prepare for subsequent salvage work. Of course, in the public mission announcement, the purpose of this mission was: "to excavate guano and to investigate the feasibility of establishing a relay base for navigation to Taiwan."
 
-After the salvage team, consisting of a motor-sailer, a large sailing ship, and several rowing boats, arrived at Dongsha Island, Gao Xiaosong, who was in charge of the salvage work, announced the true purpose of the trip to the participants. Some of the 穿越 (Time-Cross) members who were still in the dark were speechless with surprise. Everyone agreed that this group of people was a major threat to the 穿越 (Time-Cross) Group. If they could not "abandon the darkness and turn to the light" in time, they would be resolutely eliminated!
+After the salvage team, consisting of a motor-sailer, a large sailing ship, and several rowing boats, arrived at Dongsha Island, Gao Xiaosong, who was in charge of the salvage work, announced the true purpose of the trip to the participants. Some of the transmigrator members who were still in the dark were speechless with surprise. Everyone agreed that this group of people was a major threat to the Transmigrator Group. If they could not "abandon the darkness and turn to the light" in time, they would be resolutely eliminated!
 
-However, everyone was also looking forward to the task they were about to undertake—a ship was a treasure trove for the 穿越 (Time-Cross) Group. A sea-going vessel was a small world in motion, and even a fishing boat had many very useful tools and materials on board.
+However, everyone was also looking forward to the task they were about to undertake—a ship was a treasure trove for the Transmigrator Group. A sea-going vessel was a small world in motion, and even a fishing boat had many very useful tools and materials on board.
 
 And the mystery of this ship aroused everyone's speculation even more. According to Lin Chuanqing, this ship was most likely a smuggling ship engaged in illegal activities, and the smuggled goods were either drugs or arms.
 
@@ -64,9 +64,9 @@ Lin Chuanqing particularly advocated for salvaging the ship as soon as possible.
 
 Gao Xiaosong communicated with the Executive Committee via radio telegram and requested that the ship be salvaged as soon as possible. The Executive Committee held an emergency consultation on this issue and finally decided to salvage the wreck. For this purpose, a special 8154 fishing vessel was sent to assist.
 
-The simplest way to salvage a ship with a water depth of less than 10 meters and a displacement of only a hundred tons is to use a crane, but unfortunately, the 穿越 (Time-Cross) Group did not have such a large crane. Although the heavy gantry cranes and derricks used on ships were suitable, they were installed on the Fengcheng and could not be used.
+The simplest way to salvage a ship with a water depth of less than 10 meters and a displacement of only a hundred tons is to use a crane, but unfortunately, the Transmigrator Group did not have such a large crane. Although the heavy gantry cranes and derricks used on ships were suitable, they were installed on the Fengcheng and could not be used.
 
-Lin Chuanqing suggested plugging the leaks and then pumping out the water from the hull while blowing in compressed air. When there was more air in the hull, the buoyancy would increase and the ship could be directly floated. This salvage method required underwater leak-plugging technology, which the 穿越 (Time-Cross) Group certainly did not have. However, the sea valve of this ship was open, and the hull and various watertight compartment doors were intact. The ship's own tonnage was small, so this method could be used.
+Lin Chuanqing suggested plugging the leaks and then pumping out the water from the hull while blowing in compressed air. When there was more air in the hull, the buoyancy would increase and the ship could be directly floated. This salvage method required underwater leak-plugging technology, which the Transmigrator Group certainly did not have. However, the sea valve of this ship was open, and the hull and various watertight compartment doors were intact. The ship's own tonnage was small, so this method could be used.
 
 In the end, it was decided to adopt this relatively simple salvage method. Equipment and spare diving equipment were urgently transported from Lingao. Lin Chuanqing and Zhou Weisen risked several dives deep into the ship's hold to find and close the sea valves one by one—fortunately, thanks to Lin Chuanqing's experience working on American fishing boats, he was very familiar with the location and closing methods of each valve.
 
@@ -76,7 +76,7 @@ After the ship surfaced, the speed of pumping water slowed down. A small boat wa
 
 Everyone wanted to board this mysterious wreck to see it for themselves, but Gao Xiaosong ordered that no one except the search personnel was allowed to board, lest someone damage the items on board. Everyone had to continue to watch from the shore.
 
-Led by Lin Chuanqing, several 穿越 (Time-Cross) members conducted a carpet search of the entire ship and found many more materials and equipment that had not been discovered during the dive. The iron boxes in several locked cabins were also all unloaded.
+Led by Lin Chuanqing, several transmigrator members conducted a carpet search of the entire ship and found many more materials and equipment that had not been discovered during the dive. The iron boxes in several locked cabins were also all unloaded.
 
 Several boxes were opened in a row, and the contents were varied. In addition to the previously discovered pistols, there were also ammunition, magazines, and the like, but there was no familiar AK. Not only was there no AK, but not even a single rifle was seen. Just as they were disappointed, they suddenly heard someone shouting:
 
