--- a/_posts/2011-4-27-3-37400.md
+++ b/_posts/2011-4-27-3-37400.md
@@ -70,7 +70,7 @@ After listening to Gao Xiaosong's report, Yi Fan asked, "What about the ship?"
 
 "The Executive Committee hopes that the Security Council will assess this issue, and the Executive Committee will then consider whether to convey it to all the elders based on the assessment results," Ma Jia said.
 
-After a brief discussion, everyone agreed that this matter should be conveyed to all the elders—so that the elders would not be in a passive situation if they encountered other 穿越 (Time-Cross) members without knowing it. After the conveyance, everyone would at least have a certain degree of vigilance.
+After a brief discussion, everyone agreed that this matter should be conveyed to all the elders—so that the elders would not be in a passive situation if they encountered other transmigrator members without knowing it. After the conveyance, everyone would at least have a certain degree of vigilance.
 
 No one knew what weapons the people who left had taken: did they carry large weapons such as machine guns and grenades? Although the other party had abandoned the ship, it was impossible for them not to take some of the weapons on the ship. No matter how powerful the Minie rifle was in this time and space, it was impossible to be a match for modern automatic rifles.
 
@@ -84,13 +84,13 @@ If the other party is only a single or a small number of personnel acting alone,
 
 Once an armed conflict occurs with these people, no more prisoners will be taken, but all will be eliminated. Their families and related persons in this time and space should be completely exterminated, and all their belongings should be confiscated or destroyed, leaving no trace in this time and space.
 
-Yi Fan even proposed that since other 穿越 (Time-Cross) members had already been discovered, it was not ruled out that others had also come to this time and space. An organization similar to a "witch-hunting squad" should be set up to specifically collect intelligence on other 穿越 (Time-Cross) members and at the same time carry out hunting and extermination operations against them.
+Yi Fan even proposed that since other transmigrator members had already been discovered, it was not ruled out that others had also come to this time and space. An organization similar to a "witch-hunting squad" should be set up to specifically collect intelligence on other transmigrator members and at the same time carry out hunting and extermination operations against them.
 
 "There are not so many resources to do this now. Besides, the only ones that can be proved are this group of people. It's too wasteful to set up a special organization," Ma Jia objected. "I think we should just report this possibility to all departments, let everyone be more vigilant, and report any suspicious situation in time."
 
-So "Incident A" was announced to all the elders on the OA. The discovery of traces of other 穿越 (Time-Cross) members in this time and space was no less than dropping a depth charge. For a time, the phones of the Executive Committee and various departments were almost blown up. Everyone was asking for detailed information and what countermeasures would be taken. The General Office replied that the detailed process would be announced on the BBS.
+So "Incident A" was announced to all the elders on the OA. The discovery of traces of other transmigrator members in this time and space was no less than dropping a depth charge. For a time, the phones of the Executive Committee and various departments were almost blown up. Everyone was asking for detailed information and what countermeasures would be taken. The General Office replied that the detailed process would be announced on the BBS.
 
-After the incident was announced, it drew criticism from Shan Liang and others: why was such a major matter, which had great interests with the 穿越 (Time-Cross) Group and every elder, not reported in time? Instead, it was hidden for several months? The Executive Committee obviously seriously despised the "right to know" of the broad masses.
+After the incident was announced, it drew criticism from Shan Liang and others: why was such a major matter, which had great interests with the Transmigrator Group and every elder, not reported in time? Instead, it was hidden for several months? The Executive Committee obviously seriously despised the "right to know" of the broad masses.
 
 Subsequently, some people joined in the chorus of questioning, but the reply from the General Office was very simple: this matter occurred during the term of the first Executive Committee. The second Executive Committee announced the incident as soon as it took office, so the accusation of despising the "right to know" was groundless.
 
