--- a/_posts/2011-4-29-3-37600.md
+++ b/_posts/2011-4-29-3-37600.md
@@ -20,9 +20,9 @@ Ding Ding knew very well that it was not enough to just render a beautiful prosp
 
 The appeal of art and literature was enormous, and the performance effect of the puppet show was far better than everyone expected. Most of the immigrants were peasants with little knowledge, but they were not afraid of hardship and valued land and a stable life more than anything else. As long as this point could be satisfied, their greatest enthusiasm could be fully aroused.
 
-While depicting a beautiful picture of a splendid paradise in the South China Sea for the laborers and immigrants, the Planning院 (Yuan) was also drawing up a weekly death toll plan, setting a death quota based on the weekly work tasks and the changes in the surrounding conditions.
+While depicting a beautiful picture of a splendid paradise in the South China Sea for the laborers and immigrants, the Planning (Yuan) was also drawing up a weekly death toll plan, setting a death quota based on the weekly work tasks and the changes in the surrounding conditions.
 
-The death quota was related to the overall planning of the Planning院 (Yuan): how many new laborers needed to be supplemented to Sanya every week; it determined how much food, clothing, and tools needed to be transported to Yulin; it also affected the speed of transporting new immigrants from Guangzhou to Lingao and whether it was necessary to expand the scale of the quarantine camp. In this grand cause of developing Sanya, people were just a number on a document.
+The death quota was related to the overall planning of the Planning (Yuan): how many new laborers needed to be supplemented to Sanya every week; it determined how much food, clothing, and tools needed to be transported to Yulin; it also affected the speed of transporting new immigrants from Guangzhou to Lingao and whether it was necessary to expand the scale of the quarantine camp. In this grand cause of developing Sanya, people were just a number on a document.
 
 In addition to positive propaganda, internal security work was also strengthened. The General Political Security Bureau established a work network among the laborers to provide timely feedback on the emotions of the masses so that work adjustments could be made in a timely manner. Secret arrests were made of some "low-key elements" who spread pessimistic and panic-stricken remarks about the development of Yulin. Zhou Dongtian interrogated them every day to find out if there were any foreign backgrounds and internal connections among these people. This was a point that Zhao Manxiong was very concerned about.
 
@@ -32,7 +32,7 @@ In particular, regional groups were very harmful. He clearly pointed out this in
 
 Once a regional group was formed, a leader would emerge, who would control the "fellow countrymen" openly or secretly. The regional group would strengthen the tendency to use a common dialect. Some dialects were difficult for outsiders to understand, almost like a "secret language" within the group. This was not only a challenge to the authority of the elders, but also contained unstable dangers.
 
-In Lingao, which was under the strict control of the 穿越 (Time-Cross) Group's regime, this situation could still be effectively prevented and curbed. After arriving in Sanya, the control was relatively lax, and in the harsh environment, people would inevitably have activities like "looking for fellow countrymen."
+In Lingao, which was under the strict control of the Transmigrator Group's regime, this situation could still be effectively prevented and curbed. After arriving in Sanya, the control was relatively lax, and in the harsh environment, people would inevitably have activities like "looking for fellow countrymen."
 
 Zhao Manxiong asked the five giants of Sanya to pay attention to this and to absolutely curb the possibility of small groups being formed through hometown connections. If necessary, the most severe means should be used to prohibit it, up to and including physical elimination. Among the secretly arrested were laborers who had attempted to organize a fellow countrymen's association. Regardless of their motives, Zhao Manxiong wrote "indefinite labor reform" on all of their handling opinions.
 
