--- a/_posts/2011-4-4-3-35100.md
+++ b/_posts/2011-4-4-3-35100.md
@@ -8,9 +8,9 @@ tag: [normal]
 
 Although the General Political Security Bureau was placed under the Tribunal, Ma Jia believed it was best for him to only be responsible for administrative leadership of such an organization and not to interfere too deeply in its specific affairs. However, the Tribunal needed its own investigation department. Ma Jia, drawing on the concept of the Japanese prosecutor's office, established the Tribunal Investigation Department, granting it independent investigative authority.
 
-The newly established Legal Counsel Office was not merely a "research institute" for idling away time. Ma Jia entrusted it with the primary task of legislation—a vast amount of legislation, including various internal rules and regulations. The 穿越 (Time-Cross) Group was currently a complete blank in this area, and its handling of matters was a typical manifestation of "the will of the chiefs."
+The newly established Legal Counsel Office was not merely a "research institute" for idling away time. Ma Jia entrusted it with the primary task of legislation—a vast amount of legislation, including various internal rules and regulations. The Transmigrator Group was currently a complete blank in this area, and its handling of matters was a typical manifestation of "the will of the chiefs."
 
-Ma Jia believed this state of affairs urgently needed to be changed. Facts had proven that a good system is better than the most brilliant leader—not to mention that the most brilliant leaders often unknowingly become captives of their immense power and prestige, degenerating into the most terrifying dictators. The small-group nature of the 穿越 (Time-Cross) Group made it easier for power to be concentrated, and the possibility of a dictator emerging was growing.
+Ma Jia believed this state of affairs urgently needed to be changed. Facts had proven that a good system is better than the most brilliant leader—not to mention that the most brilliant leaders often unknowingly become captives of their immense power and prestige, degenerating into the most terrifying dictators. The small-group nature of the Transmigrator Group made it easier for power to be concentrated, and the possibility of a dictator emerging was growing.
 
 This possibility had to be nipped in the bud at an early stage. Therefore, in this organizational restructuring, the Law Club contributed the most ideas. A large number of checks and balances came from this club, and the leaders, either genuinely supporting internal democracy or fearing the terrible consequences of failure in the struggle, all supported the Law Club's reform measures.
 
@@ -20,7 +20,7 @@ Now, the People's Commissars were "cut across the board," and were no longer mem
 
 The institutional adjustment also lowered the status of some committees that had previously been particularly influential, such as the original Agriculture Committee and the Civil Affairs Committee. Now, they were just departments under the Central Government Council and no longer had a voice in the Executive Committee. Wu Nanhai retained his title of People's Commissar for Agriculture but was directly excluded from the Executive Committee. Although Wu De was promoted to one of the 9 Executive Committee members and took on the key position of President of the Planning院 (Yuan), he was completely separated from the Civil Affairs Committee, with which he was most familiar.
 
-As for the violent institutions of the 穿越 (Time-Cross) Group, whether it was the military, police, intelligence, or secret service agencies, their status was all lowered in this adjustment. Not only were the People's Commissars for the Army and Navy completely excluded from the core of power, but the separation of military administration and military command further reduced the actual status and power of the People's Commissars for the Army and Navy, laying the foundation for civilian personnel to serve as People's Commissars for the Army and Navy in the future. As for the Police General Bureau, it became a civil department under the jurisdiction of the Central Government Council. The General Political Security Bureau was even lowered to be under the jurisdiction of the Tribunal.
+As for the violent institutions of the Transmigrator Group, whether it was the military, police, intelligence, or secret service agencies, their status was all lowered in this adjustment. Not only were the People's Commissars for the Army and Navy completely excluded from the core of power, but the separation of military administration and military command further reduced the actual status and power of the People's Commissars for the Army and Navy, laying the foundation for civilian personnel to serve as People's Commissars for the Army and Navy in the future. As for the Police General Bureau, it became a civil department under the jurisdiction of the Central Government Council. The General Political Security Bureau was even lowered to be under the jurisdiction of the Tribunal.
 
 The General Political Security Bureau was placed under the Tribunal, firstly, to prevent the Secretary of State from controlling too many violent institutional resources; secondly, to lower the status of the Political Security Bureau—being directly under the Executive Committee was too prestigious a title.
 
@@ -52,7 +52,7 @@ Seeing the incredulous expressions on everyone's faces, Wu De continued to expla
 
 But unlike proposals at the general assembly, proposals submitted to the Planning院 (Yuan) had to be a detailed feasibility report and plan.
 
-"For example, for a proposal to occupy Hong Kong Island, one must first explain the significance of this action, secondly, have some background information as supporting material, and finally, propose one's own plan, how much manpower and material the 穿越 (Time-Cross) Group would need to invest to occupy Hong Kong, how to deal with the counter-attack of the Ming army or other forces..."
+"For example, for a proposal to occupy Hong Kong Island, one must first explain the significance of this action, secondly, have some background information as supporting material, and finally, propose one's own plan, how much manpower and material the Transmigrator Group would need to invest to occupy Hong Kong, how to deal with the counter-attack of the Ming army or other forces..."
 
 "Good heavens, you're not asking the proposer to be their own chief of staff, are you?" Wu De said. "It's possible for people with a military background, but how can it be possible for ordinary people!"
 
@@ -62,7 +62,7 @@ Ma Qianzhan, however, nodded repeatedly in support: "I agree with this plan. Thi
 
 "Hehe, I'd like to see who can write a perfect feasibility report for occupying Hong Kong..." Wen Desi said implicitly.
 
-Such proposals involving major military and political plans required a large amount of professional knowledge as a basis, as well as intelligence support. Ordinary people simply couldn't write them. Even if they forced themselves to write one, it would be easily refuted by professionals. Therefore, this so-called plan to "increase the participation of the elders" was just drawing a big pie. The 穿越 (Time-Cross) members could freely propose their various plans and ideas, fully satisfying their desire to participate in planning. Even if it was ultimately rejected, they could only say that their own skills were not refined and unprofessional, and could not complain that the Executive Committee did not give them a chance.
+Such proposals involving major military and political plans required a large amount of professional knowledge as a basis, as well as intelligence support. Ordinary people simply couldn't write them. Even if they forced themselves to write one, it would be easily refuted by professionals. Therefore, this so-called plan to "increase the participation of the elders" was just drawing a big pie. The transmigrator members could freely propose their various plans and ideas, fully satisfying their desire to participate in planning. Even if it was ultimately rejected, they could only say that their own skills were not refined and unprofessional, and could not complain that the Executive Committee did not give them a chance.
 
 "If someone can really come up with a very good and complete plan, we might as well implement it," Wu De said.
 
@@ -74,13 +74,13 @@ But this system greatly satisfied the enthusiasm of the elders for political par
 
 Finally, Ma Qianzhan proposed a motion to discuss "grading and salary."
 
-In advance, Xiao Zishan, under the instructions of the Executive Committee, had already begun to formulate a cadre ranking system. He convened all the elders in the 穿越 (Time-Cross) Group who had studied personnel systems and political science to form an internal network discussion group, allowing everyone to use their talents in their spare time—not because the 穿越 (Time-Cross) Group was in urgent need of the work of these elders, but to let everyone pass the time and prevent them from wondering all day whether their own girls were uglier than those of the Executive Committee members. It was well known that people who had studied political science more had greater energy when it came to inciting the masses.
+In advance, Xiao Zishan, under the instructions of the Executive Committee, had already begun to formulate a cadre ranking system. He convened all the elders in the Transmigrator Group who had studied personnel systems and political science to form an internal network discussion group, allowing everyone to use their talents in their spare time—not because the Transmigrator Group was in urgent need of the work of these elders, but to let everyone pass the time and prevent them from wondering all day whether their own girls were uglier than those of the Executive Committee members. It was well known that people who had studied political science more had greater energy when it came to inciting the masses.
 
-The cadre system that this group was to study included not only the 穿越 (Time-Cross) members, but also the native cadres, who also needed to be graded. A disagreement arose here. Should a dual-track system be adopted for the cadre ranks and military ranks, that is, one system for the 穿越 (Time-Cross) members and another for the natives.
+The cadre system that this group was to study included not only the transmigrator members, but also the native cadres, who also needed to be graded. A disagreement arose here. Should a dual-track system be adopted for the cadre ranks and military ranks, that is, one system for the transmigrator members and another for the natives.
 
-Some people believed that in order to highlight the superiority of the 穿越 (Time-Cross) members and show their different status, they should have a separate cadre ranking system. This ranking system would only be open to 穿越 (Time-Cross) members, and natives, even elites, could not enter. The most powerful example was the issue of military ranks: many 穿越 (Time-Cross) members serving in the army were still only captains, but several native navy captains had already appeared. In the future, as the army grew in size, there would inevitably be more native officers, and even generals. Not separating the 穿越 (Time-Cross) members would inevitably lead to the problem of native superiors and 穿越 (Time-Cross) subordinates.
+Some people believed that in order to highlight the superiority of the transmigrator members and show their different status, they should have a separate cadre ranking system. This ranking system would only be open to transmigrator members, and natives, even elites, could not enter. The most powerful example was the issue of military ranks: many transmigrator members serving in the army were still only captains, but several native navy captains had already appeared. In the future, as the army grew in size, there would inevitably be more native officers, and even generals. Not separating the transmigrator members would inevitably lead to the problem of native superiors and transmigrator subordinates.
 
-Although a small number of universalists argued that this was not a problem, that the command relationship was the command relationship, and that no matter how high a native official's position was, he was still a native and could not become an elder, nor could he enjoy the rights of an elder, and could not shake the ruling foundation of the 穿越 (Time-Cross) Group. It could also make the natives feel the spirit of "appointing people on their merits" of the 穿越 (Time-Cross) Group and make them work harder for the group. But most elders still felt that it was unacceptable for native cadres to be superior to the 穿越 (Time-Cross) masses.
+Although a small number of universalists argued that this was not a problem, that the command relationship was the command relationship, and that no matter how high a native official's position was, he was still a native and could not become an elder, nor could he enjoy the rights of an elder, and could not shake the ruling foundation of the Transmigrator Group. It could also make the natives feel the spirit of "appointing people on their merits" of the Transmigrator Group and make them work harder for the group. But most elders still felt that it was unacceptable for native cadres to be superior to the transmigrator masses.
 [y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "Wen Desi"
 [y005]: /characters/y005 "Ma Qianzhan"
