--- a/_posts/2011-4-5-3-35200.md
+++ b/_posts/2011-4-5-3-35200.md
@@ -16,15 +16,15 @@ Ma Qianzhan said, "Is there a difference? Right now, we can't even find enough b
 
 This question was a bit difficult. In theory, they were "cadres," but not "civil servants," which involved many institutional issues.
 
-From the perspective of controlling the number of officials, it was best not to make grassroots cadres like village chiefs into civil servants. But at this stage, the 穿越 (Time-Cross) Group was strengthening its control over the grassroots, and the primary task of strengthening grassroots control was to strengthen the ranks of grassroots cadres.
+From the perspective of controlling the number of officials, it was best not to make grassroots cadres like village chiefs into civil servants. But at this stage, the Transmigrator Group was strengthening its control over the grassroots, and the primary task of strengthening grassroots control was to strengthen the ranks of grassroots cadres.
 
 "We will definitely implement a civil service system, or a civil official system," Wen Desi said. "Everyone is well aware of the drawbacks of the original cadre system—the ranks of cadres expanded too quickly, and the structure tended to age."
 
-Ma Qianzhan wanted to continue arguing on this issue. His intention was to establish a group of cadres in the countryside who would completely obey the 穿越 (Time-Cross) Group and carry out all of its orders without question. As for things like rural autonomy, Ma Qianzhan didn't consider them heresy, but he felt that transplanting such a system to this time and space would probably allow the rural clan forces to continue to control grassroots power.
+Ma Qianzhan wanted to continue arguing on this issue. His intention was to establish a group of cadres in the countryside who would completely obey the Transmigrator Group and carry out all of its orders without question. As for things like rural autonomy, Ma Qianzhan didn't consider them heresy, but he felt that transplanting such a system to this time and space would probably allow the rural clan forces to continue to control grassroots power.
 
 Because this issue was highly controversial, Wu De suggested temporarily shelving it and deciding on the ranking issue first. After discussion, it was decided that it was not appropriate to adopt a dual-track system for official ranks, so as to avoid creating artificial difficulties.
 
-"The elder system is actually already a kind of aristocratic system that separates the 穿越 (Time-Cross) members from the natives. If we create another independent cadre system, it will be too complicated to manage," Wu De said. "I propose that we can give the 穿越 (Time-Cross) members a high starting point. For example, military ranks could start from major general..."
+"The elder system is actually already a kind of aristocratic system that separates the transmigrators from the natives. If we create another independent cadre system, it will be too complicated to manage," Wu De said. "I propose that we can give the transmigrator members a high starting point. For example, military ranks could start from major general..."
 
 "That's outrageous! The army would have a whole bunch of major generals!" Wen Desi immediately objected. "So many people work so hard just to get a section chief or department head position, and these few 'hard-core' guys who just play with fire sticks get to be major generals?! I absolutely cannot agree."
 
