--- a/_posts/2011-4-7-3-35400.md
+++ b/_posts/2011-4-7-3-35400.md
@@ -84,9 +84,9 @@ This person should preferably have no connection with either President Wen or Di
 
 Besides, in this way, the power held by the Ming family would be too scary, Ma Jia thought to himself.
 
-Ma Jia sat in his office, drinking cup after cup of strong tea, repeatedly looking at the general roster of 穿越 (Time-Cross) members that he had obtained from Xiao Zishan. This roster briefly recorded the information and current positions of all 穿越 (Time-Cross) members. Finally, his eyes fell on a name in the last Z-headed column.
+Ma Jia sat in his office, drinking cup after cup of strong tea, repeatedly looking at the general roster of transmigrator members that he had obtained from Xiao Zishan. This roster briefly recorded the information and current positions of all transmigrator members. Finally, his eyes fell on a name in the last Z-headed column.
 
-This person should be suitable! Ma Jia thought. Although this person was not from the public security system like Ran Yao and Mu Min, but had studied international politics, he was proficient in the political science and specific practices of the Soviet era, and had a particularly profound research on the purges of the Stalin era and the People's Commissariat for Internal Affairs. It should be said that he had mastered enough theory, and he was not a person who liked to show off—this point alone was much better than all the clamoring 穿越 (Time-Cross) members who wanted to be purgers.
+This person should be suitable! Ma Jia thought. Although this person was not from the public security system like Ran Yao and Mu Min, but had studied international politics, he was proficient in the political science and specific practices of the Soviet era, and had a particularly profound research on the purges of the Stalin era and the People's Commissariat for Internal Affairs. It should be said that he had mastered enough theory, and he was not a person who liked to show off—this point alone was much better than all the clamoring transmigrator members who wanted to be purgers.
 
 This person was Zhao Manxiongski.
 
