--- a/_posts/2011-4-9-3-35600.md
+++ b/_posts/2011-4-9-3-35600.md
@@ -50,7 +50,7 @@ Seeing his broad-mindedness, fat body, smiling face, and very benevolent appeara
 
 Zhao Manxiongski readily accepted the banquet. It was generally not appropriate to refuse such a thing as a new official dining with his subordinates. Subsequently, Wu Fo hosted a banquet for the new director at the Lotus Pavilion.
 
-Several other 穿越 (Time-Cross) members who worked in the bureau also attended the banquet. There were really few elders working in the General Political Security Bureau, Zhao Manxiongski thought.
+Several other transmigrator members who worked in the bureau also attended the banquet. There were really few elders working in the General Political Security Bureau, Zhao Manxiongski thought.
 
 The dishes were very simple, all fresh aquatic products, vegetables, and poultry and eggs produced by the farm and the port. As usual, there was no meat. Zhao Manxiong did not say much polite nonsense, but directly asked a series of questions about the work of the General Political Security Bureau.
 
@@ -62,7 +62,7 @@ The main content of the inquiry was the work of the General Political Security B
 
 Another department on the organizational chart that was unattended was the Social Work Department, which was originally under the responsibility of Luo Duo, but he had been on loan to the Great Library for a long time and was not on duty.
 
-Zhao Manxiong nodded. The establishment of the Security Bureau was very complete, but there were many vacancies. Why didn't Ran Yao fill all the positions? If it was said that there was a lack of professional personnel, the 穿越 (Time-Cross) Group originally did not have many professional personnel in this area.
+Zhao Manxiong nodded. The establishment of the Security Bureau was very complete, but there were many vacancies. Why didn't Ran Yao fill all the positions? If it was said that there was a lack of professional personnel, the Transmigrator Group originally did not have many professional personnel in this area.
 
 At the dinner table, Zhao Manxiongski immediately introduced the newcomer he had brought: Wu Mu.
 
@@ -76,13 +76,13 @@ He deliberately did not let this institution play its greatest role—the Genera
 
 Zhao Manxiongski decided that he must first refresh the entire institution from the organizational structure and guiding principles. After considering for a whole night, he wrote a "Memorandum on Political Security Work" and sent a copy to all members of the Executive Committee.
 
-In the "Memorandum," Zhao Manxiongski pointed out that the function of the State General Political Security Bureau is: within the jurisdiction of the entire 穿越 (Time-Cross) country, in accordance with the provisions of the "Common Program," under the jurisdiction of the Tribunal, to carry out the tasks of reconnaissance, suppression, and elimination of all political and economic anti-穿越 (Time-Cross) Group organizations, espionage, and banditry.
+In the "Memorandum," Zhao Manxiongski pointed out that the function of the State General Political Security Bureau is: within the jurisdiction of the entire transmigrator country, in accordance with the provisions of the "Common Program," under the jurisdiction of the Tribunal, to carry out the tasks of reconnaissance, suppression, and elimination of all political and economic anti-Transmigrator Group organizations, espionage, and banditry.
 
 "Secret work is the main principle of the Security Bureau's work," "when investigating and monitoring the activities of hostile factions or suspects, it must be absolutely secret." At the same time, the General Political Security Bureau, with its centralized system and organization, regularly and systematically exposes and eliminates all open, secret, and hidden hostile organizations and actions to protect and consolidate the political power.
 
 In order to ensure the combat effectiveness of this department, it must have a strict and powerful organization and the special powers necessary to perform various special tasks. Zhao Manxiongski wrote a special section in the memorandum: "Organizational Outline of the Political Security Bureau."
 
-Since the area occupied by the 穿越 (Time-Cross) Group is still very small, there is no need for it to be too large and comprehensive. Therefore, at this stage, the General Political Security Bureau only has three departments: investigation, execution, and technology. The unattended Enemy Work Department and Social Work Department are abolished. The General Political Security Bureau will not set up field branches for the time being. Instead, it will adopt the method of "special commissioners" in places where political security personnel need to be dispatched.
+Since the area occupied by the Transmigrator Group is still very small, there is no need for it to be too large and comprehensive. Therefore, at this stage, the General Political Security Bureau only has three departments: investigation, execution, and technology. The unattended Enemy Work Department and Social Work Department are abolished. The General Political Security Bureau will not set up field branches for the time being. Instead, it will adopt the method of "special commissioners" in places where political security personnel need to be dispatched.
 
 Zhao Manxiong assigned the following responsibilities to the Investigation Department: 1. To accept the orders of the director and handle all matters of the Investigation Department; 2. To plan, compile, and train for open and secret investigation work; 3. To review the materials obtained from investigations and pre-trial confessions; 4. To handle the inspection of mail, telegrams, books, and newspapers, and matters related to land and water transportation; 5. To arrange for "hidden cadres" for internal security; 6. To be responsible for political assessment work.
 
