--- a/_posts/2011-5-5-3-38200.md
+++ b/_posts/2011-5-5-3-38200.md
@@ -60,7 +60,7 @@ Xuan Chun then brought a new wooden basin to wash his feet. Liu San no longer re
 
 "Very good." Liu San let out a satisfied sigh. Being served, especially by a reasonably attractive woman, was truly wonderful.
 
-"As for the trousers, please change them on the bed yourself, Third Master," Xuan Chun said with a抿嘴一笑 (a slight smile, covering her mouth).
+"As for the trousers, please change them on the bed yourself, Third Master," Xuan Chun said with a slight smile, covering her mouth.
 
 After changing his clothes, Liu San felt comfortable all over. He sat on the bed and watched Xuan Chun tidy up his discarded clothes, the basin, and other things. Her full figure and nimble movements were a pleasant sight.
 
