--- a/_posts/2012-3-1-5-06400.md
+++ b/_posts/2012-3-1-5-06400.md
@@ -12,7 +12,7 @@ Gonzales frowned at the sight of Van der Lanton, who was sprawled on the bed, de
 
 At the reception, they had served rum and various fruit wines brewed by Schezer and other alcohol enthusiasts at the Demonstration Farm. Although Lingao couldn't grow proper wine grapes, the farm and various communes had promoted planting fruit trees in "ten-side" plots and courtyard gardens. Besides supplying the military, students, and workers, the surplus fruit was often used for winemaking. Schezer had been an amateur brewer back in the US, complete with his own small-scale fermentation equipment, so he was familiar with the process.
 
-These small-scale wineries produced a wide variety of fruit wines in limited quantities, mostly for the consumption of the穿越众and for banquets. A small amount was sold as special-supply items to the upper echelses of the naturalized citizens.
+These small-scale wineries produced a wide variety of fruit wines in limited quantities, mostly for the consumption of the transmigrators and for banquets. A small amount was sold as special-supply items to the upper echelses of the naturalized citizens.
 
 Of course, Gonzales hadn't passed up this rare opportunity for a good drink; Spanish soldiers were second to none when it came to drinking. He had downed several bottles of apple wine, jackfruit wine, and wild berry wine before moving on to a great deal of rum. Unfazed, he then went to chat with Miss Mendoza, who was acting as an interpreter. He hadn't seen a "woman from the motherland" in a long time. Although the charming woman spoke Spanish with many words he didn't understand and a noticeable accent, Gonzales guessed she was a criollo from the American colonies and immediately showered her with attention. He could tell she had a favorable impression of him, but she always sidestepped whenever he got too close, which puzzled him.
 
@@ -32,7 +32,7 @@ After the reception, he and Trini returned to their room. Although the trading p
 
 ***
 
-"The Dutch seem even happier about the outcome of these negotiations than we are," Hong Shuiyin, the Hong Kong business representative temporarily recalled for the talks, remarked. After the reception, the key figures of the Colonial and Trade Department gathered in a conference room in the office building. He had been brought back because Xu Tianqi, the best German speaker among the穿越众, had already gone to the mainland, leaving Hong as the only one who could communicate fluently in German.
+"The Dutch seem even happier about the outcome of these negotiations than we are," Hong Shuiyin, the Hong Kong business representative temporarily recalled for the talks, remarked. After the reception, the key figures of the Colonial and Trade Department gathered in a conference room in the office building. He had been brought back because Xu Tianqi, the best German speaker among the transmigrator, had already gone to the mainland, leaving Hong as the only one who could communicate fluently in German.
 
 "Of course they are. Zheng Zhilong has been giving them a hard time. They're bound to be happy to finally meet some honest folk like us," Si Kaide said cheerfully. The trade agreement signed with the Dutch East India Company a few days ago had passed its third reading in the Senate and been approved. Although no one was particularly fond of the Dutch, the agreement was incredibly advantageous for the Lingao regime.
 
@@ -68,9 +68,9 @@ Consequently, Hong Kong was added to the list of open trading ports in the final
 
 However, among the various open ports, only Lingao was permitted to host a consul. The question of whom to send to Batavia as a consul became a new problem.
 
-Hong Shuiyin flatly refused the opportunity, even though he was currently the best German speaker among the穿越众. Not wanting to go, he argued that someone who knew Spanish or another language could do the job in Batavia, pointing out that the Dutch delegation itself included Spaniards and Italians.
+Hong Shuiyin flatly refused the opportunity, even though he was currently the best German speaker among the transmigrators. Not wanting to go, he argued that someone who knew Spanish or another language could do the job in Batavia, pointing out that the Dutch delegation itself included Spaniards and Italians.
 
-The Senate was hesitant about sending a transmigrator to be a consul on Dutch soil. With so few穿越众, each one's knowledge and skills were precious. The potential benefits of placing a transmigrator thousands of kilometers away on the territory of a potential enemy were unclear. The person sent couldn't be of low caliber; they needed to speak a foreign language to communicate with the Dutch, possess considerable diplomatic skills, and be in good health. If anything went wrong, the Senate would be completely unable to help.
+The Senate was hesitant about sending a transmigrator to be a consul on Dutch soil. With so few transmigrator, each one's knowledge and skills were precious. The potential benefits of placing a transmigrator thousands of kilometers away on the territory of a potential enemy were unclear. The person sent couldn't be of low caliber; they needed to speak a foreign language to communicate with the Dutch, possess considerable diplomatic skills, and be in good health. If anything went wrong, the Senate would be completely unable to help.
 
 The Foreign Intelligence Bureau was the most interested in sending a consul—it was a perfect opportunity to openly deploy an intelligence officer. However, the risks were even greater than sending someone to the Ming Dynasty, and Batavia was not currently a primary target for conquest, so the bureau didn't show excessive enthusiasm.
 
