--- a/_posts/2012-6-2-5-15700.md
+++ b/_posts/2012-6-2-5-15700.md
@@ -44,7 +44,7 @@ Under the captain's command, the Haitian set sail from Hong Kong and headed nort
 
 Another task of the Haitian was to observe the safety of maritime navigation in person. Although the ships of the Dabo Shipping Company had sailed between Zhejiang and Hong Kong several times before without any major incidents—apart from a few attacks by small groups of pirates—neither Liu Xiang nor Zheng Zhilong had launched any interceptions of Dabo's cargo ships. It seemed that the conclusion of the Grand Library's historical research group was accurate: these great sea lords did not have the ability to organize a tight maritime blockade—nor was it their ambition. Both Liu Xiang and Zheng Zhilong were concerned with monopolizing foreign trade. The ones who frequently carried out robberies in the coastal areas were small and medium-sized pirate groups.
 
-This time, the Haitian openly flew the Star of启明 flag and the naval ensign. The purpose was obvious: to see how strong the maritime consciousness of the legendary great sea lords really was, and how capable they were of fulfilling their desires.
+This time, the Haitian openly flew the Star of Qiming flag and the naval ensign. The purpose was obvious: to see how strong the maritime consciousness of the legendary great sea lords really was, and how capable they were of fulfilling their desires.
 
 "Keep a close watch on the sea!" Li Ziping raised his binoculars and observed the waters around the island. The sea was dotted with fishing sails. The area around Nan'ao Island was an excellent fishing ground, and many fishing boats came here to fish. But he was more concerned with Liu Xiang's ships.
 
