--- a/_posts/2012-8-11-5-22700.md
+++ b/_posts/2012-8-11-5-22700.md
@@ -60,7 +60,7 @@ However, for collecting grain, Guangdong was still the most convenient source fo
 
 The Planning Commission, the Colonial and Trade Department, the Agricultural Committee, and the Foreign Intelligence Bureau had jointly established a special grain working group in Guangdong, led by the Guangzhou Station. One of Guo Yi's main recent tasks was to handle grain.
 
-Collecting grain was not done by purchasing with cash. Given the穿越集團's demand for grain, it was impossible to raise such a large sum of silver, and such a large-scale purchase of grain would also cause a sharp rise in grain prices in Guangdong.
+Collecting grain was not done by purchasing with cash. Given the transmigrator's demand for grain, it was impossible to raise such a large sum of silver, and such a large-scale purchase of grain would also cause a sharp rise in grain prices in Guangdong.
 
 The grain working group's method of collecting grain locally was "grain levy"—or rather, collecting a "reasonable burden."
 
@@ -82,4 +82,4 @@ The emergence of rent collection agencies was convenient for small and medium-si
 
 This time, the grain working group had brought the rent collection agency into the Ming Dynasty ahead of schedule. After a period of intense preparation, several former "grain collectors" from various counties in Hainan arrived one after another. With these grain collectors as the backbone of the business, and with the cooperation of some other naturalized citizens, they formed the "Wan Sheng Hao" rent collection agency to fully manage this batch of land.
 
-The ownership of the land was all changed to "Yuan Laoyuan," and it was actually managed by the Planning Commission. The address was in Bairen Village, Lin'gao, Qiongzhou Prefecture—the very administrative village that had been specially created for the穿越众.
+The ownership of the land was all changed to "Yuan Laoyuan," and it was actually managed by the Planning Commission. The address was in Bairen Village, Lin'gao, Qiongzhou Prefecture—the very administrative village that had been specially created for the transmigrators.
