--- a/_posts/2012-8-13-5-22900.md
+++ b/_posts/2012-8-13-5-22900.md
@@ -22,7 +22,7 @@ He Congfu was an old pirate, known for his cunning in the big gangs. He was a sm
 
 Since surrendering to the Council of Elders, he had been observing the Australians' development. He was not the only one; most of the people in the Southeast Asia Company were like him.
 
-Initially, all those who joined the Southeast Asia Company's merchant fleet were old pirate leaders who were suspicious of the "髡贼" (Kunzei, a derogatory term for the穿越众) and wanted to preserve some of their own strength as a fallback. As the Council of Elders' power continued to grow, with the implementation of a unified personnel system, a unified remuneration system, and the political reform of the grassroots personnel, the old leaders' personal control over the fleet's sailors had basically disappeared. The so-called preservation of strength to observe the situation had become empty talk. Even the ships they personally captained could not act without orders from the Admiralty.
+Initially, all those who joined the Southeast Asia Company's merchant fleet were old pirate leaders who were suspicious of the short-haired and wanted to preserve some of their own strength as a fallback. As the Council of Elders' power continued to grow, with the implementation of a unified personnel system, a unified remuneration system, and the political reform of the grassroots personnel, the old leaders' personal control over the fleet's sailors had basically disappeared. The so-called preservation of strength to observe the situation had become empty talk. Even the ships they personally captained could not act without orders from the Admiralty.
 
 After the victory in the second anti-encirclement campaign and the navy's advance into the Pearl River Estuary, firing on the Wuyang Post, these people finally decided to completely sell themselves out to get on the "dragon-riding" bandwagon. To this end, they unanimously sold the ownership of their ships to the Planning Commission to show their loyalty. In this way, their personal influence over the ships was completely eliminated, leaving only the dividend shares from the valuation of their ships.
 
