--- a/_posts/2012-8-14-5-23000.md
+++ b/_posts/2012-8-14-5-23000.md
@@ -42,7 +42,7 @@ Quark often traveled through this area and had heard a lot about the war. He poi
 
 Quark explained enthusiastically, still hoping that Ping Qiusheng would agree to his request for the "Australian sea charts." Although the sea charts that Liu San had shown him were restricted items, the Council of Elders had already printed a batch of small-scale latitude and longitude charts as gifts for commercial partners with whom they had extensive trade.
 
-Ping Qiusheng looked at the distant buildings and thought, *This grain should have belonged to the 穿越集團. If it weren't for the North-South civil war, the grain supply in Vietnam wouldn't be so tight.* Although the local coastal defenses were well-organized, their level of fortification was at best slightly better than the Ming's forts at Humen. While Zheng Bao and his ilk found them difficult to crack, they were no problem for them. If the fleet had a company of marines and a few special reconnaissance teams, plus a few H800 Harmony-class ships, it would be no problem to snatch seventy or eighty thousand shi of grain. But that was out of the question for now. The Engine Project had already stretched Lin'gao's resources thin, and many large-scale operations had been postponed until next year. The proposal to rob the monkeys of their grain would probably not be approved by the Council of Elders anytime soon.
+Ping Qiusheng looked at the distant buildings and thought, *This grain should have belonged to the transmigration group. If it weren't for the North-South civil war, the grain supply in Vietnam wouldn't be so tight.* Although the local coastal defenses were well-organized, their level of fortification was at best slightly better than the Ming's forts at Humen. While Zheng Bao and his ilk found them difficult to crack, they were no problem for them. If the fleet had a company of marines and a few special reconnaissance teams, plus a few H800 Harmony-class ships, it would be no problem to snatch seventy or eighty thousand shi of grain. But that was out of the question for now. The Engine Project had already stretched Lin'gao's resources thin, and many large-scale operations had been postponed until next year. The proposal to rob the monkeys of their grain would probably not be approved by the Council of Elders anytime soon.
 
 Ping Qiusheng noticed a natural reef offshore that separated the harbor, and the anchorage conditions inside were quite good. At this time, the people on shore seemed to have noticed the arrival of the fleet and lit a warning smoke signal, but no ships left the port to investigate. Apparently, the other side did not have a standing navy ready for combat at all times. They relied on their coastal defense system to prevent landings and raids.
 
@@ -62,7 +62,7 @@ Since they understood the disparity in strength, they could only cooperate with 
 
 During the few days they stayed in Nha Trang, Lin Dan and his former "colleagues" enjoyed the beach here. The scenery of Nha Trang was beautiful, and the Americans had good taste in choosing it as a base.
 
-In Ping Qiusheng's mind, Nha Trang would be the future forward base for the 穿越者 in Southeast Asia, and also a choice for an Elder resort.
+In Ping Qiusheng's mind, Nha Trang would be the future forward base for thetransmigrators in Southeast Asia, and also a choice for an Elder resort.
 
 The long-range exploration team that came with the ship took a small boat to conduct a hydrographic survey in Cam Ranh Bay, south of Nha Trang. This natural harbor with excellent hydrographic conditions was an excellent naval base and commercial port. In the future, the commercial and military stronghold built around Cam Ranh Bay and Nha Trang should have very good development.
 
