--- a/_posts/2012-8-15-5-23100.md
+++ b/_posts/2012-8-15-5-23100.md
@@ -36,7 +36,7 @@ Ping Qiusheng discovered that there were also some Chinese immigrant villages he
 
 Apparently, it would not be difficult to establish a solid base in this generation after the Southeast Asia campaign began. A small fortress similar to Yulin Fort would be enough, without the need for a particularly strong one. With Nha Trang's geographical advantages, a large amount of rice could be obtained here.
 
-This area widely cultivated the so-called Champa rice. Champa rice was drought-resistant and had a short growing period, taking only about 50 days from sowing to harvest. It had been introduced to Guangdong and Fujian during the Song and Song dynasties and was a "divine artifact" for穿越者 before the Song dynasty. As the place of origin, with sufficient light and heat, the yield was obviously higher. It would be a shame to let the monkeys have this grain for free. Taking Nha Trang and Cam Ranh Bay early would allow them to continuously absorb the grain resources of central and southern Vietnam, especially the Mekong River Delta, Ping Qiusheng thought.
+This area widely cultivated the so-called Champa rice. Champa rice was drought-resistant and had a short growing period, taking only about 50 days from sowing to harvest. It had been introduced to Guangdong and Fujian during the Song and Song dynasties and was a "divine artifact" for transmigrators before the Song dynasty. As the place of origin, with sufficient light and heat, the yield was obviously higher. It would be a shame to let the monkeys have this grain for free. Taking Nha Trang and Cam Ranh Bay early would allow them to continuously absorb the grain resources of central and southern Vietnam, especially the Mekong River Delta, Ping Qiusheng thought.
 
 However, in the long run, the resource value of Nha Trang was not very great. Besides being able to obtain rice, there were no other special resources here. Perhaps after completing the entire East Asian layout, this place would return to its traditional positioning: an Elder resort plus a naval base. Of course, before taking Malacca, it would also be a good transit trade port for the Australians and Southeast Asia.
 
