--- a/_posts/2012-8-17-5-23300.md
+++ b/_posts/2012-8-17-5-23300.md
@@ -58,7 +58,7 @@ In the 16th century, Thailand had three kingdoms: Sukhothai, Lanna, and Phayao. 
 
 The later Bangkok area was still a vast jungle at that time. Bangkok itself did not exist. The only port that could be used was Thonburi on the west bank of the Chao Phraya River. But this was the mouth of the Chao Phraya River, and its geographical location was very important, making it easy to absorb the large amount of rice from the Chao Phraya River basin.
 
-The northeast of Thailand is a plateau. Due to the obstruction of the mountains, it has a rainy and shady climate, with drought in summer and excessive rainfall in the rainy season, which is not suitable for cultivation. Thailand's ranking among the top three rice exporters in the world in the original timeline was entirely due to the Chao Phraya River basin. As long as the mouth of the Chao Phraya River was controlled, the rice of Siam could be continuously absorbed. After the Engine Project was completed and the layout of Southeast Asia began, the food problem of the 穿越集團 in southern China could basically be solved once and for all. The data Ping Qiusheng found in the Great Library indicated that in the mid-Qing Dynasty, the annual rice exports from Siam to Guangdong were 11 million shi—which was equivalent to half of the total rice production of Japan! Even if only one-third or even one-fourth of this resource was controlled by the 穿越集團 at this time, it would be enough to feed the entire population of Hainan for a year with a surplus. The only remaining problem would be transport capacity.
+The northeast of Thailand is a plateau. Due to the obstruction of the mountains, it has a rainy and shady climate, with drought in summer and excessive rainfall in the rainy season, which is not suitable for cultivation. Thailand's ranking among the top three rice exporters in the world in the original timeline was entirely due to the Chao Phraya River basin. As long as the mouth of the Chao Phraya River was controlled, the rice of Siam could be continuously absorbed. After the Engine Project was completed and the layout of Southeast Asia began, the food problem of the transmigrators in southern China could basically be solved once and for all. The data Ping Qiusheng found in the Great Library indicated that in the mid-Qing Dynasty, the annual rice exports from Siam to Guangdong were 11 million shi—which was equivalent to half of the total rice production of Japan! Even if only one-third or even one-fourth of this resource was controlled by the transmigrators at this time, it would be enough to feed the entire population of Hainan for a year with a surplus. The only remaining problem would be transport capacity.
 
 During the few days the messenger was away, the fleet was not idle. In addition to measuring the hydrology and surrounding terrain, the survey team also sent out an investigation team to investigate other local resources. In less than two days, the dispatched team brought Ping Qiusheng a surprise.
 
