--- a/_posts/2012-8-18-5-23400.md
+++ b/_posts/2012-8-18-5-23400.md
@@ -12,7 +12,7 @@ The Chinese influence in the Ayutthaya Kingdom was very strong, and the dynasty 
 
 Because of this relationship, Chinese industry and commerce developed rapidly in the local area, and many people made great fortunes. The ordinary Chinese who were busy in those small, dark shops might be running businesses with a trade volume of tens or hundreds of thousands of taels of silver.
 
-Ping Qiusheng saw several Lin'gao-produced goods in the shops here, from straw hats, rum, "Australian" candies, white sugar, paper... Almost all of the 穿越集團's flagship products were sold here. However, the quantity was small, and the price was very expensive.
+Ping Qiusheng saw several Lin'gao-produced goods in the shops here, from straw hats, rum, "Australian" candies, white sugar, paper... Almost all of the transmigration group's flagship products were sold here. However, the quantity was small, and the price was very expensive.
 
 Goods have their own mobility. Whether it's high quality or low price, the fact that goods can automatically flow here shows that the market for "Australian goods" is broader than they estimated.
 
@@ -64,4 +64,4 @@ In his spare time, Ping Qiusheng often patiently tried to persuade Quark, hintin
 
 Ping Qiusheng did not trust Worawong. Quark also had great ambitions, but he was first and foremost a merchant, concerned with making money, and his reputation as a merchant had been recognized by the Council of Elders. Worawong, on the other hand, was likely to do what he had done to the Japanese merchants in the past when he saw a huge profit.
 
-Ping Qiusheng also released a message to the local Chinese and Japanese merchants here: Lin'gao would take as much rice, potassium salt ore, and timber as they could get. Any merchant here who was willing to serve the Australians and could directly transport the goods to Lin'gao or Sanya would be richly rewarded. He did not want Quark to monopolize the trade here. After all, when they were free, this place would be the direct territory of the 穿越集團, and it was not reassuring to have the food supply controlled by anyone.
+Ping Qiusheng also released a message to the local Chinese and Japanese merchants here: Lin'gao would take as much rice, potassium salt ore, and timber as they could get. Any merchant here who was willing to serve the Australians and could directly transport the goods to Lin'gao or Sanya would be richly rewarded. He did not want Quark to monopolize the trade here. After all, when they were free, this place would be the direct territory of the transmigration group, and it was not reassuring to have the food supply controlled by anyone.
