--- a/_posts/2012-8-20-5-23600.md
+++ b/_posts/2012-8-20-5-23600.md
@@ -40,7 +40,7 @@ After a period of "rectification," the Council of Elders became the master of th
 
 Because Changhua had a small population and almost no economy, although it was rich in natural resources, there was currently no ability to develop it. There were not many military affairs or civil affairs to manage, so the person sent to preside over the county government and concurrently serve as the commander of Changhua Fort was Kong Lingyang. Kong Lingyang was not an officer of the Fubo Army, but a genuine agricultural technician who worked in the Agricultural Committee. His appointment as the commander of Changhua Fort showed the Council of Elders' positioning of this place.
 
-Kong Lingyang was a "general" in the animal husbandry section of the Agricultural Committee. He and Yang Baogui were semi-colleagues, both having started as veterinarians and later working at the breeding station. Although his academic qualifications and work experience were very presentable, and he had even obtained a full set of professional tools for the animal husbandry and veterinary station and various breeding eggs and fine semen for the 穿越集團, after D-Day, he had been quietly assisting Yang Baogui in animal husbandry work in the Agricultural Committee for a long time, unwilling to appear too "professional," lest he be pigeonholed as a "technical personnel." From his personal experience in the old world, being a "technical personnel" was far less likely to lead to rapid advancement than being an "administrative personnel."
+Kong Lingyang was a "general" in the animal husbandry section of the Agricultural Committee. He and Yang Baogui were semi-colleagues, both having started as veterinarians and later working at the breeding station. Although his academic qualifications and work experience were very presentable, and he had even obtained a full set of professional tools for the animal husbandry and veterinary station and various breeding eggs and fine semen for the transmigration. After D-Day, he had been quietly assisting Yang Baogui in animal husbandry work in the Agricultural Committee for a long time, unwilling to appear too "professional," lest he be pigeonholed as a "technical personnel." From his personal experience in the old world, being a "technical personnel" was far less likely to lead to rapid advancement than being an "administrative personnel."
 
 Yang Baogui was now famous in the Council of Elders. He attended every expanded meeting of the Executive Committee on agricultural issues and was indeed very prominent, but in the end, he would define himself as a "chief veterinarian." Kong Lingyang's ambition was not there.
 
