--- a/_posts/2012-8-30-5-24600.md
+++ b/_posts/2012-8-30-5-24600.md
@@ -26,7 +26,7 @@ Then he read the surveillance report on the East India Company's trading post, e
 
 According to the report, this servant was very active, often moving around in Lin'gao, and his footprints were all over the places where foreigners were allowed to go. He went to Bopu Port almost every day, with the public excuse of buying fish.
 
-Finally, there was the report from the letter inspector of the General Political Security Bureau stationed at the General Post Office. The General Post Office had taken over the original postal system of the Ming government and had opened postal routes from Lin'gao to various counties in Hainan, with a post office branch in each county. However, these branches currently only handled the delivery of official documents and letters from the departments, enterprises, and military units under the Council of Elders. Private letters were limited to naturalized citizens and a few natives who had dealings with the 穿越集團.
+Finally, there was the report from the letter inspector of the General Political Security Bureau stationed at the General Post Office. The General Post Office had taken over the original postal system of the Ming government and had opened postal routes from Lin'gao to various counties in Hainan, with a post office branch in each county. However, these branches currently only handled the delivery of official documents and letters from the departments, enterprises, and military units under the Council of Elders. Private letters were limited to naturalized citizens and a few natives who had dealings with the transmigrators.
 
 The method of postal inspection was to open and inspect all the letters of some individuals and departments, and to conduct random inspections on others. Zhao Manxiong skipped the other parts and went directly to the postal inspection report on the East India Company's trading post.
 
@@ -52,7 +52,7 @@ The location of Project 2300 was the Lin'gao Special Chemical Complex. Although 
 
 The planning of the Lin'gao Special Chemical Complex was modeled after a certain explosives factory from the 156 projects of that era. Its main task was to produce gunpowder and explosives.
 
-Explosives were a key project for the 穿越者 to maintain their advantage. With the continuous expansion of the military and the demand for civil engineering, the early handicraft workshop-style production scale and laboratory-style production process had become far from sufficient to meet the demand.
+Explosives were a key project for thetransmigrators to maintain their advantage. With the continuous expansion of the military and the demand for civil engineering, the early handicraft workshop-style production scale and laboratory-style production process had become far from sufficient to meet the demand.
 
 In particular, the lack of a sufficient quantity of relatively safe high explosives severely limited both military and civilian applications. As a result, the military's stockpile of explosives could only be maintained at a low level. The ammunition reserve of the army, besides ensuring the daily training of the troops, was only enough for one campaign. The ammunition reserves of the various ships of the navy were also generally not at full capacity.
 
