--- a/_posts/2012-9-12-5-25900.md
+++ b/_posts/2012-9-12-5-25900.md
@@ -16,7 +16,7 @@ Lin Chuanqing invited a Senator with a background in thermodynamics to carefully
 
 Cattails are actually the Eastern subspecies of the most famous plant of ancient Egyptian civilization—papyrus. The ancient Egyptians used the long fibers of the cattail leaves to make papyrus paper. In China, besides making cushions, mattresses, and kneeling pads from the leaves, or using them for papermaking, the fluff was also an important material for cold protection.
 
-Since cattails grow well in highly saline lowlands and wetlands, the drainage department planted them extensively to treat sewage and reclaim coastal saline-alkali land. Compared to the small amount of wild kapok collected and purchased, and sawdust and diatomaceous earth which had other uses, cattail leaves and fluff became the cheapest and most effective insulation material the穿越 group could mass-produce themselves. It was widely mixed with cotton wadding to make the quilts needed for Operation Engine, and the pillows used by the Senators and their maids for their "gentle slumbers" were mostly filled with cattail fluff.
+Since cattails grow well in highly saline lowlands and wetlands, the drainage department planted them extensively to treat sewage and reclaim coastal saline-alkali land. Compared to the small amount of wild kapok collected and purchased, and sawdust and diatomaceous earth which had other uses, cattail leaves and fluff became the cheapest and most effective insulation material the transmigration group could mass-produce themselves. It was widely mixed with cotton wadding to make the quilts needed for Operation Engine, and the pillows used by the Senators and their maids for their "gentle slumbers" were mostly filled with cattail fluff.
 
 Although the production of cattail fluff was large, they still had to ensure the supply of materials for the northbound expedition. Therefore, Lin Chuanqing had only converted a total of ten cold-storage fishing boats. Three were used in the Beibu Gulf region, six in Sanya, and the other two were deployed to Hong Kong—the estuaries of large rivers are also rich fishing grounds.
 
