--- a/_posts/2012-9-6-5-25300.md
+++ b/_posts/2012-9-6-5-25300.md
@@ -40,7 +40,7 @@ The orderly brought a cigar box with a decorative seal bearing the words "Navy S
 
 He smoked his cigar, gazing at the forest of masts in the harbor and the occasional puff of black smoke. Newly built and refitted ships were gathering in the port; Operation Engine was imminent.
 
-Chen Haiyang and [Wen Desi][y002], who had summoned him on behalf of the Executive Committee, had both spoken with him. The Senate's first high-seas fleet was about to be formed, and there was no one else but Ming Qiu to command it. After all, Ming Qiu was not only the Minister of the Navy but also the only person in the entire穿越 group with experience commanding a fast-attack craft squadron.
+Chen Haiyang and [Wen Desi][y002], who had summoned him on behalf of the Executive Committee, had both spoken with him. The Senate's first high-seas fleet was about to be formed, and there was no one else but Ming Qiu to command it. After all, Ming Qiu was not only the Minister of the Navy but also the only person in the entire transmigration group with experience commanding a fast-attack craft squadron.
 
 However, he was over sixty. Although generally healthy, many doubted whether he had the stamina to command a naval squadron on a long-term operational cruise. Chen Haiyang had also told him "not to force himself."
 
