--- a/_posts/2013-1-26-5-39500.md
+++ b/_posts/2013-1-26-5-39500.md
@@ -12,7 +12,7 @@ tag: [normal]
 
 After taking a seat, Ming Qiu asked directly, "Looking at your file, you were a police officer before D-Day?"
 
-"Yes, I worked in traffic police for two years, then criminal investigation for three years, and the last year in the legal department, until the穿越," Xu Ke replied, sitting upright on the sofa with his hands on his knees, a little stiffly.
+"Yes, I worked in traffic police for two years, then criminal investigation for three years, and the last year in the legal department, until the transmigration," Xu Ke replied, sitting upright on the sofa with his hands on his knees, a little stiffly.
 
 "Don't be so formal, relax," Ming Qiu smiled. "You've been in the military, right?"
 
