--- a/_posts/2013-10-27-6-19700.md
+++ b/_posts/2013-10-27-6-19700.md
@@ -1,163 +1,163 @@
 ---
 layout: post
-title: 第一百九十七节　巡视组
+title: "Chapter 197: The Inspection Team"
 category: 6
 path: 2013-10-27-6-19700.md
 tag: [normal]
 ---
 
-　　山庄外面死掉的人中间，身份稍微重要一些尸体只有三具，两具是和尚，一个本地一个外地，都是张广请来的，都由本地的寺庙具结领走了，没什么疑点。
+Among the dead outside the villa, there were only three bodies of any significance. Two were monks, one local and one from out of town, both invited by Zhang Guang. They were claimed by the local temples, and there was nothing suspicious about them.
 
-　　剩下的一具尸体是个叫曹光九的秀才，据县里的衙役说，此人是破靴党，平日里专好包揽词讼，放高利贷，插手各种混账事，是个城郊出了名的光棍。
+The remaining body belonged to a scholar named Cao Guangjiu. According to the yamen runners, this man was a "worn-out boot," a notorious ruffian in the suburbs who specialized in monopolizing lawsuits, usury, and getting involved in all sorts of shady business.
 
-　　对比中元节当天的击杀记录，可以认定，这个曹光九就是当晚狙击手狙杀的人群中的某个首脑人物。
+Comparing this with the kill records from the Ghost Festival, it was confirmed that this Cao Guangjiu was one of the leaders targeted by the snipers that night.
 
-　　粘杆处利用在衙门内的关系，提前对曹光九的尸体进行了全面的检查。扣留了所有他们感兴趣的随身物品。
+The Zhan Gan Chu used its connections within the yamen to conduct a thorough examination of Cao Guangjiu's body beforehand, confiscating all personal items of interest.
 
-　　曹光九的随身物品并不多，除了银子之外，只有一个夏季常用的香囊，一柄折扇和一个私人的闲章这都是当年读书人随身带的普通玩意。
+Cao Guangjiu didn't have many belongings. Besides some silver, there was only a scented sachet commonly used in summer, a folding fan, and a personal leisure seal—all common trinkets for a scholar of that era.
 
-　　“……主要是那柄扇子，上面的落款是‘弄石叟……’”
+"...The main thing is the fan. The signature on it is 'Nong Shi Sou...'"
 
-　　赵引弓眼皮一跳：“你是说，这扇子就是‘石翁’送的？”
+Zhao Yigong's eyelids twitched. "Are you saying this fan was a gift from 'Shi Weng'?"
 
-　　“很有可能。”
+"It's highly likely."
 
-　　赵引弓沉吟着，中元节晚上成功的击杀某种程度上是为敌人灭了一个关键证人的口。不过，有这柄扇子和知道了曹光九的身份，对他们找出幕后主使又近了一步。
+Zhao Yigong pondered. The successful assassination on the night of the Ghost Festival had, to some extent, silenced a key witness for the enemy. However, with this fan and the knowledge of Cao Guangjiu's identity, they were one step closer to finding the mastermind.
 
-　　“还有就是死在郝元据点里的三个人。”赵通说。
+"Then there are the three people who died at Hao Yuan's stronghold," Zhao Tong said.
 
-　　这三个人虽然被发现的时候都身无一物，但是粘杆处的原镖局成员还是从他们手上脚上的老茧，身上的伤痕都一系列特征判断出。这三个人都是习武之人，而且很可能是镖局从业人员。
+Although these three were found with nothing on them, the former escort agency members of the Zhan Gan Chu were able to determine from the calluses on their hands and feet, the scars on their bodies, and a series of other features that all three were martial artists, and likely worked for an escort agency.
 
-　　“死因都是被人下毒……”
+"The cause of death for all of them was poisoning..."
 
-　　“下毒？”赵引弓吓了一跳。
+"Poisoning?" Zhao Yigong was startled.
 
-　　“对，看来是被灭口的。”赵通说。“他们应该和郝元不是一伙，可能是那个石翁派来的人……”
+"Yes, it seems they were silenced," Zhao Tong said. "They probably weren't with Hao Yuan, but were sent by that Shi Weng..."
 
-　　联想到粘杆处几次试图跟踪郝元都没有成功，全是被镖局人员拦截，这三个人很有可能就是当初拦截粘杆处，暗中保护郝元行踪的镖师。
+Considering that the Zhan Gan Chu's several attempts to tail Hao Yuan had all been intercepted by escort agency personnel, it was highly probable that these three were the very escorts who had previously blocked the Zhan Gan Chu and secretly protected Hao Yuan's movements.
 
-　　下手够狠。赵引弓心想，郝元这一手直接和“石翁”掐断了所有的联系，即使能够找出石翁。也得不到郝元下落的任何讯息了。
+*Ruthless,* Zhao Yigong thought. With this move, Hao Yuan had completely severed all ties with "Shi Weng." Even if they could find Shi Weng, they wouldn't get any information about Hao Yuan's whereabouts.
 
-　　由于三个人都是“无人认领”，所以粘杆处以慈惠堂“掩埋无主尸”为由把这三具尸体弄到了手，进行了详细的检查。
+Since the three bodies were "unclaimed," the Zhan Gan Chu, under the pretext of the Cihuitang "burying unclaimed corpses," took possession of them and conducted a detailed examination.
 
-　　从他们身上的衣着上发现了重大的线索。这三个人脚上穿得靴子都是京师一家有名的鞋店制做的。
+A major clue was discovered on their clothing. The boots worn by all three men were made by a famous shoe shop in the capital.
 
-　　“怎么认出来的？”
+"How did you recognize them?"
 
-　　“这种靴子只有在京师那家鞋店才有得做。在习武的人中间享有盛名，京师镖局的人尤其爱穿。”
+"These boots are only made at that one shop in the capital. They have a great reputation among martial artists, and the escorts from the capital's agencies are particularly fond of wearing them."
 
-　　“这么说是京师镖局的人了。”
+"So they are from a capital escort agency."
 
-　　“是，我们已经拍了三个人的照片，情报局已经批准让京师站的人帮我们调查三个人的具体身份和他们的社会关系。”
+"Yes. We have already taken photos of the three men. The Intelligence Bureau has approved our request for the Beijing station to help us investigate their specific identities and social connections."
 
-　　“很好。”赵引弓点头赞许。“尽一切力量把郝元给我揪出来。扇子的线索也要加紧查。”
+"Very good." Zhao Yigong nodded in approval. "Use all resources to find Hao Yuan for me. And step up the investigation on the fan's clue."
 
-　　赵曼熊小心地。慢慢地从眼前推开装看文件的卷宗，缓慢地从桌前站起身，在办公室里踱步。他站在窗前，注视院子里的麻雀。临高的生态环境虽然正以日新月异的速度破坏中，但是自然环境依然比之21世纪要好得多。鸟类很多。
+Zhao Manxiong carefully, slowly pushed aside the file he was pretending to read, and slowly rose from his desk to pace around the office. He stood by the window, watching the sparrows in the courtyard. Although Lingao's ecosystem was being destroyed at an ever-increasing rate, the natural environment was still much better than in the 21st century. There were many birds.
 
-　　这些麻雀不怕人，每天都到百仞城的街道和院子里觅食。在经过三年苦难的行军，元老们的生活水准大幅度提高，已经不是看到活得物件都是会走会飞的肉类了。麻雀们的生存环境自然也得到了极大的改善。
+These sparrows were not afraid of people and came to the streets and courtyards of Bairen City to forage every day. After three years of a difficult march, the Elders' living standards had greatly improved. They no longer saw every living thing as walking or flying meat. The sparrows' living environment had naturally improved significantly as well.
 
-　　看着麻雀不慌不忙地觅食。很容易让人产生一种空虚的倦怠感。他默默的抽了一口雪茄，转过身后。看了看午木，然后回到桌前，头向文件卷宗点了一下，问道：“这件事你怎么看。”
+Watching the sparrows foraging unhurriedly easily induced a sense of empty weariness. He silently took a drag from his cigar, turned around, looked at Wu Mu, then returned to his desk, nodded towards the file, and asked, "What do you think of this matter?"
 
-　　“这件事不同寻常，所以我必须多方验证其可靠性。”
+"This matter is unusual, so I must verify its reliability from multiple sources."
 
-　　“您向谁验证了这个消息，可靠吗？”
+"Who did you verify this information with? Is it reliable?"
 
-　　“完全可靠。我通过派驻在杭州站的十人团成员对此进行了验证。另外，在这件事被正式提出之前，杭州站保卫部和十人团成员也有过相关的报告，不过比较零碎。”
+"Completely reliable. I verified it through the Ten-Man Group members stationed at the Hangzhou station. In addition, before this matter was formally raised, the Hangzhou station's security department and the Ten-Man Group members had also submitted related reports, though they were rather fragmented."
 
-　　“非常感谢。”
+"Thank you very much."
 
-　　他把报告拉到面前上面贴着着“绝密，仅此一份，限元老阅读”的标签再次浏览了一遍。报告是赵引弓是写得。写得很杂，头绪凌乱，但是大致的意思还是很明白的：杭州站发现了一个疑似穿越者，他的表现、言论似乎都说明他来自何元老们的同一个时空。赵引弓要求元老院对此进行专门的调查并采取有力的处置，以免后患。
+He pulled the report in front of him. It was labeled "Top Secret, Single Copy, Elders Only." He skimmed through it again. The report was written by Zhao Yigong. It was messy and disorganized, but the general meaning was clear: the Hangzhou station had discovered a suspected transmigrator. His behavior and words seemed to indicate that he came from the same time and space as the Elders. Zhao Yigong requested the Senate to conduct a special investigation and take decisive action to prevent future trouble.
 
-　　这份报告是由专人送来得，由办公厅开拆之后在执委会进行了传阅，随后被直接送到了政治保卫局。
+The report had been delivered by a special courier, opened by the General Office, circulated among the Executive Committee, and then sent directly to the Political Security Bureau.
 
-　　显然这份报告还没有提到元老院常委会上，不过，不会很久了，一旦报告到了元老院常委会，整件事情必然在元老院掀起轩然大波。
+Obviously, the report had not yet been brought to the Senate Standing Committee, but it wouldn't be long. Once the report reached the Senate Standing Committee, the whole affair would inevitably cause a huge uproar in the Senate.
 
-　　自然了，赵引弓打的算盘，无非借此将杭州站的一堆破事就此掩盖过去把水搅浑了什么都好说。
+Naturally, Zhao Yigong's scheme was to use this to cover up the mess at the Hangzhou station. By muddying the waters, everything would be easier to explain.
 
-　　不过，此事就严重性来说，的确够得上眼下的头号国家安全事件了。
+However, in terms of severity, this was indeed the number one national security incident at the moment.
 
-　　赵曼熊沉默不语、在办公室走了很久，然后站到午木面前，问道：“以您的看法，”他向桌上点了一下头，“这件事和‘甲事件’是否有关系？”
+Zhao Manxiong was silent, pacing the office for a long time. Then he stood in front of Wu Mu and asked, "In your opinion," he nodded at the desk, "is this matter related to 'Incident A'?"
 
-　　“很难说，很难说，赵曼熊同志。”
+"It's hard to say, very hard to say, Comrade Zhao Manxiong."
 
-　　“为什么？”
+"Why?"
 
-　　“东沙岛的美国沉船，我们现在已经全部调查清楚了。但是，根据兰度提供的资料，这船上所有的人都和郝元的形象不符。”
+"We have now fully investigated the American shipwreck on Dongsha Island. However, according to the information provided by Lando, none of the people on that ship match Hao Yuan's description."
 
-　　船上的人，德国人已经死了，尸体也找到了。兰度现在是元老，唯一下落不明的是黑尔和两个东南亚水手。黑尔他们有兰度提供的模拟像：是个中年壮汉。不是郝元这样的年轻人，而且郝元也不是东南亚长相。
+Of the people on the ship, the German was already dead, and his body had been found. Lando was now an Elder. The only ones unaccounted for were Hale and two Southeast Asian sailors. They had a composite sketch of Hale provided by Lando: a middle-aged, sturdy man. Not a young man like Hao Yuan, and Hao Yuan did not have Southeast Asian features.
 
-　　这说明郝元并不是这艘美国沉船上的人，除非兰度隐瞒了船上还有其他人。
+This meant that Hao Yuan was not from the American shipwreck, unless Lando had concealed the presence of others on board.
 
-　　“您认为。兰度可能欺骗我们么？”
+"Do you think Lando could be deceiving us?"
 
-　　“不，我认为不可能。”午木摇头，“另外，我觉得我们怀疑一位元老是不合适的……”
+"No, I don't think so." Wu Mu shook his head. "Besides, I don't think it's appropriate for us to suspect an Elder..."
 
-　　“合不合适，让宅党去讨论比较好。这么说您认为兰度直到离开临高去马尼拉之前都是诚实的。是这样吗，午木同志？”赵曼熊挪动着壮硕的身子，靠在办公桌上。审视地看了看午木的面孔，好像要用自己的眼睛拥抱他似的。
+"Whether it's appropriate or not is best left for the Otaku Party to discuss. So you believe Lando was honest until he left Lingao for Manila. Is that right, Comrade Wu Mu?" Zhao Manxiong shifted his bulky frame, leaning against the desk. He scrutinized Wu Mu's face, as if trying to embrace him with his eyes.
 
-　　“是的，我认为是这样。”午木不安的挪动了下身子。他的牛皮武装带咯吱作响。
+"Yes, I believe so." Wu Mu shifted uncomfortably. His leather Sam Browne belt creaked.
 
-　　“好吧。我们认为元老们都是可靠的。那么这位郝元是从哪里冒出来得呢？”
+"Alright. We believe the Elders are reliable. So where did this Hao Yuan come from?"
 
-　　“或许这个世界上还有其他类似我们的穿越者存在……”
+"Perhaps there are other transmigrators like us in this world..."
 
-　　“您说得非常有意思，这的确是合理的解释之一。”赵曼熊摸着自己的下巴。
+"What you say is very interesting. That is indeed one of the reasonable explanations." Zhao Manxiong stroked his chin.
 
-　　“我们现在有一个接触过他的人。报告里提到的西华已经在前往临高的路上了。我想我们能够通过审讯她来确认郝元是否是穿越者。等她一来，就一切真相大白了。”
+"We now have someone who has had contact with him. The Xihua mentioned in the report is already on her way to Lingao. I think we can confirm whether Hao Yuan is a transmigrator by interrogating her. Once she arrives, the truth will be revealed."
 
-　　“不，我觉得事情没这么简单。除非我们能抓到郝元本人。否则一个只和他接触不多的人是不可能给我们提供太关键的证词的。您不要忘记。除了是穿越者本人。郝元也可能是和穿越者有关联者。”
+"No, I don't think it's that simple. Unless we can capture Hao Yuan himself. Otherwise, someone who has had little contact with him is unlikely to provide us with any crucial testimony. You mustn't forget. Besides being a transmigrator himself, Hao Yuan could also be someone associated with a transmigrator."
 
-　　的确，这样的话就可以把郝元和黑尔联系在一起了。但是午木觉得有点勉强，为什么郝元就不能是一个独立的穿越者呢？
+Indeed, that would link Hao Yuan to Hale. But Wu Mu felt it was a bit of a stretch. Why couldn't Hao Yuan be an independent transmigrator?
 
-　　“为什么他不能是一个独立的穿越者呢？”
+"Why can't he be an independent transmigrator?"
 
-　　“直觉。”赵曼熊微笑着说。
+"Intuition," Zhao Manxiong said with a smile.
 
-　　这算什么理由！故弄玄虚。午木暗骂道，他知道自己的表情会出卖他，所以没有掩饰：“这是不是有点牵强……”
+*What kind of reason is that! Just being mysterious.* Wu Mu cursed inwardly. He knew his expression would betray him, so he didn't hide it. "Isn't that a bit far-fetched..."
 
-　　“不，一点不牵强。因为这是目前最有可能的一种解释。”赵曼熊说，“虽然我们没有郝元的第一手的资料，但是从目前已经掌握的情报看。他的行事方法，做事风格等等都表现出他是一个有野心有能力的人。他在杭州时间不算很长。却已经有了相当的局面。这说明他掌握着相当大的资源。”
+"No, not at all. Because it is currently the most likely explanation." Zhao Manxiong said, "Although we don't have first-hand information on Hao Yuan, from the intelligence we have gathered so far, his methods, style, and so on all show that he is an ambitious and capable person. He hasn't been in Hangzhou for long, yet he has already established a considerable presence. This shows that he has significant resources at his disposal."
 
-　　“您说得对，赵曼熊同志。”
+"You're right, Comrade Zhao Manxiong."
 
-　　“好吧，我们回到您的论点上：一个单穿者。”赵曼熊把快要烧到手指的雪茄摁灭在烟灰缸里，“我们已经知道：一个单穿者，只要有真本事加上运气足够好，在这个时空里有可能活下来，甚至可以活得很好。兰度先生就是一个例子。但是，要赤手空拳的开创一个局面，那是非常非常难的。赵引弓既然说过，郝元在杭州不经营产业，自己过着近乎苦行僧的生活，却有大量的资源可以支配，这就说明他背后有着相当的力量在支撑他。”
+"Alright, let's go back to your point: a lone transmigrator." Zhao Manxiong stubbed out the cigar that was about to burn his fingers in the ashtray. "We already know that a lone transmigrator, as long as they have real skills and enough luck, can survive in this time and space, and even live well. Mr. Lando is an example. However, to build something from scratch is very, very difficult. Since Zhao Yigong said that Hao Yuan doesn't run any businesses in Hangzhou and lives an almost ascetic life, yet has a large amount of resources to command, it means that there is a considerable force supporting him."
 
-　　“您是说，郝元可能和马尼拉的黑尔有关了，郝元是黑尔派来得一颗棋子？”
+"Are you saying that Hao Yuan might be connected to Hale in Manila, that Hao Yuan is a pawn sent by Hale?"
 
-　　赵曼熊点头，“午木同志，我们要习惯于把浮现出来的各种黑线连在一起看，这样才能尽快的搞清楚敌人的阴谋诡计。您只要回忆一下最近我们经手过的案件就知道，黑尔的手已经伸到了中国。你可以这么认为：郝元是另外一个郑芝龙。”
+Zhao Manxiong nodded. "Comrade Wu Mu, we must get used to connecting the various black threads that emerge. Only then can we quickly figure out the enemy's plots and schemes. If you just recall the recent cases we've handled, you'll know that Hale's hand has already reached into China. You can think of it this way: Hao Yuan is another Zheng Zhilong."
 
-　　“用他来牵制我们？”
+"To use him to tie us down?"
 
-　　“完全正确。只有我们被拖在中国沿海，才不会打搅他在菲律宾的事业假如他真得在那里的话。”
+"Exactly. Only when we are bogged down on the coast of China will we not interfere with his business in the Philippines, if he is indeed there."
 
-　　“那就得看兰度先生在马尼拉能搜集到什么情报了。”
+"Then it depends on what intelligence Mr. Lando can gather in Manila."
 
-　　“兰度先生是归对外情报局掌握的。他的事情暂时我们还管不着。”赵曼熊慢条斯理的说道，“我们先把突破口放在杭州站上。”
+"Mr. Lando is under the jurisdiction of the Foreign Intelligence Bureau. We can't meddle in his affairs for now." Zhao Manxiong said slowly, "Let's focus our breakthrough on the Hangzhou station first."
 
-　　他把身体直了起来，恢复了慢吞吞的踱步：“您知道吗？执委会昨天已经召开了一个秘密扩大会议，参加的人我就不和您一一列举了。不过会上的一个决议我可以告诉您。”他转身注视着午木，脸上露出一丝微笑：
+He straightened his body and resumed his slow pacing. "Did you know? The Executive Committee held a secret enlarged meeting yesterday. I won't list all the participants for you. But I can tell you one of the resolutions from the meeting." He turned to face Wu Mu, a slight smile on his face.
 
-　　“不，不，您用不着感到不安，我告诉您的是您的职权范围内完全应该知道的事情。”
+"No, no, you don't need to feel uneasy. What I'm telling you is something you should know within your authority."
 
-　　“是的。地区副总指挥同志。”
+"Yes, Comrade Deputy Regional Commander."
 
-　　“我长话短说，执委会已经这次会议上做出决定，将派出巡视组前往所有的驻外站和基地。我就不一一列举那一长串地名了。”他看了看自己的脚尖，“当然，巡视组并不针对任何特点的地点或者个人。”
+"I'll be brief. The Executive Committee has decided at this meeting to send inspection teams to all external stations and bases. I won't list that long string of place names." He looked at his own feet. "Of course, the inspection teams are not targeting any specific location or individual."
 
-　　午木心领神会：“我明白，赵曼熊同志。”
+Wu Mu understood. "I understand, Comrade Zhao Manxiong."
 
-　　“是啊，您明白就好。我想我们很多同志都会明白的。”赵曼熊说道，“执委会的意见是这次巡视将以契卡人员为主，重点是审计项目开支。特别是各站的基础建设和项目投资超预算问题。当然其他部门也要派员参加。”
+"Yes, it's good that you understand. I think many of our comrades will understand." Zhao Manxiong said, "The Executive Committee's opinion is that this inspection will be dominated by Cheka personnel, with a focus on auditing project expenditures, especially the over-budget issues of infrastructure and project investment at each station. Of course, other departments will also send personnel to participate."
 
-　　“您要我去参加巡视组吗？”
+"Do you want me to join the inspection team?"
 
-　　“不，这次您不要去。你的身份太重要，去了会给同志们造成困扰的。你另外安排一位元老同志去，他得是个不大出名的人。最好很少有人知道他。当然……你知道该怎么选择。”
+"No, you shouldn't go this time. Your identity is too important, and your presence would cause trouble for the comrades. You can arrange for another Elder comrade to go. He should be someone not well-known. Preferably someone few people know. Of course... you know how to choose."
 
-　　“是的，地区副总指挥同志。”
+"Yes, Comrade Deputy Regional Commander."
 
-　　“好啦，您去工作吧。晚上把这位同志的材料交给我。”赵曼熊从裤兜里掏出一块手帕擦了擦额头上的汗，“这鬼天气！”
+"Alright, you can go back to your work. Give me the materials on this comrade tonight." Zhao Manxiong took a handkerchief from his trouser pocket and wiped the sweat from his forehead. "This damn weather!"
 
-　　赵曼熊亲自打开办公室的门，送走了午木。虽然没有参加，但是他知道昨天执委会的秘密扩大会议上一度争论的十分激烈，关于驻外站的定位和元老的权限问题，各方都有自己的立场。
+Zhao Manxiong personally opened the office door and saw Wu Mu out. Although he hadn't participated, he knew that yesterday's secret enlarged meeting of the Executive Committee had been very heated. Regarding the positioning of the external stations and the authority of the Elders, all sides had their own positions.
 
-　　无论是济州岛还是杭州，在元老院内部都有自己的代言人。牵扯到这类外派站点和元老的议题总是会引起极大的争议。
+Whether it was Jeju Island or Hangzhou, they had their own spokespersons within the Senate. Issues involving such external stations and Elders always caused great controversy.
 
-　　最终各方勉强达成的共识是各驻外站的“脱缰”趋势需要一定的遏制，派出巡视组的目的无非是敲山震虎，同时也实事求是地看一看各驻外站的实际情况。仅仅看报告来进行讨论显然是不够的。
+In the end, the consensus reluctantly reached by all parties was that the "runaway" trend of the external stations needed to be curbed to some extent. The purpose of sending inspection teams was nothing more than to make a show of force, and at the same time, to realistically assess the actual situation of each external station. It was clearly not enough to just discuss based on reports.
 
-　　赵曼熊对什么外派元老的“独走”之类并不感兴趣，在他看来并不重要，在目前的体制下，任何元老都做不到真正的“独走”。无非是元老院内各派对有限资源的争夺反应在政治斗争的层面上。
+Zhao Manxiong was not interested in the "solo runs" of the dispatched Elders. In his view, it was not important. Under the current system, no Elder could truly "go solo." It was merely a reflection of the struggle for limited resources among the various factions within the Senate at the political level.
 
-　　在这个问题上，不止一次有元老试图拉拢他，希望从他这里得到不利于外派元老的“重磅炸弹”，这些企图他全部予以了拒绝。他不打算把自己和政治保卫总局牵扯进去。
+On this issue, more than one Elder had tried to win him over, hoping to get a "bombshell" from him that would be detrimental to the dispatched Elders. He had rejected all these attempts. He had no intention of getting himself and the Political Security Bureau involved.
