--- a/_posts/2013-10-29-6-19900.md
+++ b/_posts/2013-10-29-6-19900.md
@@ -1,85 +1,83 @@
 ---
 layout: post
-title: 第一百九十九节　契卡
+title: "Chapter 199: The Cheka"
 category: 6
 path: 2013-10-29-6-19900.md
 tag: [normal]
 ---
 
-　　“关于各驻外站经济方面的一些问题，我根据研究掌握的材料已经撰写了一份备忘录，请您过目。”裔凡兴致勃勃的从假冒BOSS公文包里取出一份文件递给[马千瞩][y005]。关于地方与中央的分权问题，财政收入如何分配，作为一个五道口的干将他是深有研究的。
+"Regarding some of the economic issues at the various external stations, I have written a memorandum based on the materials I have studied. Please have a look." Yi Fan enthusiastically took out a document from his fake BOSS briefcase and handed it to [Ma Qianzhu][y005]. As a seasoned expert from Wudaokou, he had deeply researched the issues of power division between local and central authorities and the distribution of fiscal revenue.
 
-　　[马千瞩][y005]接过文件随手递给身边的秘书候闻永：“裔凡同志，你这次的任务很要紧。一定要慎之又慎。”他站起身来，握住了仓促站起来的裔凡的手，“有什么事情要及时向组织上汇报。”
+[Ma Qianzhu][y005] took the document and casually handed it to his secretary, Hou Wenyong. "Comrade Yi Fan, your mission this time is very important. You must be extremely cautious." He stood up and shook the hand of Yi Fan, who had hastily stood up. "Report to the organization in a timely manner if anything comes up."
 
-　　裔凡告辞出来，出了执委会大院。要了一辆公务马车回自己的办公室。
+Yi Fan took his leave and exited the Executive Committee compound. He called for an official horse-drawn carriage to take him back to his office.
 
-　　契卡的办公室随着元老院政权机构和国有企业的不断扩大而膨胀着。现在已经拥有三百名归化民工作人员的机关了，占据了整整一栋三层楼。
+The Cheka's offices were expanding along with the Senate's government agencies and state-owned enterprises. It was now an organization with three hundred naturalized citizen staff members, occupying an entire three-story building.
 
-　　楼道的算盘劈啪作响，抱着文件盒的工作人员在走廊里川流不息。除了条件简陋一些，这里的气氛就如同旧时空一个普通的审计事务所一样。
+The clatter of abacuses echoed in the hallways, and staff members carrying file boxes bustled through the corridors. Apart from the simpler conditions, the atmosphere here was just like an ordinary accounting firm in the old time-space.
 
-　　想到自己当初带着好不容易要来的二十个归化民实习生拉起了班子，自己和金枝娇几个元老没日没夜的教他们怎么打算盘，看账本，做审计报表。第一次为元老院执行审计任务的时候还经常因为几个归化民的粗心和“乱作为”搞得全套工作大返工。在堆满了纸张的屋子里没日没夜的划拉计算器和电脑，那段黑暗日子一直到现在还不时在几位契卡元老的噩梦中出现。
+He thought back to when he had started the organization with twenty hard-won naturalized citizen interns. He and a few other Elders like Jin Zhijiao had worked day and night teaching them how to use the abacus, read ledgers, and prepare audit reports. The first time they performed an audit for the Senate, they often had to redo the entire job because of the carelessness and "freelancing" of a few naturalized citizens. The dark days of endlessly fiddling with calculators and computers in a room piled high with paper still appeared in the nightmares of several Cheka Elders from time to time.
 
-　　不过最近契卡的事务已经愈来愈上正规了，新进入的工作人员大多有初小学历，算盘和四则运算之类的最基础的东西至少是不用教了。整顿粮赋之后，从各县衙门里接收留用的许多精通业务的户房吏和粮差，这批人一部分去了税务总局，余下的人就落到契卡手里这些人精通传统记账，对里面的各种“花样”更是了如指掌。为此契卡的工作人员还被多次抽调去参加清点“战利品”和对土著合作者的账本的突击盘查。
+However, the Cheka's affairs had become more and more regular recently. Most of the new staff had at least a primary school education, so at least the most basic things like using an abacus and the four arithmetic operations didn't need to be taught. After the grain tax reform, many experienced household department clerks and grain tax collectors from the various county yamens were retained. Some of them went to the General Administration of Taxation, and the rest fell into the hands of the Cheka. These people were proficient in traditional bookkeeping and were well-versed in all the "tricks" involved. Because of this, Cheka staff had been repeatedly seconded to participate in inventorying "spoils of war" and conducting surprise inspections of the account books of native collaborators.
 
-　　裔凡的办公室在三楼的最高处。在布置办公室的时候有人就提醒过他，顶楼的办公室在临高这种亚热带环境下，夏季会非常的炎热。司凯德的办公室就是前车之鉴。他的办公室楼顶好歹还是从旧时空带来的原装轻型隔热墙材做的，到了裔凡这可就只有临高自己制造的隔热材料了，用木棉做填充料的隔热板。这东西的效果自然是相当可疑的。
+Yi Fan's office was on the top floor, at the very top of the building. When the office was being set up, someone had reminded him that a top-floor office in Lingao's subtropical environment would be extremely hot in the summer. Sikade's office was a lesson. The roof of his office was at least made of original lightweight insulation wall materials from the old time-space. By the time it came to Yi Fan, there were only Lingao's own manufactured insulation materials—insulation boards filled with kapok. The effectiveness of this stuff was naturally quite questionable.
 
-　　为了解决这一问题，梅晚又在裔凡办公室的楼顶上加装了一个展望台，展望台上再搭建一个遮阳篷。才算比较圆满的解决了问题。
+To solve this problem, Mei Wan added a lookout platform on the roof of Yi Fan's office, and then built a sunshade over the platform. Only then was the problem considered more or less solved.
 
-　　裔凡穿着一件肥大的明显不合身的立领棉布上衣，类似中山装的款式，因为临高的夏天实在过于炎热，没法套上一双马靴所以他定做的棉布马裤也只能从略了。
+Yi Fan wore a loose, ill-fitting tunic-style cotton jacket, similar to a Zhongshan suit. Because Lingao's summers were too hot, he couldn't wear a pair of riding boots, so the custom-made cotton breeches had to be omitted.
 
-　　办公室的窗户上都挂着竹帘，把灼热的阳光抵挡在外面。为了有足够的采光节约用电，临高的所有办公室都采用的大幅玻璃窗。这么一来到了夏天就变得非常炎热。为此，在办公室当中放了一个大木盆，里面是一大块的冰，正冒着白气。他刚一落座，裔办的女秘书就送来了冰镇的毛巾和凉茶。
+The windows of the office were all hung with bamboo curtains, blocking the scorching sunlight. To have enough light and save electricity, all offices in Lingao used large glass windows. This made them very hot in the summer. For this reason, a large wooden basin was placed in the middle of the office, containing a large block of ice that was emitting white mist. As soon as he sat down, Yi Fan's female secretary brought him a chilled towel and herbal tea.
 
-　　“去请金主任来。”裔凡用毛巾擦了擦了脸和脖子，毛巾上有一股淡淡的茉莉花香味，他瞧了一眼秘书，秘书垂着眼睛不说话，一脸幽怨。裔凡这才想起自己好久没有“临幸”她了。这个秘书是他最早的时候从女仆学校买来得生活秘书，因为没摇到好的号，只买了一个C级。后来裔凡摇到了号，在拍卖会上买到了一个A级的。于是原本就不甚满意的C级旧人被他借口“是可造之材”送去芳草地的行政培训班培训，安插到办公室里当个秘书。当然，时不时的，裔凡同学还会临幸她一番，换换口味。
+"Go and ask Director Jin to come." Yi Fan wiped his face and neck with the towel. The towel had a faint jasmine scent. He glanced at the secretary. The secretary kept her eyes down and said nothing, a resentful look on her face. Only then did Yi Fan remember that he hadn't "graced her with his presence" for a long time. This secretary was a life secretary he had bought from the maid school in the early days. Because he hadn't drawn a good number, he had only bought a C-class one. Later, Yi Fan drew a good number and bought an A-class one at an auction. Thus, the originally unsatisfactory C-class old flame was sent by him to the administrative training class at Fangcaodi under the pretext of being "promising material," and placed in the office as a secretary. Of course, from time to time, Comrade Yi Fan would still grace her with his presence for a change of pace.
 
-　　原本还想温言抚慰几句，一想到自己脑门子上还有一堆事情，就什么都懒得说了。
+He had wanted to offer a few words of comfort, but when he thought of the pile of things on his mind, he couldn't be bothered to say anything.
 
-　　几分钟之后，金枝娇来了。她穿着一身“1634年夏季新款连衣裙”，据说是飞云社的几个女人搞的时尚俱乐部里弄出来的玩意，目前仅供女元老和元老的妻子购买。
+A few minutes later, Jin Zhijiao arrived. She was wearing a "1634 Summer New Style Dress," said to be a creation of the fashion club run by a few women from the Feiyun Society, currently only available for purchase by female Elders and the wives of Elders.
 
-　　裔凡对自己的这个副主任一直心存忌惮，倒不是她业务能力如何出色或者野心勃勃之类的，而是她丈夫胡木野是临高电信的工程师，专门负责维护百仞城内的电话交换台，长期在电话交换台周边活动。众所周知，元老们谈工作大多是通过固定电话进行的，一些重要通知和报告也是通过固定电话网进行的裔凡对自己的谈话是否被副处长的老公窃听有着一种病态的怀疑。
+Yi Fan had always been wary of his deputy director, not because of her outstanding professional ability or ambition, but because her husband, Hu Muye, was an engineer at Lingao Telecom, specifically responsible for maintaining the telephone exchange in Bairen City, and was often active around the telephone exchange. It was well known that Elders mostly discussed work over the fixed-line telephone, and some important notices and reports were also conducted through the fixed-line telephone network. Yi Fan had a morbid suspicion that his conversations were being eavesdropped on by his deputy director's husband.
 
-　　“枝娇呀。”裔凡一直用这种貌似亲热的口吻称呼她，“我这次要参加巡视组，大概要出门几个月。这契卡的摊子就交给你了。”
+"Zhijiao," Yi Fan always addressed her in this seemingly affectionate tone, "I'm going to join the inspection team this time, and I'll probably be away for a few months. I'm leaving the Cheka's affairs to you."
 
-　　“你放心好了。”金枝娇抿嘴一笑，“少了你，这审计所的大楼不会塌掉的。”
+"You can rest assured," Jin Zhijiao smiled with pursed lips. "The audit office building won't collapse without you."
 
-　　金枝娇不喜欢那个拗口的全称：肃清腐败及怠工特别审计委员会，也不喜欢契卡这个怪异的简称，她一直坚持叫这里“审计所”。虽然裔凡一直对她怀着戒备之心，但是两人之间因为工作接触多得关系，倒是显得很是亲密。
+Jin Zhijiao didn't like the awkward full name: Special Audit Committee for Purging Corruption and Idleness, nor did she like the strange abbreviation "Cheka." She always insisted on calling it the "Audit Office." Although Yi Fan was always on guard against her, the two of them appeared quite close due to their frequent work contact.
 
-　　“嘿嘿，”裔凡干笑了几声，“咱们契卡的工作你也知道的，就一个字‘烦’，而且还到处不落好，就是一得罪人的活。我这一走，你这几个月压力不小啊。”
+"Hehe," Yi Fan gave a dry laugh. "You know the work of our Cheka. It's just one word: 'annoying.' And we don't get any credit for it anywhere. It's a job that offends people. With me gone, you'll be under a lot of pressure for the next few months."
 
-　　“不碍事。我们都是按照执委会的命令工作，大家都是元老，who怕who。”金枝娇满不在乎的说道，“就是你那啥契卡办得案子怎么办？我一点头绪都没有。”
+"It's no problem. We all work according to the orders of the Executive Committee. We're all Elders, who's afraid of whom," Jin Zhijiao said nonchalantly. "But what about the cases handled by your Cheka? I don't have a clue."
 
-　　凡是牵涉到具体的归化民贪腐案件，金枝娇是从不插手的，具体经办事由契卡下面的第五处负责。五处没有处长，是由裔凡直接领导的。甚至五处的办公地点也不在这栋楼里，而是在相邻的院子里。
+Jin Zhijiao never got involved in specific cases of corruption among the naturalized citizens. The specific handling was the responsibility of the Fifth Division under the Cheka. The Fifth Division had no director and was directly led by Yi Fan. Even the Fifth Division's office was not in this building, but in the adjacent courtyard.
 
-　　“找你来就是为了说这些事。”裔凡从文件柜里拿出一叠文件夹，“这些都是目前五处正在经办的案子。大多数案子已经上了轨道，你就等着办理结束之后把下关，签个字就可以直接移送到仲裁庭去处理了。”
+"I called you here to talk about these things." Yi Fan took a stack of folders from the file cabinet. "These are all the cases currently being handled by the Fifth Division. Most of the cases are already on track. You just have to wait for them to be concluded, give the final approval, and sign off, and they can be directly transferred to the Arbitration Tribunal for handling."
 
-　　“好。”金枝娇接过文件夹，随手翻了下，牵扯到的部门有十几个，涉案的金额从几百元到十几万元流通券都有。
+"Okay." Jin Zhijiao took the folders and flipped through them casually. More than a dozen departments were involved, and the amounts in question ranged from a few hundred to over a hundred thousand circulation coupons.
 
-　　目前契卡的立案标准是涉案金额流通券二百元以上，更小的案子直接交给本部门进行纪律惩处备案。
+Currently, the Cheka's standard for filing a case was an amount of two hundred circulation coupons or more. Smaller cases were directly handed over to the respective departments for disciplinary action and filing.
 
-　　“目前这类案子高发地点是在行政和基建上。”裔凡兴味索然的说道，“行政上小钱用得多而且频繁，纵然有审批制度有时候也会流于形式。积少成多。现在行政开支不断上涨，[萧主任][y001]上次还和我谈过，要我们弄几个大案出来震慑一下。”
+"Currently, the high-incidence areas for such cases are in administration and infrastructure." Yi Fan said with little interest. "In administration, small sums of money are used frequently, and although there is an approval system, it sometimes becomes a formality. A little adds up to a lot. Administrative expenses are constantly rising. [Director Xiao][y001] talked to me about it last time, wanting us to come up with a few big cases to serve as a deterrent."
 
-　　“弄几个大案出来？”金枝娇疑惑的问道。
+"Come up with a few big cases?" Jin Zhijiao asked doubtfully.
 
-　　“你知道我们现在发现行政上的许多违规开支，大多连立案标准都够不上，几支铅笔，几本本子，一箱格瓦斯……都是小微金额的，而且去向根本说不清，调查起来很难。勉强办几个案子，也没什么影响力。”
+"You know that many of the irregular expenses we find in administration now don't even meet the standard for filing a case. A few pencils, a few notebooks, a case of kvass... they are all micro-amounts, and their whereabouts are completely untraceable, making investigation very difficult. Even if we force a few cases, they won't have much impact."
 
-　　“所以想杀鸡儆猴。”
+"So you want to kill a chicken to scare the monkeys."
 
-　　“是这个意思，但是这鸡不好找啊。”裔凡摸着脑门，“位置太低了，没什么意义，位置高了，又牵扯面太广……”
+"That's the idea, but this chicken is not easy to find." Yi Fan rubbed his forehead. "If the position is too low, it's meaningless. If the position is too high, it involves too many people..."
 
-　　“要弄一个窝案才行。”金枝娇不动声色。
+"You need to find a nest case," Jin Zhijiao said calmly.
 
-　　裔凡眼皮一跳，这女人够狠！这么一来许多件不够标准的小案子，甚至只能算是违纪的行为就可以来个并案处理。
+Yi Fan's eyelids twitched. This woman was ruthless! This way, many small cases that didn't meet the standard, and even actions that could only be considered disciplinary violations, could be combined and handled together.
 
-　　“不过，要弄成窝案影响就太大……”
+"However, if we make it a nest case, the impact will be too great..."
 
-　　金枝娇也沉默了，现在不比几年前，家大业大，各个部门都是一大摊子，人员更是扩充了扩充了百分之几千，真要揪出一个窝案来，抓一大批人的结果势必造成一整个部门的瘫痪。
+Jin Zhijiao also fell silent. It wasn't like a few years ago. The enterprise was large now, each department was a huge mess, and the personnel had expanded by several thousand percent. If they really uncovered a nest case, the result of arresting a large number of people would inevitably be the paralysis of an entire department.
 
-　　元老院统治下的临高可不是21世纪的中国，考公务员，钻营事业编的大学生满地都是，每一个行政人员起码也是经过半年以上培训的，抓走一个得好久才补得上缺额。
+Lingao under the rule of the Senate was not 21st-century China, where university students vying for civil service and public institution jobs were everywhere. Every administrative staff member had at least half a year of training. If one was arrested, it would take a long time to fill the vacancy.
 
-　　而且根据元老院的“纯洁性”要求，一旦被捕，就不再有可能重返行政机构。这意味花了大力气培训出来的行政人员就白白浪费了。
+Moreover, according to the Senate's "purity" requirements, once arrested, it was no longer possible to return to an administrative agency. This meant that the administrative personnel trained with great effort would be wasted.
 
-　　在令人尴尬的沉默中持续了几分钟，裔凡直接岔开了话题：“还有就是建筑口上的事，这里面的事情很大，恐怕牵扯到的金额也不小。”他翻出一份备忘录，“这是最近一年民政归化民安置房的调查备忘录……”
+After a few minutes of awkward silence, Yi Fan directly changed the subject: "Then there's the matter of the construction sector. The issues here are huge, and I'm afraid the amount of money involved is not small." He pulled out a memorandum. "This is a survey memorandum on the civilian naturalized citizen resettlement housing for the past year..."
 
-　　“这些工程可都是临高建筑总公司承建的……”金枝娇倒吸一口冷气，目前临高没有民营的建筑公司，所有的建筑工程都是这个总公司承揽的，“你是说里面的发包和采购有问题？”
+"These projects were all undertaken by the Lingao General Construction Company..." Jin Zhijiao gasped. Currently, Lingao had no private construction companies. All construction projects were contracted by this general company. "Are you saying there are problems with the contracting and procurement?"
 
-　　“这是必然的。”裔凡点点头，“这么大的基建摊子，我随便去走了走，光一个小工地的承包工头就有好几个，挖土方的，运黄沙的，砸石子的……这么多外包工程，能不出问题？”
-[y001]: /characters/y001 "萧子山"
-[y005]: /characters/y005 "马千瞩"
+"That's inevitable." Yi Fan nodded. "With such a large infrastructure mess, I just took a casual walk, and a small construction site has several contract foremen: for digging earth, transporting sand, breaking stones... With so many subcontracted projects, how can there not be problems?"
