--- a/_posts/2013-10-30-6-20000.md
+++ b/_posts/2013-10-30-6-20000.md
@@ -1,101 +1,101 @@
 ---
 layout: post
-title: 第二百节　腐败问题
+title: "Chapter 200: The Problem of Corruption"
 category: 6
 path: 2013-10-30-6-20000.md
 tag: [normal]
 ---
 
-　　“这不是要牵扯到元老？”金枝娇原本就隐隐约约的感到了裔凡的话外之音，现在顿时紧张起来。
+"Won't this involve the Elders?" Jin Zhijiao had vaguely sensed the subtext in Yi Fan's words, and now she suddenly became nervous.
 
-　　“就这个局面不牵扯到元老可能吗？要知道最终的决定权可都在元老的手里。”裔凡意味深长的说道，“绝对的权力意味着绝对的腐败，这话您不会没听说过吧。”
+"With this situation, is it possible not to involve the Elders? You have to know, the final decision-making power is in the hands of the Elders." Yi Fan said meaningfully, "Absolute power means absolute corruption. You've heard this saying, haven't you?"
 
-　　“当然，主任同志。”
+"Of course, Comrade Director."
 
-　　裔凡在这里留了一手，他没有告诉自己的副手，在五处他的专用办公室的保险箱里保存着一份红皮备忘录，上面全是在五处在调查各种腐败案件中收集到的元老的“违纪”行为。
+Yi Fan held something back here. He didn't tell his deputy that in the safe of his private office in the Fifth Division, there was a red-covered memorandum, filled with the "disciplinary violations" of Elders collected by the Fifth Division during its investigations into various corruption cases.
 
-　　比起当初建立契卡的时候程栋移交给他的“黑材料”，这些材料的“杀伤力”更大，毕竟那些材料只是违规使用资金和财务手续不全之类的“程序性问题”，还牵扯不到“腐败”二字。
+Compared to the "black materials" that Cheng Dong had handed over to him when the Cheka was first established, these materials were much more "lethal." After all, those materials were just "procedural issues" like irregular use of funds and incomplete financial procedures, and couldn't yet be labeled as "corruption."
 
-　　但是这份红皮备忘录里的东西不同，里面记载的不折不扣的都是“腐败”行为，尽管按照另一个时空的标准来看，这些所谓的腐败的新闻价值简直连发个论坛的帖子都不够资格，但是在临高却是绝对的重磅炸弹。
+But the things in this red-covered memorandum were different. What was recorded inside was out-and-out "corrupt" behavior. Although by the standards of another time-space, the news value of this so-called corruption wasn't even worthy of a forum post, in Lingao it was an absolute bombshell.
 
-　　备忘录在他的辛勤工作中不断的增厚，在享受着掌握他人极大秘密快感的同时，裔凡的精神压力也与日俱增。掌握毁灭他人的力量也就等于掌握着毁灭自己的力量。
+The memorandum grew thicker with his diligent work. While enjoying the pleasure of holding great secrets about others, Yi Fan's mental pressure also increased day by day. The power to destroy others was also the power to destroy oneself.
 
-　　“我真不懂，”金枝娇有些不安的在椅子上扭动了下身子，“元老为什么要贪腐，咱们这政府就是个股份制公司，大伙都是股东……”
+"I really don't understand," Jin Zhijiao shifted uncomfortably in her chair. "Why would an Elder be corrupt? Our government is a joint-stock company, and we are all shareholders..."
 
-　　“过去我们还都是国家的主人翁呢。”裔凡冷笑着说道，又觉得这话不妥，“牵扯到元老的问题大多是些不起眼的小问题，很多元老恐怕自己也不觉得有什么不妥：吃一顿饭，给自己手下的归化民安排个好位置，私下买女奴，接受点土特产当然了，不论按照哪个时空的标准，这都算不了什么。不过你刚才也说了，我们元老院就是个股份公司，既然是股份公司，股东可是非常敏感的。”
+"In the past, we were all masters of the country," Yi Fan said with a sneer, then felt his words were inappropriate. "The problems involving Elders are mostly insignificant small issues. Many Elders probably don't think there's anything wrong with it themselves: having a meal, arranging a good position for a naturalized citizen under them, privately buying a female slave, accepting some local products... Of course, by the standards of any time-space, this doesn't count for much. But as you just said, our Senate is a joint-stock company. Since it's a joint-stock company, the shareholders are very sensitive."
 
-　　金枝娇决定审慎的表示沉默。
+Jin Zhijiao decided to remain prudently silent.
 
-　　裔凡站了起来，一只手夹着雪茄，一只手插在裤兜里，在办公室里踱起步来。
+Yi Fan stood up, a cigar in one hand, the other in his trouser pocket, and began to pace the office.
 
-　　“您知道，凡是牵扯到元老的事情都很复杂。我出去几个月，五处的事情不能停下来，但是您在行事的时候要尽量谨慎。”
+"You know, anything involving an Elder is very complicated. I'll be away for a few months. The work of the Fifth Division can't stop, but you must be as cautious as possible when you act."
 
-　　“我知道了。”金枝娇点头。她大致翻了翻手里的文件夹目录，貌似里面没有牵扯到元老的案子，心里稍安，“已经进入侦讯阶段的案子，就让五处的工作人员继续做下去。”
+"I know." Jin Zhijiao nodded. She roughly flipped through the folder index in her hand. It seemed there were no cases involving Elders inside, and she felt a little relieved. "For the cases that have already entered the investigation and interrogation stage, just let the staff of the Fifth Division continue to work on them."
 
-　　“对，您只要具体把总就是了。”裔凡点着头说道，“这一去不知道要多久才能回来。”
+"Right, you just need to take charge of the overall situation," Yi Fan said, nodding. "I don't know how long I'll be gone this time."
 
-　　一声汽笛，海天号在博铺港由拖船牵引缓缓离开码头。它的离去是静悄悄的，没有元老出行时照例的送行队伍，船上也没有悬挂任何元老个人旗。
+With a blast of its whistle, the *Haitian* was slowly towed away from the pier at Bopu Harbor by a tugboat. Its departure was quiet, without the usual send-off party for a departing Elder, and no personal Elder flags were hung on the ship.
 
-　　“任重道远。”在海天号的军官起居室里，裔凡看着舷窗外渐渐远去的博铺港，感慨的说了一句。
+"The road is long and the burden is heavy." In the officers' lounge of the *Haitian*, Yi Fan looked out the porthole at the receding Bopu Harbor and said with emotion.
 
-　　这间军官起居室已经被临时改为巡视组的工作室。巡视组的元老成员已经聚集在这里，讨论着第一站的具体选择和工作内容。
+This officers' lounge had been temporarily converted into the inspection team's workshop. The Elder members of the inspection team had already gathered here, discussing the specific choice and work content for the first stop.
 
-　　巡视组的人选由各部门自行决定，主要成员来自契卡和企划院，也有几个人是裔凡特意从财经口的其他部门临时借调来得审计好手。但是元老成员很少，除了裔凡之外，就是政治保卫总局的陈白宾和企划院的戴谐。
+The members of the inspection team were decided by each department themselves. The main members came from the Cheka and the Planning院, and there were also a few auditing experts that Yi Fan had specially borrowed from other departments of the finance and economics sector. But there were very few Elder members. Besides Yi Fan, there were only Chen Baibin from the General Political Security Bureau and Dai Xie from the Planning院.
 
-　　戴谐的出现似乎给了元老们一个很不妙的暗示，因为戴谐是企划院特别搜索队的领导，长期致力于“抄家”活动，素称石子也要榨出油来的人物。企划院派出他来，似乎暗示着要对各个驻外站进行彻底的“查清家底”。
+The appearance of Dai Xie seemed to give the Elders a very bad omen, because Dai Xie was the leader of the Planning院's special search team, and had long been dedicated to "property confiscation" activities. He was known as a person who could squeeze oil from a stone. The Planning院 sending him seemed to imply a thorough "bottom-checking" of all the external stations.
 
-　　裔凡因为工作的关系，和戴谐有过多次合作，两个人比较熟悉。
+Due to his work, Yi Fan had cooperated with Dai Xie many times, and the two were relatively familiar.
 
-　　相形之下，陈白宾对他们来说就完全是陌生人了。
+In contrast, Chen Baibin was a complete stranger to them.
 
-　　这是一个瘦高个，宛如竹竿一般的年轻人：身高180，体重50公斤。按照陈思根的看法，他属于体检评价营养不良。
+This was a tall, thin young man, like a bamboo pole: 180 cm tall, weighing 50 kg. According to Chen Sigen's opinion, he belonged to the malnourished category in the physical examination evaluation.
 
-　　尽管在所谓苦难的行军阶段，元老们的伙食也只能说是品种单调和脂肪摄入略显不足，但是总体营养水平还是相当有保证的，加上体力劳动和健康的生活习惯，不少元老都呈现出了胖人减肥，瘦人加重的趋势，但是陈元老的体重却没有任何变化。
+Although during the so-called difficult march period, the Elders' food could only be said to be monotonous in variety and slightly insufficient in fat intake, the overall nutritional level was still quite guaranteed. Coupled with physical labor and healthy living habits, many Elders showed a trend of fat people losing weight and thin people gaining weight, but Elder Chen's weight had not changed at all.
 
-　　尽管裔凡的部门是掌握元老院和元老消息第二灵通的部门，加上他曾经有意识的搜集过元老的基本信息。但是他对这位陈元老知道的却很少，只大概知道此人是个国内不知名师范大学的学生，学的不知道是什么专业，但是掌握了解大量地理、历史、经济、文化、军事、生物、化学、物理等方面知识也就是说，大致就是个爱在网上纵横天下的键政局分子。
+Although Yi Fan's department was the second best-informed department about the Senate and the Elders, and he had consciously collected basic information about the Elders, he knew very little about this Elder Chen. He only roughly knew that this person was a student from an unknown normal university in the country, and his major was unknown, but he had a large amount of knowledge in geography, history, economy, culture, military, biology, chemistry, physics, and other fields—in other words, he was basically an armchair politician who loved to pontificate on the internet.
 
-　　由于此人属于营养不良范畴，尽管沦为很长一阶段的“基本劳动力”，但是没干过什么重活，自然分配工作的时候也没人要。只好长期在大图书馆混事。虽然师范的学历一度让胡青白看上他，但是最终却没有去芳草地任职。
+Since this person was in the malnourished category, although he was reduced to "basic labor" for a long time, he had never done any heavy work, so naturally no one wanted him when it came to job assignments. He had to hang around the Great Library for a long time. Although his normal school education once made Hu Qingbai take a fancy to him, he ultimately did not take up a post at Fangcaodi.
 
-　　原来是去了政治保卫总局。赵曼熊这个人还真有点花样，裔凡心想，不哼不哈的把人一个个的招了进去，老子居然一点音信都不知道。
+So he went to the General Political Security Bureau. *Zhao Manxiong really has some tricks,* Yi Fan thought. *He recruited people one by one without a sound, and I, his father, didn't even know a thing.*
 
-　　这位陈元老什么时候进得政治保卫总局，在局里做什么事情，大约只有他们局子里的人和组织处的人知道。
+When this Elder Chen entered the General Political Security Bureau, and what he did in the bureau, was probably only known to the people in his bureau and the people in the organization department.
 
-　　“咱们既然已经出发了，就先谈谈工作上的事情吧。”裔凡回到长桌前。桌子上已经摆满了文件夹和卷宗。
+"Since we've already set off, let's talk about work first." Yi Fan returned to the long table. The table was already covered with folders and files.
 
-　　“不用我多说，大家应该都很清楚，”裔凡说道，“此次巡视的重点是杭州。”
+"I don't need to say much, everyone should be very clear," Yi Fan said. "The focus of this inspection is Hangzhou."
 
-　　围着桌子的几位元老的脸上都浮现出了微妙的表情。
+A subtle expression appeared on the faces of the several Elders around the table.
 
-　　但是谁也没吭声。
+But no one said a word.
 
-　　“元老院里对杭州站或者不如说对赵引弓的不满情绪也比较大。如果我们慢慢腾腾的从雷州开始，沿着海岸线雷州、广州、台湾这样一站站的上去，那么势必引来元老院对我们此次巡视工作的质疑。巡视审计工作毕竟要花很多时间的。每个地方累加起来，到杭州起码也得一二个月之后的事情了。这显然不能满足元老院的期望。”
+"There is a lot of dissatisfaction in the Senate with the Hangzhou station, or rather, with Zhao Yigong. If we slowly start from Leizhou and go up the coastline station by station, Leizhou, Guangzhou, Taiwan... then it will inevitably lead to questions from the Senate about our inspection work. After all, inspection and audit work takes a lot of time. Adding up each place, it will be at least one or two months before we get to Hangzhou. This obviously cannot meet the expectations of the Senate."
 
-　　“所以我提议第一站去高雄。”裔凡说，“大家以为如何？”
+"So I propose that the first stop be Kaohsiung," Yi Fan said. "What do you all think?"
 
-　　从临高出发直接上杭州去，这未免太不给赵元老面子了：不给赵元老面子事小，不给元老院和执委会里的某些元老面子事情就大了。
+Going directly to Hangzhou from Lingao would be too disrespectful to Elder Zhao. Disrespecting Elder Zhao was a small matter, but disrespecting certain Elders in the Senate and the Executive Committee was a big deal.
 
-　　到高雄过度一下，待个一周二周的，再到杭州，就顺理成章了。彼此面子上也好看一些。
+Stopping over at Kaohsiung for a week or two, and then going to Hangzhou, would be logical. It would also look better for everyone involved.
 
-　　“我没意见。”戴谐说道，“小陈呢？”
+"I have no objection," Dai Xie said. "What about Little Chen?"
 
-　　“我也没有。”陈白宾面无表情，“一切都听裔组长的安排。”
+"I don't have one either," Chen Baibin said expressionlessly. "I will follow Group Leader Yi's arrangements."
 
-　　“好吧，既然这样我们第一站就到高雄，下面我们谈点具体的工作安排。”
+"Alright, since that's the case, our first stop will be Kaohsiung. Now let's talk about some specific work arrangements."
 
-　　裔凡在出发前，已经拜访了执委会里的所有执委，还和元老院内各政治派别和社团进行了私下交流。大致掌握了目前执委会和元老院对驻外机构的大概看法。
+Before setting off, Yi Fan had already visited all the members of the Executive Committee and had private exchanges with various political factions and societies in the Senate. He had roughly grasped the current general views of the Executive Committee and the Senate on the external agencies.
 
-　　杭州站的各种事情，虽然在元老院中掀起了口水的惊涛骇浪，但是在执委会里，却是波澜不惊。
+Although the various issues of the Hangzhou station had caused a storm of saliva in the Senate, in the Executive Committee, it was calm.
 
-　　驻外站的问题，各位执委早就心知肚明，但是驻外站的权限应该如何设置始终是执委会为难的事情。
+The members of the Executive Committee had long been aware of the problems of the external stations, but how to set the authority of the external stations had always been a difficult matter for the Executive Committee.
 
-　　所谓外派元老的独走问题，在执委会的诸公看来，本质上是中央和地方分权的矛盾。绝不是撤换几个站长，取消几个项目那么简单的事情。
+The so-called "solo run" problem of the dispatched Elders, in the eyes of the gentlemen of the Executive Committee, was essentially a conflict between central and local power sharing. It was by no means as simple as replacing a few station masters and canceling a few projects.
 
-　　现在在元老院里拍桌子喷着唾沫要追究“独走”倾向的元老，自己真要成了驻外站的一把手，独走起来比谁都快，都强。
+The Elders who were now slamming the table in the Senate and demanding an investigation into the "solo run" tendency, if they themselves became the head of an external station, would "go solo" faster and stronger than anyone else.
 
-　　驻外站，不同于海南岛上各县的县办——典型的中央—地方关系。海南岛上的各个县，包括他们成立的三亚大区，公路、定期班轮和有线/无线电报，把各个县办紧紧的联系在临高这个中央周围。
+The external stations were different from the county offices on Hainan Island—a typical central-local relationship. The various counties on Hainan Island, including the Sanya Special Administrative Region they established, were tightly connected to the center of Lingao by highways, regular shipping lines, and wired/wireless telegraphs.
 
-　　这些县在地方权力上面基本上和大明时代差不多，几乎所有的重要权力都在“中央”，包括最为重要的财政权，那更是全额上交全额拨付。地方上想搞任何项目都要经过企划院等部门的规划和批准，所需要的物资、经费乃至人力也都需要从临高调拨出去。地方上的元老如果想自己搞点项目发展经济，就得上临高去“跑部”。
+These counties had basically the same local power as in the Ming Dynasty. Almost all important powers were in the "center," including the most important financial power, which was fully submitted and fully allocated. If the local authorities wanted to carry out any project, they had to go through the planning and approval of departments such as the Planning院. The required materials, funds, and even manpower also needed to be allocated from Lingao. If the local Elders wanted to develop the economy on their own, they had to go to Lingao to "run the ministries."
 
-　　只要一离开海南岛，尽管元老院拥有无线电报，本时空航行最快的商船队和舰队，控制力依然是不可避免的下降了。特别是缺少足够合格的归化民行政人员和技术工人，使得元老院的地方行政和经营活动十分依赖外派元老。
+Once one left Hainan Island, although the Senate had wireless telegraphs and the fastest merchant fleet and fleet in this time-space, its control inevitably declined. In particular, the lack of qualified naturalized citizen administrative personnel and technical workers made the Senate's local administrative and business activities highly dependent on the dispatched Elders.
 
-　　由于能够调拨给外派元老的资源有限，等待的时间又很漫长，这就使得外派的元老们几乎无一例外的都形成了“自己动手，丰衣足食”的思想。收纳流民，教育儿童，培训自己的行政人员，然后搞商业和手工业企业――几乎每一个驻外站都是按照这套模式在走。即使是单纯的矿业据点鸿基煤矿，也少不得要搞点大米贩运和收容流民的把戏。
+Because the resources that could be allocated to the dispatched Elders were limited, and the waiting time was long, this made the dispatched Elders almost without exception form the idea of "doing it yourself to have enough food and clothing." Taking in refugees, educating children, training their own administrative personnel, and then engaging in commercial and handicraft enterprises—almost every external station followed this model. Even a simple mining base like the Hongji Coal Mine had to engage in tricks like rice trafficking and taking in refugees.
