--- a/_posts/2013-2-19-5-41900.md
+++ b/_posts/2013-2-19-5-41900.md
@@ -79,4 +79,4 @@ Ping Qiusheng had submitted a report to the Executive Committee, suggesting that
 The raw materials for patent medicines could be obtained directly from Korea nearby, or imported from the Ming Dynasty. The advantage of Jeju Island was that it was very close to Korea, Japan, and the Ming Dynasty. Some low-cost drugs could be considered for production in factories on Jeju Island.
 
 Although the shipping route from Shanghai to Hirado was fast and convenient, with the addition of Jeju Island as a superior transit point, the trade routes had more diverse options, and a certain degree of triangular trade could be developed.
-[y009]: /characters/y009 "吴南海"
+[y009]: /characters/y009 "Wu Nanhai"
