--- a/_posts/2014-10-1-7-05300.md
+++ b/_posts/2014-10-1-7-05300.md
@@ -14,7 +14,7 @@ According to the opinion of the financial sector, the new mint should be located
 
 Although Hong Kong lacked resources, its transportation was convenient, and the transshipment of various materials was also more convenient than from Hainan. In terms of security, it was also safe to say it was worry-free.
 
-After consultation between the Planning Institute and the industrial sector's穿越众, the basic scale of the mint and the required equipment were finally determined.
+After consultation between the Planning Institute and the industrial sector's elders, the basic scale of the mint and the required equipment were finally determined.
 
 The Hong Kong mint was divided into two phases, a minting plant and a printing plant. When fully completed, it would have the complete capability to design and manufacture securities, banknotes, and coins. Due to the urgency of time, and the fact that the Lingao printing plant already had the ability to print banknotes, it was decided that the first phase of the project would be the minting plant.
 
@@ -58,9 +58,9 @@ The silver and purple copper used as coin materials were both 99% pure materials
 
 "There's no problem with this proportion and size," said Liang Xin, who was in charge of making the molds. "But how do we handle the dies? I've never made coin dies before. The pattern is quite complex. Although it's not micro-carving, it's still quite small..."
 
-On the table was a drawing of the silver coin's design, created by a 穿越者 with an art background. The obverse featured the regular script "壹元" (One Dollar), surrounded by a wheat ear pattern, with the year of issue in small Arabic numerals below. The reverse showed the Earth under the light of the Morning Star. A ribbon was wrapped around the Earth with four Latin words: S.P.Q.M. (Senatus Populusque Magnus - The Great Senate and People).
+On the table was a drawing of the silver coin's design, created by atransmigrators with an art background. The obverse featured the regular script "壹元" (One Dollar), surrounded by a wheat ear pattern, with the year of issue in small Arabic numerals below. The reverse showed the Earth under the light of the Morning Star. A ribbon was wrapped around the Earth with four Latin words: S.P.Q.M. (Senatus Populusque Magnus - The Great Senate and People).
 
-The other half-dollar and quarter-dollar coins had the same pattern on the obverse except for the different denominations. The reverse pattern was the Holy Ship for the half-dollar and the national emblem, which the 穿越者 privately called the "Iron Fist and Chrysanthemum," for the quarter-dollar.
+The other half-dollar and quarter-dollar coins had the same pattern on the obverse except for the different denominations. The reverse pattern was the Holy Ship for the half-dollar and the national emblem, which thetransmigrators privately called the "Iron Fist and Chrysanthemum," for the quarter-dollar.
 
 "You don't have to worry about engraving the pattern. We have skilled craftsmen to do this. We'll first carve a large one, and then use a reduction method to make the small ones," said [Wang Luobin][y003]. Although he had become the Chairman of the Senate, he still couldn't resist the itch in his hands in this area and personally came to attend the meeting.
 
