--- a/_posts/2014-11-5-7-08800.md
+++ b/_posts/2014-11-5-7-08800.md
@@ -36,7 +36,7 @@ During the Ming Dynasty, Guangzhou underwent several large-scale expansions and 
 
 Open canals became culverts, and houses were built on top of the culverts. The result was that by the time they entered the city, the specific locations and courses of the open and covered canals within the city were mostly buried under large swaths of houses, becoming a mystery for the Senate members in Guangzhou.
 
-The most typical example was the location of the sixth vein of the Six-Vein Canals, which had been a mystery since the Ming Dynasty. In several dredging efforts, whether at the end of the Ming Dynasty or before the mid-Qing Dynasty, there was no trace of the sixth vein. Tan Qinghai, a native of Dongguan from the early Wanli era, not long before the穿越者's time, wrote "A Description of the Six Veins," which only recorded five veins.
+The most typical example was the location of the sixth vein of the Six-Vein Canals, which had been a mystery since the Ming Dynasty. In several dredging efforts, whether at the end of the Ming Dynasty or before the mid-Qing Dynasty, there was no trace of the sixth vein. Tan Qinghai, a native of Dongguan from the early Wanli era, not long before the tranmigrators's time, wrote "A Description of the Six Veins," which only recorded five veins.
 
 Liu Xiang's understanding of the Six-Vein Canals was largely based on the records of this predecessor. As for the hundreds of research papers and monographs on the Six-Vein Canals in the Grand Library, they were all fundamentally based on this source.
 
