--- a/_posts/2014-3-2-6-32300.md
+++ b/_posts/2014-3-2-6-32300.md
@@ -20,7 +20,7 @@ Li Yongxun was quite satisfied with her current life: she was free, didn't have 
 
 But let alone going home, even writing a letter was impossible.
 
-Besides, what could she even say if she did write a letter? The thought of her life in Lingao made her heart flutter with anxiety. Her father would surely be furious, and a severe beating with the family cane was a certainty. Just her skirt, her hair, and these clothes... That was one thing, but the crucial point was that she was now working for the Australians, which was tantamount to "betraying the court." Although the Australians hadn't officially turned against the court, the current situation was no different from a regional secession, and war with the court was inevitable sooner or later. Li Yongxun was not an ignorant peasant; she had a basic political understanding. Her actions were of the same nature as soldiers in Liaodong defecting to the Tartars. Her father, though a low-ranking official with a minor hereditary post, had always prized "loyalty" above all. If he knew she had "defected to the髡," he would be beside himself with anger...
+Besides, what could she even say if she did write a letter? The thought of her life in Lingao made her heart flutter with anxiety. Her father would surely be furious, and a severe beating with the family cane was a certainty. Just her skirt, her hair, and these clothes... That was one thing, but the crucial point was that she was now working for the Australians, which was tantamount to "betraying the court." Although the Australians hadn't officially turned against the court, the current situation was no different from a regional secession, and war with the court was inevitable sooner or later. Li Yongxun was not an ignorant peasant; she had a basic political understanding. Her actions were of the same nature as soldiers in Liaodong defecting to the Tartars. Her father, though a low-ranking official with a minor hereditary post, had always prized "loyalty" above all. If he knew she had "defected to the," he would be beside himself with anger...
 
 "I can only take it one step at a time," Li Yongxun sighed once more. She opened a file, about to start work, when she heard footsteps. A clear voice spoke softly:
 
