--- a/_posts/2014-3-31-6-35200.md
+++ b/_posts/2014-3-31-6-35200.md
@@ -30,7 +30,7 @@ After reading a few pages of the textbook, these few made a judgment: they would
 
 In this way, the original pharmacy was discounted. They could only open a pharmacy that didn't need a doctor. That wasn't a big deal, but the key was that without a doctor, the scale of the shop would have to be reduced. How could they accommodate so many people? Shops never kept idle people. The local officials would naturally become suspicious if they saw too many idle people in your shop.
 
-Huang Zhen scratched his head, at a loss. Sima Qiudao was not around, so there was no one to discuss it with. Seeing the shop taking shape day by day, he still didn't have a doctor. This was not like the Great Ming, where any quack or charlatan could practice medicine and sell drugs openly. Without a license, it would be what the female director called "illegal practice of medicine." If caught, you would first be whipped 100 times on your bare buttocks, and then sent to dig sand. The great cause of resisting the 髡 would be over.
+Huang Zhen scratched his head, at a loss. Sima Qiudao was not around, so there was no one to discuss it with. Seeing the shop taking shape day by day, he still didn't have a doctor. This was not like the Great Ming, where any quack or charlatan could practice medicine and sell drugs openly. Without a license, it would be what the female director called "illegal practice of medicine." If caught, you would first be whipped 100 times on your bare buttocks, and then sent to dig sand. The great cause of resisting the would be over.
 
 Just as he was at his wit's end, Zhou Zhongjun suddenly returned. Since she came down from the mountain and arrived in Lingao, she was like a caged bird released. Although Huang Zhen had repeatedly warned her not to run around outside, she still often found excuses to go out.
 
@@ -60,7 +60,7 @@ Zhou Zhongjun, however, came over and asked in a low voice:
 
 "Brother Huang, are you still worried about the examination?"
 
-Huang Zhen sighed and nodded. "This 髡 stuff is really complicated! Sect Leader Jiao said he can't even understand it. It's probably impossible for him to learn it!"
+Huang Zhen sighed and nodded. "This stuff is really complicated! Sect Leader Jiao said he can't even understand it. It's probably impossible for him to learn it!"
 
 "What about Village Master Song and the two Meng uncles?"
 
@@ -72,7 +72,7 @@ Huang Zhen sighed and nodded. "This 髡 stuff is really complicated! Sect Leader
 
 "A treasure. With this, what kind of license can't you get!" Zhou Zhongjun smiled.
 
-Huang Zhen's heart stirred. He knew that there was cheating in all imperial examinations. Even the questions for the metropolitan examination could be obtained if you had money and connections—there were people in the capital who specialized in this business. Since the 髡 had "examinations," they probably also had people who did this! He secretly called himself a fool. He was also an old hand in the jianghu, how could he not have thought of this!
+Huang Zhen's heart stirred. He knew that there was cheating in all imperial examinations. Even the questions for the metropolitan examination could be obtained if you had money and connections—there were people in the capital who specialized in this business. Since the had "examinations," they probably also had people who did this! He secretly called himself a fool. He was also an old hand in the jianghu, how could he not have thought of this!
 
 He opened the box. Inside was indeed a small booklet bound with thin cotton paper, densely filled with small characters written in fly-head script. Huang Zhen unfolded it and looked. It was indeed full of various questions and answers. He had carefully read the textbooks and supplementary materials these past few days and had studied this license examination.
 
