--- a/_posts/2014-4-17-6-36900.md
+++ b/_posts/2014-4-17-6-36900.md
@@ -32,7 +32,7 @@ The female secretary quickly went. In a short while, she had invited all the Sen
 
 When [Wen Desi][y002] saw the lineup, weren't they just the few from the Plaid Skirt Club? This was probably another case of using public office for private gain, to satisfy their own perverse tastes.
 
-Satisfying one's own perverse tastes was not a problem in [Wen Zong][y002]'s view. If one couldn't even satisfy one's own little hobbies, then coming to this穿越 (chuānyuè - transmigration) would be like being Lei Feng. The key was to satisfy them without causing resentment among the other Senators. Although there were many with peculiar hobbies in the Senate, the string of "political correctness" was tighter here than anywhere else.
+Satisfying one's own perverse tastes was not a problem in [Wen Zong][y002]'s view. If one couldn't even satisfy one's own little hobbies, then coming to this transmigration would be like being Lei Feng. The key was to satisfy them without causing resentment among the other Senators. Although there were many with peculiar hobbies in the Senate, the string of "political correctness" was tighter here than anywhere else.
 
 One of these "political correctnesses" was stinginess. This habit, which had been left over from the D-Day due to a lack of material and manpower, had imperceptibly become a kind of collective unconscious obsession. It was clear that Hu Qingbai's invitation to him to "take a look and offer some opinions" at the gymnasium today was, to put it bluntly, a disguised request for resources and support.
 
