--- a/_posts/2014-5-3-6-38500.md
+++ b/_posts/2014-5-3-6-38500.md
@@ -1,94 +1,93 @@
 ---
 layout: post
-title: 第三百八十五节 初露端倪
+title: Chapter 385: The First Clues
 category: 6
 path: 2014-5-3-6-38500.md
 tag: [normal]
 ---
 
-　　刘富卿平日里上班很少穿制服，按照他的话来说就是：“人老了，紧绷绷的衣服穿在身上不自在”。好在他是侦察员，着装上除了特殊场合之外没有硬性要求。回到临高之后，他每天都穿着件半旧的蓝布直缀，因为戴着逍遥巾，没有发髻也看不出来。
+Liu Fuqing rarely wore a uniform to work. In his own words, "I'm old, and tight clothes are uncomfortable." Fortunately, as a detective, he wasn't required to wear a uniform except on special occasions. After returning to Lingao, he wore a half-worn blue robe every day. Because he wore a "carefree scarf," his lack of a topknot was not noticeable.
 
-　　因为他总穿着“旧款”，政治保卫局内部不止一次有人告密，说他：“心怀大明”，诋毁“国服”——虽说元老院从来没公布“澳洲款”的衣服是国服。
+Because he always wore "old-fashioned" clothes, he was reported more than once within the Political Security Bureau for "harboring feelings for the Ming Dynasty" and "slandering the national uniform"—even though the Senate had never officially declared the "Australian style" of clothing to be the national uniform.
 
-　　他平日里说话笑眯眯的，走路步履又慢，一排斯文派头，若是不知道他底细的人，多半以为他是个科场不得意的老童生，训蒙童的穷塾师。
+He always spoke with a smile and walked slowly, giving off an air of a refined scholar. Those who didn't know him would probably mistake him for an old, unsuccessful scholar or a poor tutor who taught children.
 
-　　刘富卿没有投髡前就是这一副模样，对待任何人都是和和气气的。狐假虎威，吆五喝六的，那是衙役们和番子们的把戏，他这个堂堂的刑部书办只需要在茶馆和人讲妥斤头，回到部里动动笔就能笔下超生或者送人上路。
+This was Liu Fuqing's appearance even before he surrendered to the髡. He was always amiable to everyone. The blustering and shouting were the tricks of the yamen runners and spies. As a dignified clerk of the Ministry of Justice, he only needed to negotiate terms with people in teahouses and then, with a few strokes of his pen back at the ministry, he could decide a person's fate.
 
-　　他到了临高之后，依然是这副模样，不过捞钱的事情是不干了——不是不想，实在是不敢——首长们不需要他的满腹“部例”，因而整治起人来毫不留情。幸好首长们发起饷来比大明大方多了，房子也是优先卖给他们这些归化民。刘富卿现在背了五年的房贷——在临高这可是令人羡慕的标志，只有归化民中的“红人”或者是早期“投髡”的，才有背这房贷的可能性。一般归化民只有老老实实排队等着。
+After arriving in Lingao, he remained the same, but he no longer took bribes—not because he didn't want to, but because he didn't dare. The chiefs had no need for his extensive knowledge of "ministry regulations" and were ruthless in their punishments. Fortunately, the chiefs were much more generous with their salaries than the Ming Dynasty, and houses were also sold to naturalized citizens like him on a priority basis. Liu Fuqing now had a five-year mortgage—a symbol of envy in Lingao. Only the "red" naturalized citizens or those who had "surrendered to the髡" early on had the possibility of shouldering such a mortgage. Ordinary naturalized citizens could only wait in line.
 
-　　元老院对他既有“救命之恩”，又有“知遇之恩”。自从接受了太阳伞专案组长的任命，刘富卿愈发觉得青春焕发。每天都是干劲十足。
+The Senate had both "saved his life" and "recognized his talent." Since accepting the appointment as the leader of the "Sun Umbrella" special investigation team, Liu Fuqing felt rejuvenated and was full of energy every day.
 
-　　他一上任，就布置了对李永薰的重点监视。24小时监控她的动向，同时对她周边的社会关系进行全面排查。根据前面的情况判断，李永薰肯定与目前在临高的某个人有联系。只要找到这个人，再顺藤摸瓜，不愁抓不住线索。
+As soon as he took office, he arranged for the close surveillance of Li Yongxun. He monitored her movements 24/7 and conducted a comprehensive investigation of her social circle. Based on the previous situation, he judged that Li Yongxun must be in contact with someone in Lingao. As long as he could find this person, he could follow the clues and unravel the whole network.
 
-　　然而事与愿违的是，李永薰好像意识到了什么，突然断绝了所有的联络。对她的监视一无所获。
+However, to his disappointment, Li Yongxun seemed to have realized something and suddenly cut off all contact. The surveillance on her yielded nothing.
 
-　　这大大出乎刘富卿的意料。他立刻开始对前阶段李永薰的接触过的人、去过的地方进行地毯式排查。以求找到新的线索。
+This was a huge surprise to Liu Fuqing. He immediately began a carpet search of the people Li Yongxun had contacted and the places she had been to in the previous stage, hoping to find new clues.
 
-　　到目前为止，还没有新线索被发现。刘富卿开始着急了，这么一个总部首长亲自布置的“大案要案”。落到自己的手里屁线索也没发现，自己怎么向首长交代？
+So far, no new clues had been found. Liu Fuqing began to worry. This was a "major case" personally assigned by the headquarters chief. If he couldn't find any clues, how could he explain it to the chief?
 
-　　如果直接执行对她的审查，不愁她不招供，但是这么一来，还要自己干什么？首长要的，不就是“放长线钓大鱼”吗？
+If he directly interrogated her, she would surely confess. But then, what was the point of having him? What the chief wanted was to "cast a long line to catch a big fish."
 
-　　在办公室里抽掉了一盒香烟，转了无数圈子之后，刘富卿回到办公桌前，重新研究起摊了一桌子的材料。
+After smoking a whole box of cigarettes and pacing around his office countless times, Liu Fuqing returned to his desk and began to study the materials spread out on it again.
 
-　　桌子中间。是李永薰的人事联系图，从这个名字周围引申出许多名字来。线条上写着他们和李永薰的关系，有得彼此之间还有横向联系的，也都用小字注明。
+In the middle of the table was Li Yongxun's personnel contact chart. Many names were drawn out from around her name. The lines indicated their relationship with Li Yongxun, and some even had horizontal connections with each other, which were also noted in small print.
 
-　　这些人的底细。他都关照人一一进行了排查，结果是一无所获。
+He had ordered a thorough investigation of all these people, but the results were fruitless.
 
-　　刘富卿盯着人事图看了好几分钟，拿起铅笔在距离李永薰最近的几个人的姓名上狠狠地画了了四个圈。接着他拉动了铃绳。一名下属应声进门。
+Liu Fuqing stared at the personnel chart for a few minutes, then picked up a pencil and drew four heavy circles around the names of the people closest to Li Yongxun. Then he pulled the bell rope. A subordinate entered.
 
-　　“把这几个人列入二十四小时监视名单。”
+"Put these people on the 24-hour surveillance list."
 
-　　名单的上的第一个人。赫然就是左亚美。
+The first person on the list was Zuo Yamei.
 
-　　就在同一栋楼里，在刘富卿为李永薰案没有进展愁眉不展的时候。侦察处一名已经连续工作了十个小时的侦察员杨草拆开了通讯员刚刚从处里送来交办公文。
+In the same building, while Liu Fuqing was worrying about the lack of progress in the Li Yongxun case, a detective from the investigation department, Yang Cao, who had been working for ten hours straight, opened a document that a messenger had just delivered from the department.
 
-　　这种公文，一般都是监视处属下的告密网络发现了值得深入挖掘的可疑线索之后才会转发过来的。
+Such documents were usually forwarded only after the informant network under the surveillance department had discovered suspicious clues worth digging into.
 
-　　临高由于是元老院的“首都”。内控特别严密，不仅到处告密者无处不在，每一个片区都有政治保卫局的侦察网，随时发现和处置告密者汇报上来的“可疑情况”。
+As the "capital" of the Senate, Lingao had extremely strict internal controls. Not only were there informants everywhere, but every district also had a Political Security Bureau investigation network to discover and deal with "suspicious situations" reported by informants at any time.
 
-　　百分之九十以上的线索，在侦察网这一关就被处理或者过滤了，能够送到局侦察处的，都是侦察网认为的“重大线索”或者自身处理不了的“大案”。
+More than ninety percent of the clues were dealt with or filtered out at the investigation network level. Those that could be sent to the bureau's investigation department were all considered "major clues" or "major cases" that the investigation network could not handle on its own.
 
-　　公文是转发的琼安客栈监视点的报告。琼安客栈和所有客栈一样，因为是外来人口歇脚的地方，所以是保卫局重点监控的对象。不但每天的登客簿都要检查，还要填写专门的监视报告。侦察网的指导员每天都要去视察工作。
+The document was a forwarded report from the surveillance point at the Qiong'an Inn. Like all inns, the Qiong'an Inn was a key surveillance target of the Security Bureau because it was a resting place for outsiders. Not only was the guest register checked every day, but a special surveillance report also had to be filled out. The instructor of the investigation network would inspect the work every day.
 
-　　从十多天前开始，琼安客栈的十人团成员就向指导员汇报，说新来得一户大户人家较为可疑，而且可能有较多的武林人物。
+Starting from more than ten days ago, the ten-person team at the Qiong'an Inn had been reporting to the instructor that a newly arrived wealthy family was rather suspicious and might have many martial arts figures with them.
 
-　　大户人家远距离旅行，随身必有武师相随，即有厚礼聘请的镖局镖师，也有自家蓄养的武术教师。因而对监视点来说也不是什么新鲜事。
+It was not uncommon for wealthy families to have martial artists accompanying them on long journeys, either hired from escort agencies or retained as martial arts instructors.
 
-　　但是这次，监视点的人员却发觉了一些不正常的蛛丝马迹。
+But this time, the surveillance personnel noticed some unusual clues.
 
-　　首先就是这户卓姓大户人家带得婢女实在有些多。按照他们的客簿登记，卓家是来自湖广。从湖广来这里，路途迢迢，何止千里。居然带了七八个婢女。
+First, the Zhuo family had brought an unusually large number of maids. According to their guest register, the Zhuo family was from Huguang. It was a journey of thousands of miles from Huguang to here, yet they had brought seven or eight maids.
 
-　　古人旅途艰难，女人生活起居很不方便，所以原则上女人是尽量不出远门的。纵然是大户人家的主妇、老太太这样的人出门，最多带一二个贴身能干的婢女照料起居，亦不会带很多婢女。如果是男人出门，就算是豪富大家，也很少会带女人随身伺候。所以才有书童一专多能，晚上还能兼婢妾的说法。
+In ancient times, travel was difficult, and it was very inconvenient for women to live and travel. Therefore, in principle, women tried not to travel far. Even the mistresses and old ladies of wealthy families would at most bring one or two capable maids to take care of their daily needs when they went out, and would not bring many maids. If it was a man traveling, even a wealthy one, he would rarely bring a woman with him. That's why there was the saying that a pageboy was versatile and could even serve as a concubine at night.
 
-　　虽说卓家有老太太来，但是就这么一位老太太和一位少爷，带着这么多的婢女上路实在有点太奇怪了。
+Although the Zhuo family had an old lady with them, it was still very strange for just one old lady and one young master to bring so many maids on the road.
 
-　　接下来监视点的人发现了第二件奇怪的事情：这户大户人家虽然平日里交谈都用官话，但是婢女、仆役和主人的口音居然各有不同。
+Next, the surveillance personnel discovered a second strange thing: although the family usually spoke Mandarin, the accents of the maids, servants, and masters were all different.
 
-　　虽说奴仆的家乡可以来自五湖四海，但是长期生活在一起，口音总会有趋同性。最关键的是，老太的说官话的口音居然和少爷的口音完全不一样！
+Although the servants could come from all over the country, their accents would tend to converge after living together for a long time. Most importantly, the old lady's Mandarin accent was completely different from the young master's!
 
-　　由于疑点越来越多，指导员通过国家警察总务九课，请来了原起威镖局的镖师，现在在国家警察担任顾问的周士翟。
+As the suspicions grew, the instructor, through the Ninth Division of the National Police General Affairs, invited Zhou Shizhai, a former escort of the Qiwei Escort Agency who was now a consultant for the National Police.
 
-　　周士翟因为听说里面有武林人物，没有贸然露面，只在院子附近走了走，又在院子外面看了看进出的人，问了伙计半个时辰的话，回来就很明确的告诉指导员：这不是一家人！
+Hearing that there were martial arts figures inside, Zhou Shizhai did not show himself rashly. He only walked around the courtyard, looked at the people coming in and out from outside the courtyard, and questioned the waiter for half an hour. When he came back, he told the instructor very clearly: "This is not a family!"
 
-　　院内的所有人都有武功，而且武艺不错。所谓的“少爷”，武艺尤高。
+Everyone in the courtyard had martial arts skills, and they were quite good. The so-called "young master" was particularly skilled.
 
-　　“那么，是一伙江洋大盗了？”指导员问道周士翟。
+"So, they're a gang of robbers?" the instructor asked Zhou Shizhai.
 
-　　周士翟摇头：“不，江洋大盗没这么做买卖的，花了这许多的本钱，他们必然另有所图。”
+Zhou Shizhai shook his head. "No, robbers don't do business like this. They've spent so much money, they must have other plans."
 
-　　指导员立刻想起了前不久破获的雨伞专案，其中也有武林中人牵扯在内。
+The instructor immediately thought of the recently cracked "Umbrella" case, which also involved martial arts figures.
 
-　　于是案子就转到了侦察处。因为案件牵扯到江湖人物，因为杨草是江湖戏班出身，亦可算半个同类，就划到了她的手里。
+So the case was transferred to the investigation department. Because the case involved people from the jianghu, and because Yang Cao came from a jianghu opera troupe and could be considered half one of them, it was assigned to her.
 
-　　政治保卫一级指挥员杨草在的办公室里聚精会神的阅读着转来的档案。她很疲倦，天已经亮了，她还不能下班——至少要看完案卷再说。她伸手去拿高山岭香烟的时候，注意到烟灰缸已经满了，便摇了摇桌上的电铃。一名见习协理员走进办公室，杨草没有和他说话，而是指了指烟灰缸。见习协理员立正点头，换了一个新的回来后又走了出去，关上门。
+Political Security First-Class Commander Yang Cao was engrossed in reading the transferred files in her office. She was very tired. It was already dawn, but she couldn't get off work yet—at least not until she finished reading the case files. When she reached for a Gaoshanling cigarette, she noticed that the ashtray was full. She rang the electric bell on her desk. A probationary associate walked into the office. Yang Cao didn't speak to him, but pointed at the ashtray. The probationary associate stood at attention, nodded, replaced it with a new one, and then went out, closing the door.
 
-　　没有说话，没有打趣。政治保卫一级指挥员杨草给人的就是这样的印象。她是第一届政治保卫培训班的学员。众所周知，这一届是赵局长亲自主持入学甄选，午主任亲自担任培训班主任的一届。出来的毕业生现在都已经走上了领导岗位，有的还在政治保卫战线上做出了不凡的功绩。
+No words, no jokes. This was the impression Political Security First-Class Commander Yang Cao gave people. She was a student of the first Political Security training class. As everyone knew, this class was personally selected by Director Zhao and personally supervised by Director Wu. The graduates of this class had all taken up leadership positions, and some had even made outstanding achievements on the political security front.
 
-　　杨草就是这一届中的佼佼者。虽然在业务学习中她不是最出色的，但是她是一个狂热者，有着殉道者一般的狂热和无情。
+Yang Cao was one of the best in this class. Although she was not the most outstanding in her professional studies, she was a fanatic, with the fanaticism and ruthlessness of a martyr.
 
-　　她出身卑微，少女时代备受蹂躏，身心俱毁。在十八层地狱里滚过来的人。是元老院挽救了她的生命，更重要的是，给了她尊严和复仇的力量。
+She came from a humble background and was abused in her youth, both physically and mentally. She had been through the eighteen levels of hell. It was the Senate that saved her life, and more importantly, gave her dignity and the power of revenge.
 
-　　杨草并不在乎元老院的宗旨是什么，未来又想干什么。她仇恨大明，仇恨大明比她这个半卖场半卖身的戏子地位高的一切人。在局里的政治保卫一级指挥员杨草拥有狂热者的名声。毁灭和复仇才是她最关心的事情。作为一位全心全意的元老院的拥护者，杨草的意识形态简单而坚定，从未动摇过，完全没有。她全身心的投入到追捕叛逆的行动中去，她憎恨他们，憎恨他们不知感恩，憎恨他们反对元老院——哪怕他们只是想想说说而已。她冷酷而又充满激情，就像当年唱戏唱得“卯上了”一样，在追捕和拷问的时候感到酣畅淋漓。
+Yang Cao didn't care what the Senate's purpose was or what it wanted to do in the future. She hated the Ming Dynasty, and she hated everyone in the Ming Dynasty who had a higher status than her, a half-prostitute actress. In the bureau, Political Security First-Class Commander Yang Cao had a reputation for being a fanatic. Destruction and revenge were what she cared about most. As a wholehearted supporter of the Senate, Yang Cao's ideology was simple and firm, and had never wavered, not at all. She threw herself into the pursuit of traitors. She hated them, hated their ingratitude, hated their opposition to the Senate—even if they only thought or talked about it. She was cold and passionate, just like when she was "in the zone" when she was acting. She felt a sense of exhilaration during the pursuit and interrogation.
 
-　　杨草很快就要三十岁了，有人给她介绍了一位归化民干部——据说他表示不在乎杨草的过去。杨草毫不犹豫的拒绝了这桩姻缘，她说：“元老院就是我的主人，我的生命只为杀死叛逆者而延续！”
-
+Yang Cao was almost thirty. Someone had introduced her to a naturalized citizen cadre—it was said that he didn't care about her past. Yang Cao rejected the marriage without hesitation. She said, "The Senate is my master. My life only continues to kill traitors!"
