--- a/_posts/2014-9-15-7-03700.md
+++ b/_posts/2014-9-15-7-03700.md
@@ -22,7 +22,7 @@ It seems that our women's work, including many urgent tasks to eliminate bad cus
 
 I proposed to meet this women's committee member, and Old Huo quickly called her over. It turned out that Huo Shouying was Old Huo's distant niece. She looked to be in her early twenties but was already a widow—the evil Kong Youde's rebellion had killed her relatives, and now she had no family left.
 
-But from her face, you couldn't see a trace of颓唐. It was clear that she was full of enthusiasm for her life and work here. I noticed she had short hair—you should know that although most rural women here no longer wore overly complicated hair buns, few had short hair.
+But from her face, you couldn't see a trace of dejection. It was clear that she was full of enthusiasm for her life and work here. I noticed she had short hair—you should know that although most rural women here no longer wore overly complicated hair buns, few had short hair.
 
 "This way, I can spend much less time washing and combing my hair," Huo Shouying said. "The extra time is just right for studying and working."
 
