--- a/_posts/2011-4-30-3-37700.md
+++ b/_posts/2011-4-30-3-37700.md
@@ -8,13 +8,13 @@ tag: [normal]
 
 After the purification work was completed, the Ministry of Health led a comprehensive physical examination to confirm the absence of malignant diseases and various chronic diseases, especially the latter. Shi Niaoren personally took charge and directed Zhang Ziyi to conduct the physical examinations with the nurses.
 
-The examination items covered all the projects that the 穿越 (Time-Cross) members' health department was capable of. Shi Niaoren requested that it be as detailed and meticulous as possible, and also to inquire about their family medical history. Based on his observation of the immigrants, Shi Niaoren had summarized the common familial genetic diseases of the common people in this time and space. The purpose of a life secretary was self-evident. Considering that they were very likely to give birth to the first batch of descendants of the 穿越 (Time-Cross) members, the health of the future generations could not be taken lightly.
+The examination items covered all the projects that the transmigrator members' health department was capable of. Shi Niaoren requested that it be as detailed and meticulous as possible, and also to inquire about their family medical history. Based on his observation of the immigrants, Shi Niaoren had summarized the common familial genetic diseases of the common people in this time and space. The purpose of a life secretary was self-evident. Considering that they were very likely to give birth to the first batch of descendants of the transmigrator members, the health of the future generations could not be taken lightly.
 
 Those with hidden diseases, chronic diseases, or a family history of illness were eliminated as soon as they were found. Those who needed treatment were isolated for treatment separately. Those who did not hinder work and were not contagious were arranged separately: those with education could be recommended for administrative training classes in the future, and those without education were arranged to serve in the General Office, working as waitresses in various facilities specifically for the elders.
 
 In this way, about forty people were eliminated. The qualified ones entered a specially built camp for them to receive the next stage of training. In order to distinguish them from other natives and to have a grand-sounding title, the Maid Policy Committee issued an official standard title: "Life Secretary." The purpose of a life secretary was: to serve the chief's health and life at any time and any place.
 
-The matter of cultivating life secretaries was personally handled by President Wen, and it was treated as a special case. No matter what was involved, it was all green-lighted. Ma Qianzhan had a lot of complaints about this. In his view, this was a serious waste of the 穿越 (Time-Cross) Group's manpower and material resources, but the big hat of "the interests of the masses" made it impossible for him to say much.
+The matter of cultivating life secretaries was personally handled by President Wen, and it was treated as a special case. No matter what was involved, it was all green-lighted. Ma Qianzhan had a lot of complaints about this. In his view, this was a serious waste of the Transmigrator Group's manpower and material resources, but the big hat of "the interests of the masses" made it impossible for him to say much.
 
 Unlike other camps managed by the Civil Affairs Committee, the Maid Service School was directly managed and supplied by the General Office. It had real walls instead of simple barbed wire or bamboo fences, and only one entrance and exit. The entrance was strictly guarded at ordinary times, and no one was allowed to enter the school without a special pass.
 
@@ -32,7 +32,7 @@ These women were very willing to strictly enforce the school's discipline and we
 
 This move was called "knowing fear," or more colloquially, a show of force. Unlike the subordinate relationship of obeying orders and observing discipline cultivated among the students and soldiers, here, any spirit of autonomy and self-reliance was completely discouraged. The core was "gratitude" and "knowing fear," to fully establish a personality cult and extreme fear of the elders.
 
-This practice was considered unnecessary by many members of the Maid Policy Committee. Some even suspected that President Wen had a taste for SM. President Wen, however, farsightedly stated that this was "a matter concerning the future stability and unity of the 穿越 (Time-Cross) Group."
+This practice was considered unnecessary by many members of the Maid Policy Committee. Some even suspected that President Wen had a taste for SM. President Wen, however, farsightedly stated that this was "a matter concerning the future stability and unity of the Transmigrator Group."
 
 "There are all kinds of men," President Wen said at a meeting of the Maid Policy Committee. "Some are very masculine, and some comrades are too effeminate! If we don't properly discipline the maids and make them feel the greatest fear from the bottom of their hearts, it is very likely that a Wu Zetian-style figure will emerge in some elders' families!"
 
@@ -52,7 +52,7 @@ An Xi said, "President Wen has a point. There are many cases in history of being
 
 "Comrade An has great insight," President Wen praised An Xi. "Back to the topic! The possibility of being manipulated by women exists, and we must nip this in the bud from the source!"
 
-"But will the female 穿越 (Time-Cross) members have any objections? The current show-of-force education method is suspected of abusing women."
+"But will the female transmigrator members have any objections? The current show-of-force education method is suspected of abusing women."
 
 "Whoever has an opinion can request a general meeting. We will vote democratically," Wen Desi said. "Everyone has freedom of speech."
 
@@ -60,7 +60,7 @@ An Xi said, "President Wen has a point. There are many cases in history of being
 
 In addition to this group of women, the maid school also needed a principal to be responsible for all affairs. The otaku on the BBS who eagerly expressed their willingness to educate the maids for everyone were obviously unreliable. It was possible that they would steal from the granary they were supposed to be guarding. It was best to find a woman to be in charge to be reliable and stable.
 
-There were nearly twenty adult women among the 穿越 (Time-Cross) members. The problem was that except for Li Xiaolu and Du Wen who were single, all of them were the wives or girlfriends of the 穿越 (Time-Cross) members—obviously they were not interested in cultivating their future competitors. As for Li and Du, one was a逍遥 (carefree) person who, besides work, did not say a word, and the other was an absolute feminist who detested this even more.
+There were nearly twenty adult women among the transmigrator members. The problem was that except for Li Xiaolu and Du Wen who were single, all of them were the wives or girlfriends of the transmigrator members—obviously they were not interested in cultivating their future competitors. As for Li and Du, one was a逍遥 (carefree) person who, besides work, did not say a word, and the other was an absolute feminist who detested this even more.
 
 After thinking about it, they thought of Dong Weiwei, not because she showed any "magnanimous" spirit, but because Dong Weiwei was the fitness coach for the maids.
 
