--- a/_posts/2013-10-28-6-19800.md
+++ b/_posts/2013-10-28-6-19800.md
@@ -1,94 +1,93 @@
 ---
 layout: post
-title: 第一百九十八节　组长同志
+title: "Chapter 198: Comrade Group Leader"
 category: 6
 path: 2013-10-28-6-19800.md
 tag: [normal]
 ---
 
-　　“您很清楚，政治保卫总局是不收集元老个人的情报的。”赵曼熊用这句话拒绝了所有此类企图，“您作为元老向我们提出这样的要求是非常不妥当的。”
+"You know very well that the General Political Security Bureau does not collect intelligence on individual Elders." Zhao Manxiong used this sentence to refuse all such attempts. "It is highly inappropriate for you, as an Elder, to make such a request to us."
 
-　　“你说这样的话问心无愧吗？”
+"Can you say that with a clear conscience?"
 
-　　“您相信鬼神吗？”
+"Do you believe in ghosts and gods?"
 
-　　“什么？！”
+"What?!"
 
-　　“如果您相信的话，我可以赌个咒。”赵曼熊慢条斯理的说道。
+"If you do, I can make a vow," Zhao Manxiong said slowly and deliberately.
 
-　　在再一次的浏览过这次谈话的详细记录之后，赵曼熊签上了自己的名字和日期，合上了备忘录的封面。他打开自己办公室里二只保险柜里较小的一只，把备忘录放了进去。
+After once again reviewing the detailed record of this conversation, Zhao Manxiong signed his name and the date, and closed the cover of the memorandum. He opened the smaller of the two safes in his office and placed the memorandum inside.
 
-　　“秘密警察是一种危险的东西。同志们，你们不懂。”赵曼熊嘀咕着，锁上了厚重的钢门。
+"The secret police are a dangerous thing. Comrades, you don't understand," Zhao Manxiong muttered, locking the heavy steel door.
 
-　　办公室的门上响起了有节奏的敲门声，秘书给他送来了最新的二刊一报。看到最新一期的《启明星》他才意识到今天是周六了。
+A rhythmic knock sounded on the office door. His secretary brought him the latest issues of the "two publications and one newspaper." Seeing the latest issue of "Enlightenment," he realized it was Saturday.
 
-　　他打开启明星，草草浏览着目录。按照他的估计，这一期的《启明星》必然有大量的讨伐赵皇上和杭州站的檄文，自然也少不得为之辩护的文章，这是宣传口的老把戏了。在执委会没有具体表态，元老院的风向没有确定前，宣传口总是“中立”的。
+He opened "Enlightenment" and quickly scanned the table of contents. By his estimation, this issue would be filled with articles denouncing "Emperor Zhao" and the Hangzhou station, and naturally, there would be no shortage of articles defending them. This was an old trick of the propaganda department. Before the Executive Committee made a specific statement and the Senate's direction was set, the propaganda department always remained "neutral."
 
-　　第一篇就是气势汹汹，题目：济州卫星上天，杭州红旗落地。作者署名：斯巴达克斯团铁拳创作组。
+The first article was aggressive, titled: "Jeju's Satellite Soars, Hangzhou's Red Flag Falls." The author was credited to: "Spartacus Legion Iron Fist Creation Group."
 
-　　同志们，在元老院的开拓历程中，济州岛无疑是一个成功的典型：时间快，花费少，收益大，后患小，已经走上了正循环的康庄大路；而杭州站则变成反面教材的楷模：元老赵某耗费了天量的时间和人力、物力，结果基本任务一项也没有完成，如果不是一些偶然因素，杭州站已经是灭顶之灾了。
+> Comrades, in the pioneering history of the Senate, Jeju Island is undoubtedly a model of success: fast, low-cost, high-yield, with few future troubles, it has already embarked on the broad road of positive circulation. The Hangzhou station, on the other hand, has become a model of a negative example: Elder Zhao So-and-so has spent a tremendous amount of time, manpower, and resources, yet not a single basic task has been completed. If not for some accidental factors, the Hangzhou station would have already met with disaster.
+>
+> Why is there such a huge contrast? The key is the difference in ideological line. The ideological line is the foundation of everything. If the line is wrong, the greater the investment, the more the results will deviate from the goal. The reason for Jeju Island's success lies in its adherence to a mass line: eliminating the government, slaughtering the great households, liberating the slaves, and organizing the laborers into communes. This line, coming from the masses and going to the masses, destroys the government and the great households, so no one will stand up to oppose us; it liberates and organizes the working people, so the people are grateful and give rise to heroines like Jin Wushun and model units like the White Horse Team.
+>
+> It is very regrettable that some among us have forgotten the masses, detached themselves from the common people, and placed their hopes on the bureaucratic gentry ruling class. This is simply the height of folly. They spend their days exchanging pleasantries and flirting with the great households and gentry, feeling pleased and complacent, as if they themselves have become elegant and noble Ming gentlemen. This is called forgetting one's roots, this is called betrayal!
+>
+> Do we not have lessons from the past? How prosperous was the Zhiming Tower back then? It was like a beacon of fashion for the great households of Southern China, but with the slightest trouble, it revealed its true colors as a colossus with feet of clay. It wasn't until Elder Guo returned to Guangzhou with the support of gunboats and bayonets that the Zhiming Tower finally stood firm.
+>
+> The common people are a blank sheet of paper; they can be reformed, they can be molded into citizens of a new society. The practice in Taiwan, Hainan, and Jeju Island has proven this point.
+>
+> However, for the imperial family and gentry of the Zhu Ming to receive the salvation of our Great Song is harder than a camel passing through the eye of a needle. They are only surprised or fearful of our strange and ingenious skills; in their bones, they still regard us as barbarians. The moderate ones want to assimilate us, the radical ones want to eliminate us.
+>
+e> Therefore, we must abandon any illusions about the Zhu Ming ruling class. To us, Zhu Youjian and Yuan Chonghuan, Sun Chengzong and Wu Sangui, Wang Cheng'en and Shi Kefa, there is no difference. Strictly speaking, these people are no different from the Spanish Governor-General in Manila, the Portuguese Bishop in Goa, or the Tokugawa Shogun in Edo. Between us and them, compromise and cooperation are temporary, partial, and relative; struggle and destruction are permanent, total, and absolute. Towards them, we have nothing but Jihad, and more Jihad.
+>
+> I see many heads, heads wearing tall black gauze hats, round and shiny heads, in the capital, in Nanzhili, in Hangzhou, all ripened, ripened like watermelons. The land of the Zhu Ming seems to be a melon field waiting to be harvested.
+>
+> ...
 
-　　为什么会出现如此大的反差呢？关键就是思想路线的差别。思想路线是一切的根本，路线走错了，越是投入大，效果越是南辕北辙。济州岛之所以成功，就在于走了一条群众路线：灭官府、屠大户、解放奴婢，用公社把劳动者组织起来。这条路线，从群众中来，到群众中去，毁灭官府和大户，就不会有人出头来反对我们；解放和组织劳动人民，人民就感恩戴德，涌现出金五顺这样的女英雄和白马队这样模范单位。
+Zhao Manxiong made a mark on the article with a pencil. The next one was: "Whose Domain is the Hangzhou Station? Is the Senate's Jiangnan Strategy Paving the Way for Someone Surnamed Zhao to Build His Own Empire!!!"
 
-　　非常遗憾的是，我们中的一些人，忘记了群众，脱离了百姓，把希望寄托到官僚士绅统治阶级身上去了，这简直是愚不可及。他们终日与大户士绅迎来送往、打情骂俏，欣欣然飘飘然，仿佛自己也成为一名优雅高尚的大明绅士了，这就叫忘本，这就叫背叛！
+Zhao Manxiong skimmed it and made another pencil mark. It seemed the firepower against Zhao Yigong was quite intense. He flipped through the next few pages, all of which were various attack articles. Many articles also brought up past events of the Guangzhou and Leizhou stations. Matters concerning Shandong were also dragged in.
 
-　　难道我们没有前车之鉴么？当年紫明楼多红火？俨然南中国的大户流行风潮之灯塔，但是稍有风吹草动就露出了泥足巨人的本色。直到郭元老在炮舰和刺刀的支持下重返广州，紫明楼才算站住脚跟。
+*Emperor Zhao has some skill.*
 
-　　老百姓是一张白纸，是可以改造，可以塑造成新社会的公民的，在台湾、在海南、在济州岛的实践证明了这一点。
+Zhao Manxiong thought to himself. This was a clear attempt to drag all the external stations into the water, playing the game of "all for one, and one for all." The dispatched Elders and their supporters in Lingao would inevitably jump out. Then, new and old grudges would erupt together, and everyone would be busy tearing at each other, and no one would care about the Hangzhou station anymore.
 
-　　然而，朱明的皇族、士绅要得到我大宋的救赎，比骆驼穿过针眼还难；他们只是惊奇或者畏惧于我们的奇技淫巧，骨子里还是把我们视作蛮夷，温和一点要归化我们，激进一点的要消灭我们。
+Naturally, Zhao Yigong's goal was to muddy the waters. The murkier, the easier to get through. Zhao Manxiong was not interested in the fate of his namesake. His only interest was the security departments of the various external stations.
 
-　　所以，我们要放弃对朱明统治阶层的任何幻想，朱由检和袁崇焕、孙承宗和吴三桂、王承恩和史可法，对我们来说没有任何区别，严格的说，这些人和马尼拉的西班牙总督、果阿的葡萄牙主教、江户的德川将军，没有任何区别。我们和他们，妥协与合作是暂时的、局部的、相对的，斗争与摧毁是永久的、全部的、绝对的，我们对他们，除了吉哈德还是吉哈德。
+These security departments were currently under the dual leadership of the Foreign Intelligence Bureau and the Department of Colonization and Trade. Although members of the Ten-Man Group were secretly placed among them for counter-espionage purposes, and the members of the security departments also received professional guidance and training from the General Political Security Bureau, they did not fall under the General Political Security Bureau's management.
 
-　　我看见有很多脑袋、戴着高高的乌纱帽的脑袋，圆溜溜的脑袋，在京师、在南直隶、在杭州，都成熟了，像西瓜一样的成熟了，朱明的土地，好像就是一块等待收获的瓜田。
+The crisis at the Hangzhou station, especially the appearance of Hao Yuan, gave him a great opportunity to infiltrate the security departments of the external stations. He did not expect to seize leadership of the security departments, but at least he could establish a "Political Security Group" within them and openly insert his own personnel.
 
-　　……
+He had to make full use of this opportunity. However, sending people to join the inspection team was a high-risk matter. He had to fully grasp the spirit of the Executive Committee and the "direction of the wind" in the Senate.
 
-　　赵曼熊用铅笔在文章上做了一个记号，接下来又是一篇：《试问杭州站是谁家之天下―元老院的江南攻略是不是替某个姓赵的打天下！！！》。
+While Zhao Manxiong was seriously studying the political winds, in a conference room in the Executive Committee compound, Comrade Yi Fan, the head of the Special Audit Committee for Purging Corruption and Idleness, or "Cheka" for short, had been confirmed as the leader of the inspection team.
 
-　　赵曼熊草草看了看，又用铅笔做了一个记号。看起来针对赵引弓的火力很猛么。他翻开后面几页，清一色的各种炮轰文章，很多文章还牵扯到广州站和雷州站的往事。山东方面的事情也被牵扯出来。
+At this moment, talking with Comrade Yi Fan were [Ma Qianzhu][y005], the direct leader of the Cheka, Cheng Dong, and the head of the First Division of the Foreign Intelligence Bureau, Li Yan.
 
-　　赵皇上有点小水平。
+Obviously, Cheng Dong was just there for show. Everyone knew that the problems of the external stations were never just financial issues, but more about resource allocation and the policy of the mainland strategy.
 
-　　赵曼熊心想，这是摆明了要拉着各地的外派站一起下水，弄“一荣俱荣，一损俱损”的把戏。外派元老和他们在临高的支持者们必然会跳出来。到时候新仇旧恨一起爆发，大家互相扯头花撕逼起来，谁也顾不上什么杭州站了。
+"...Comrade Yi Fan, your task is heavy." [Ma Qianzhu][y005] sat on the sofa, leaning slightly forward. Due to his long hours of work, his forehead was already half-bald. "Many of the current problems at the external stations did not accumulate overnight. They are more the product of long-term expediency and inter-departmental interest struggles. Therefore, I hope that when you go to these places, you will not only discover problems from the accounts, but also identify problems in all aspects—especially those structural problems."
 
-　　自然，赵引弓的目的就是把水搅浑，越浑越容易过关。他赵曼熊对这位本家的下场如何并不感兴趣。他唯一感兴趣的是各驻外站的保卫部。
+"Yes, Comrade [Ma Qianzhu][y005]." Yi Fan was both excited and happy. The leader of the Central Inspection Team! To put it more "traditionally," he was an imperial envoy. Although he didn't hold a "Shangfang sword," the pen he used to write reports was as heavy as a mountain. A single word could mean life or death. The political fate of so many people would be in his hands. He felt a little giddy.
 
-　　这些保卫部目前接受的是对外情报局和殖民和贸易部的双重领导。虽然出于防奸的目的，这些人员中都秘密安插了十人团成员，同时保卫部的成员也接受政治保卫总局的业务指导和培训，但并不属于政治保卫总局的管理范畴之类的。
+[Ma Qianzhu][y005] seemed to see through his thoughts and continued, "You are now a person sent by the central leadership. What the local people tell you and show you will inevitably be embellished. You must have a heart that can distinguish objective facts and not be deceived."
 
-　　这次杭州站的危机，特别是郝元的出现，给了他一个渗透驻外站保卫部的大好机会。他并不奢望夺取保卫部的领导权，但是至少可以在保卫部内部设置一个“政保组”，堂而皇之的将自己的工作人员安插进去。
+"Yes, you can rest assured. I will definitely guard against arrogance and rashness, and with a learning attitude, do all my work with modesty and prudence..."
 
-　　要充分利用这次的机会。但是，派人参加巡视组是一件高风险的事情，必须充分领会执委会的精神和元老院的“风向”。
+[Ma Qianzhu][y005] waved his hand: "Let's not talk about making resolutions. The situation at the external stations is very complicated. Some obvious violations had their own unavoidable reasons at the time. Some projects have already had huge investments, some projects involve the hearts and minds of the local people, and some may even be related to certain central ministries and commissions. For all these projects, first, you must investigate the specific content clearly, without any omissions; second, you must treat them with caution and objectively estimate the consequences. Do not act rashly."
 
-　　就在赵曼熊正在认真研究政治风向的同时，在执委会大院的一间会议室里，已经被确定为巡视组组长的肃清腐败及怠工特别审计委员会简称“契卡”的头目裔凡同志。
+"Without instructions from the Executive Committee, I will not make any related decisions." Yi Fan nodded with an extremely sincere attitude, thinking to himself that Old Ma's instructions were hesitant and his attitude was a bit ambiguous. He had to be careful. "I just have a few points I'd like to ask for instructions on."
 
-　　此时正在裔凡同志谈话的是[马千瞩][y005]，契卡的直接领导者：程栋。还有对外情报局第一处处长李炎。
+"Go ahead."
 
-　　显然程栋是一个陪客，谁都知道，具体到各驻外站的问题，从来就不仅仅是财务问题，更多是资源配置和对大陆攻略的政策问题。
+"If we discover major problems during the inspection, do we have the power to deal with them on the spot? For example, detaining personnel, freezing accounts."
 
-　　“……裔凡同志，你的任务很重。”[马千瞩][y005]坐在沙发上，身体微微前倾，因为长期忙于工作，他的额头已经半谢顶了，“驻外站目前的许多问题，不是一朝一夕积累起来的，更多是长期性的权宜之计和各部门利益争夺之下的产物，所以我希望你此次前往各地，不仅要从账目上发现问题，还要在各个方面找出问题―特别是那些结构性的问题。”
+"The Cheka has all the compulsory powers, and the inspection team has them too," [Ma Qianzhu][y005] said. "However, any measures must be taken on the premise of not interfering with the normal operation of the external station. Unless the inspection team believes that the current project poses a major danger to the Senate or the external station. You are there to find out the problems, not to carry out a purge."
 
-　　“是的，[马千瞩][y005]同志。”裔凡现在的心情即激动又快活。中央巡视组组长！说得“传统”一点，自己就是钦差大臣，虽然没有手拿尚方宝剑，但是一支写汇报的笔也重如千钧。堪称一字生，一字死。多少人的政治命运就要掌握在自己的手里了。他简直有点飘飘然了。
+"The final decision-making power on the problems still rests with the Executive Committee and the Senate."
 
-　　[马千瞩][y005]似乎看出他的心思来，继续说道：“你现在是中央派出去的人，地方上说给你听得，给你看得，必然有所修饰，你要有明辨客观事实的心不要被迷惑了。”
+"Right, I'm relieved that you are clear on this point." [Ma Qianzhu][y005] nodded in approval. "This inspection team will also have comrades from the General Political Security Bureau and the Foreign Intelligence Bureau. Their scope of work is different from yours, but I will talk to them and ask them to fully cooperate with your work."
 
-　　“是，您放心好了，我一定戒骄戒躁，以学习的心情，谦虚谨慎的做好一切工作……”
+"Yes, I will also fully cooperate with their work." Yi Fan understood the subtext.
 
-　　[马千瞩][y005]摇了摇手：“表决心的话就不要说了。目前驻外站的情况很复杂，有些明显违规的事情当初也有不得已的地方，有的项目投资已经很大，有的项目牵扯到地方上的人心，有的可能还和中央的某些部委办有关联。所有的这些项目，你第一要查清具体的内容，不能有遗漏；第二要谨慎的对待，客观的估计后果。不要轻举妄动。”
-
-　　“在没有执委会的指示之前，我不会做任何相关的决定。”裔凡态度极其诚恳的点着头，心想老马这指示瞻前顾后，态度有点暧昧，自己倒是要小心几分了，“只是我还有几点想请示。”
-
-　　“你说吧。”
-
-　　“如果在巡视中发现了重大问题，我们有无权力进行当即处置？比如扣留人员，查封账户。”
-
-　　“契卡拥有的各项强制权限，巡视组也一样有。”[马千瞩][y005]说，“但是，任何措施都以不干扰驻外站的正常运作为前提。除非巡视组认为目前的运作项目对元老院或者驻外站有重大的危险性。你们是去查清问题，不是去肃反。”
-
-　　“问题的最终解决权还是在执委会和元老院。”
-
-　　“对，你清楚这一点我就放心了。”[马千瞩][y005]赞许的点了下头，“这次巡视组里还会有政治保卫总局和对外情报局的同志，他们的工作范畴和你不同，不过我会和他们谈话，让他们全力配合你工作。”
-
-　　“是，我也会全力配合他们的工作。”裔凡明白这话外之音。
-
-　　“工业口、农业口和总参也会派几个人一起去。”[马千瞩][y005]若无其事的说道，“你作为组长，要搞好团结工作。”
-[y005]: /characters/y005 "马千瞩"
+"The industrial sector, agricultural sector, and the General Staff will also send a few people along," [Ma Qianzhu][y005] said nonchalantly. "As the group leader, you must do a good job of promoting unity."
