--- a/_posts/2014-5-27-6-40900.md
+++ b/_posts/2014-5-27-6-40900.md
@@ -1,74 +1,73 @@
 ---
 layout: post
-title: 第四百零九节 一网打尽
+title: Chapter 409: All in One Fell Swoop
 category: 6
 path: 2014-5-27-6-40900.md
 tag: [normal]
 ---
 
-　　卓一凡眼睁睁的看着司马求道斜着往左边的山坡冲了去。只见他大步流星，步法轻盈得如行云流水一般。身形几个起落便蹿出去七八丈远。
+Zhuo Yifan watched helplessly as Sima Qiudao charged diagonally up the left slope. He moved like the wind, his steps as light and fluid as flowing water. With a few leaps and bounds, he covered a distance of seven or eight zhang.
 
-　　几乎同时，对面的狗狂吠起来，其他几只也跟着狂叫起来。此时髨贼军官立刻一挥手，几只大狗便被松掉了链子。四个黑影就像箭一样咆哮着窜了出来。
+Almost simultaneously, the dogs on the opposite side began to bark furiously, and the others joined in. The髡-haired officer immediately waved his hand, and the large dogs were unleashed. Four black shadows shot out like arrows, roaring.
 
-　　卓一凡的心顿时提到了嗓子眼上，此时髨贼的鸟铳也响了。劈劈啪啪的好不热闹，对面山坡上顿时被烟雾笼罩。
+Zhuo Yifan's heart leaped into his throat. At that moment, the髡-haired men's muskets also fired. The crackling of the guns was deafening, and the opposite slope was instantly shrouded in smoke.
 
-　　司马求道周围被铳子打的石花横飞，土烟翻腾。他一点也没有缓下来，像灵猿般矫捷的在草木石块间跳跃奔腾。枪子竟似挨不到他的边一般。须臾之间，他已经下了山，越过了两道田埂，很快就要跑进左边那座小山的林子里面了。
+Sparks flew from the stones and dust billowed around Sima Qiudao as he was hit by the bullets. He didn't slow down at all, leaping and bounding through the grass, trees, and rocks like a nimble ape. The bullets seemed unable to touch him. In a flash, he had descended the mountain, crossed two paddy fields, and was about to run into the woods on the small hill to the left.
 
-　　快跑呀。卓一凡无声的喊叫道。司马求道似听得到一般，愈跑愈快，
+"Run!" Zhuo Yifan shouted silently. Sima Qiudao seemed to hear him, running faster and faster.
 
-　　突然，卓一凡看到司马求道的裤管像是被什么东西往左边拽了一下，猛的飞出一些细小的碎屑。只见司马求道似乎浑身一紧，当即跌落在田中……身子还未落稳，那四只大如牛犊的恶犬便已经咆哮着扑向了司马求道。
+Suddenly, Zhuo Yifan saw Sima Qiudao's trouser leg being pulled to the left by something, and a shower of small debris flew out. Sima Qiudao's body seemed to tense up, and he immediately fell into the paddy field... Before he could even steady himself, the four vicious dogs, as large as calves, were already roaring and pouncing on him.
 
-　　“糟了！”卓一凡浑身冰冷。他是中过枪弹的人，知道一旦中弹，若无人帮衬，连爬也爬不起来，更何况还有四条恶犬围扑上来！
+"Damn it!" Zhuo Yifan felt a chill run down his spine. He had been shot before and knew that once hit, it was impossible to even crawl without help, let alone with four vicious dogs attacking!
 
-　　司马求道毕竟是练武之人，反应极快，他一个翻身从腰间抽出匕首就想往扑上来的恶犬刺去。无奈身上两处伤口让他根本无法用力，手腕立刻被第一条咬住了。顿时如钻心般疼痛，手中的匕首也脱了手。一瞬间第二条第三条第四条一起都扑了上来。幸而它们都是受过训练的警犬，见司马求道已经失去抵抗能力，没有一窝蜂的都扑上来撕咬。然而即使这样，他还是发出瘆人的恐怖惨叫声……
+Sima Qiudao, after all, was a martial artist with quick reflexes. He rolled over and drew a dagger from his waist, intending to stab the pouncing dogs. But the two wounds on his body made it impossible for him to exert any force, and his wrist was immediately bitten by the first dog. A piercing pain shot through him, and the dagger fell from his hand. In an instant, the second, third, and fourth dogs all pounced on him. Fortunately, they were trained police dogs. Seeing that Sima Qiudao had lost the ability to resist, they didn't all swarm him and tear him apart. But even so, he still let out a terrifying, blood-curdling scream...
 
-　　他身上的衣服已经被撕成了碎片，身上鲜血淋漓皮开肉绽。几个髨贼军士放慢了脚步，端着鸟铳慢慢的围拢了过去，看样子似乎还怕对方会忽然跳起来伤人。
+His clothes were torn to shreds, and his body was covered in blood, his flesh torn open. A few髡-haired soldiers slowed their pace, cautiously approaching with their muskets, as if afraid he would suddenly jump up and attack.
 
-　　这几个士兵看着围着司马求道，大声说着一些卓一凡听不懂的不知道什么语言。看样子十分得意。看到这里卓一凡睚眦欲裂，吐出两字：禽兽也！有朝一日。我要给你报仇，卓一凡一掌拍在石头上。
+The soldiers surrounded Sima Qiudao, speaking loudly in a language Zhuo Yifan didn't understand. They looked very pleased with themselves. Seeing this, Zhuo Yifan's eyes blazed with anger, and he spat out two words: "Beasts! One day, I will avenge you!" He slammed his palm on a rock.
 
-　　趁着髨贼围观司马求道的当口，卓一凡忍着身上的剧痛，起身就往山上跑。眼下只能跑得一里是一里了。然而还没跑两步，背后忽然传来少年大叫：“山上还有一个！”话音未落后面就想起了鸟铳的炸响，山下的髨贼一起朝卓一凡射击，铳子在卓一凡身旁嗖嗖飞过，打的周围树叶树枝嗖嗖的往下掉，卓一凡不顾一切的发足狂奔。竟一鼓作气翻过了小山。
+Taking advantage of the髡-haired men's focus on Sima Qiudao, Zhuo Yifan endured the excruciating pain in his body and got up to run up the mountain. For now, he could only run as far as he could. But he hadn't taken more than two steps when he heard a young man shout from behind, "There's another one on the mountain!" Before the words were even out of his mouth, the sound of muskets firing erupted from behind him. The髡-haired men at the foot of the mountain all fired at Zhuo Yifan. Bullets whizzed past him, sending leaves and branches flying. Zhuo Yifan ran for his life, and in one breath, he crossed the small mountain.
 
-　　刚刚凭着一股子虚力翻过了山顶的卓一凡，下山的脚步慢了下来，他身上伤口剧痛，哪怕每次轻轻的呼吸一下。肋下都疼的钻心，口渴的很，喉咙像着火了一般。没办法挪动脚步，基本上就是往前扑向一颗树。稍稍喘口气，然后再往前。再扑向一棵树稍稍喘口气，以此往下，渐渐的他看到了山谷。再扑上最后一棵树的时候，他脚下被什么藤绊了一下，腿一软整个人都翻滚着摔了下去，最后他正好左腿的伤处硬生生的磕在了一块岩石上，昏了过去。
+Having just crossed the mountain on a burst of adrenaline, Zhuo Yifan's pace slowed as he descended. The wounds on his body were excruciatingly painful, and even the slightest breath sent a sharp pain through his ribs. He was thirsty, his throat felt like it was on fire. He couldn't move his feet properly. He basically just stumbled forward, grabbing onto a tree to catch his breath, then pushed himself forward again, grabbing another tree to catch his breath. He continued in this way, and gradually, he saw the valley. As he reached for the last tree, his foot got caught in a vine, his legs gave way, and he tumbled down, his left leg hitting a rock hard, and he passed out.
 
-　　大概一小会儿他疼醒了，他觉得头昏的不行，天旋地转，他回头一看，他已经滚下了山，躺在山谷里的草丛里了。山上隐约听到了山上的狗叫声，他想站起来，但是怎么也站不起来了，只好侧身，用右肘支撑着往海边爬，左腿左肋每动一下都疼的让自己不自主的抽搐……
+He woke up a short while later, the pain bringing him back to consciousness. He felt dizzy, the world spinning around him. He looked back and saw that he had rolled down the mountain and was lying in the grass in the valley. He could faintly hear the sound of dogs barking on the mountain. He tried to stand up, but he couldn't. He had to turn on his side and use his right elbow to support himself as he crawled towards the sea. Every movement of his left leg and left rib sent an involuntary spasm of pain through his body...
 
-　　天空是湛蓝的，云朵是雪白的，他想起了武当山的云海，云也是这样白……眼睛渐渐的模糊了，隐约间他好像看到了一条船在云海间飘着，上面站着好几个人，他想看清楚，但是怎么也看不清楚，他只好呼喊着，突然间他似乎看清楚了，那船上站着的几个人正是师弟们，他们都在对他笑，赵师弟大声喊他：过来呀，快点，就要到了。师兄，就要到了……
+The sky was azure, the clouds were snow-white. He thought of the sea of clouds on Wudang Mountain, the clouds were just as white... His vision gradually blurred. In the haze, he seemed to see a boat floating in the sea of clouds, with several people standing on it. He wanted to see them clearly, but he couldn't. He could only call out. Suddenly, he seemed to see them clearly. The people on the boat were his junior brothers. They were all smiling at him. Junior brother Zhao shouted at him: "Come on, hurry up, we're almost there. Senior brother, we're almost there..."
 
-　　然而那边却又有一个年轻的女子，穿着白衣服蓝裙子，站着一动不动的看着他，满脸愁绪的望着他——这是练霓裳，她也来抓自己么？卓一凡看着她的眼睛，那一双眼睛里面似乎充满了泪水……
+But then, there was a young woman in a white dress and blue skirt, standing motionless, looking at him with a sorrowful expression. It was Lian Nishang. Was she here to capture him too? Zhuo Yifan looked into her eyes, and they seemed to be filled with tears...
 
-　　三四个治安军紧随着他冲下了山。他们脚步飞快，瞬间就追上了卓一凡，打头那个端着上了铳剑的鸟铳朝卓一凡就飞奔过去，看到被抓捕的对象已经倒卧在草丛中勉强爬行，他将步枪反身背上，从腰间抽出了太刀，缓步的逼了过去。
+Three or four public security soldiers rushed down the mountain after him. They were swift, and in an instant, they had caught up with Zhuo Yifan. The one in the lead, carrying a musket with a bayonet, ran towards Zhuo Yifan. Seeing that the target was already lying in the grass, barely crawling, he slung his rifle over his back, drew a tachi from his waist, and slowly approached.
 
-　　然而卓一凡完全没有发现他，士兵奇怪的看了看这个显然已经受了重伤的人，还在艰难的往山坡方向扒着草木想移动。这个人既然被人严密保护，纵然不是大将，也是重要武士，取下首级，功劳大大的。他微微一个弓步双手持刀举过头顶，照着卓一凡的后脖子就要往下劈……
+However, Zhuo Yifan didn't notice him at all. The soldier looked strangely at the man, who was obviously seriously injured, still struggling to move towards the slope, grabbing at the grass and trees. Since this person was being so heavily protected, even if he wasn't a general, he was an important warrior. Taking his head would be a great merit. He took a slight lunge, raised the sword with both hands above his head, and was about to bring it down on the back of Zhuo Yifan's neck...
 
-　　“止めろ！”
+"Stop!"
 
-　　突然背后传来一声粗野的暴喝，军士迟疑的看了身后赶上来得一个军官，
+Suddenly, a rough shout came from behind. The soldier hesitated and looked at the officer who had just caught up.
 
-　　“巴嘎！”看这军官的样子，很有给这军士“三宾的给”的意思。不过他显然更关心卓一凡的死活。
+"Baka!" The officer looked like he was about to give the soldier a good slap. But he was clearly more concerned about Zhuo Yifan's life.
 
-　　军士懊恼的嘟囔了一句：“呐尼？！”
+The soldier muttered in annoyance, "Nani?!"
 
-　　但是，还是把刀立刻插进了横在腰间的刀鞘，然后转身向军官的方向立正，微微一欠身说道“嗨咦！”
+But he immediately sheathed his sword and turned to face the officer, standing at attention and bowing slightly, "Hai!"
 
-　　这使旁边的一个治安军啪的一枪托砸在了卓一凡的后背上，把卓一凡砸得趴倒在了草丛里，一动不动。
+This caused a public security soldier next to him to smash the butt of his rifle into Zhuo Yifan's back, knocking him to the ground, motionless.
 
-　　冈本信因为暗杀事件中受了惊吓，晚上没睡好，一大早就起来了。彩排的事情给搅合了，文化祭听到风声说也要推迟举行——就算按期举行也演不了，民乐团都给弄到临时拘留所去“协助调查”去了——闹得他的心情十分的坏。
+Okamoto Shin was startled by the assassination attempt and didn't sleep well that night. He woke up early in the morning. The rehearsal was disrupted, and he heard that the cultural festival was also going to be postponed. Even if it were held on schedule, they couldn't perform. The folk music orchestra had been taken to a temporary detention center for "assisting with the investigation." This put him in a very bad mood.
 
-　　咱们干文艺的，不给演出还混个屁呀。自己的这股怨气还没化解，居然又听某些元老在内部网上说怪话，什么“搞文艺的都是戏子”、“不能吃不能喝，花花泡泡的尽浪费粮食”。
+"We're in the arts, what's the point if we can't perform?" His resentment hadn't even dissipated when he heard some of the Elders making strange comments on the internal network, things like "artists are just actors" and "they can't eat or drink, they're just a waste of food."
 
-　　“干实事难，干文艺方面的实事更是难上加难。”冈本一边嘀咕一边在女仆的服侍下盥洗。他从前也是爱好“反体问”的文艺喷子，基本上就是食堂了打死一只老鼠也要“不禁要问，是什么让这只老鼠走上了偷吃饭菜的道路”之类。不过自从当了文艺团体的负责人之后，自己也尝到了被喷的滋味，最近已经不大喜欢这套了。
+"It's hard to do practical things, and it's even harder to do practical things in the arts." Okamoto muttered to himself as he was being served by his maid. He used to be a "critical" art critic himself, the type who, if a mouse was killed in the cafeteria, would ask, "What led this mouse to steal food?" But since he became the head of the art troupe, he had also tasted the bitterness of being criticized, and he didn't like it much anymore.
 
-　　盥洗完毕，坐在桌子前吃女仆预备好得早饭。他翻开了今天刚刚送来得报纸。不出所料，《临高日报》整版都是破获暴恐集团的新闻。首版还配发了两幅新闻照片，新闻配发照片可是少有的事情。
+After washing up, he sat at the table and ate the breakfast his maid had prepared. He opened the newspaper that had just been delivered. As expected, the entire front page of the *Lingao Daily* was about the cracking of the terrorist group. The front page even had two news photos, which was a rare thing.
 
-　　第一副配得标题是《匪首穷途末路于南宝落网》。照片前排是司马求道被五花大绑的肩并肩盘腿坐在地上，面前放着几把刀剑和匕首。后面是一排治安军枪托着地，站的笔挺，个个眼睛瞪的像牛眼睛那么大。卓一凡闭着眼睛，腿上缠着被血染红的绷带，身后的一个治安军右手扶枪，左手把他头顶的头发揪住往后拉，让他整个面孔都能被拍的清楚，司马求道在旁边脑袋耷拉在肩膀上眼神空空的看着前方。照片下有一行说明文字：卓匪一凡，司马匪求道，落网！正文一排文字大致介绍了治安军如何英勇追击，如何神勇擒获两名凶徒。
+The first photo was captioned "Bandit Chief Captured at Nanbao." In the front row, Sima Qiudao was tied up and sitting cross-legged on the ground, with several swords and daggers in front of him. Behind him was a row of public security soldiers, standing ramrod straight with their rifles grounded, their eyes wide like a bull's. Zhuo Yifan's eyes were closed, his leg wrapped in a blood-stained bandage. A public security soldier behind him held his rifle with his right hand and pulled his hair back with his left, so that his entire face could be clearly photographed. Sima Qiudao's head was slumped on his shoulder, his eyes staring blankly ahead. Below the photo was a caption: "Bandit Zhuo Yifan, Bandit Sima Qiudao, captured!" The text briefly described how the public security soldiers had bravely pursued and captured the two criminals.
 
-　　下面一幅是十多个装束各异的男女，用绳子捆住右臂，连成一串，一个个垂头丧气，神情萎顿，有的身上还有伤。周围全副武装的警察、士兵环绕。说明是：落网的男女暴恐分子。
+The photo below showed more than a dozen men and women in various costumes, their right arms tied together in a string. They were all dejected and listless, some with injuries. They were surrounded by heavily armed police and soldiers. The caption read: "Captured male and female terrorists."
 
-　　“几个小娘皮长得还真不错……”其实从模糊的照片上根本看不出脸部细节来，但是这几位的衣架子却明显比土著匀称，“盘靓条顺！”
+"A few of the girls are quite pretty..." In fact, you couldn't see the facial details from the blurry photo, but their figures were clearly more well-proportioned than the natives. "Good figures!"
 
-　　冈本喝了口豆浆继续往下看。配图报道很长，他花了点时间认真看了一遍，虽然这种八股文大致都是一样的套路，无非领导指导有方，干部办事得力，群众奋不顾身……文章写得花团锦簇，滴水不漏，典型的从胜利走向更大的胜利。虽说废话多了点，但是整个侦察和抓捕过程倒是写得很清楚。最后还列出了全部战果，俘虏三十人，击毙十八人，目前无人在逃。
+Okamoto drank some soy milk and continued reading. The illustrated report was long, and he took some time to read it carefully. Although this kind of official writing was all the same, with the leaders giving wise guidance, the cadres working effectively, and the masses bravely sacrificing themselves... The article was flowery and watertight, a typical story of moving from victory to greater victory. Although there was a lot of nonsense, the entire investigation and capture process was written very clearly. Finally, it listed all the results: thirty captured, eighteen killed, and no one currently at large.
 
-　　下面还有一块长条的豆腐干：《弃暗投明，一暴恐分子主动投案自首》。冈本信对这个不感兴趣，便翻了过去。
+Below that was a small article: "A Terrorist Turns Himself In, Abandoning the Darkness for the Light." Okamoto Shin wasn't interested in this and turned the page.
 
-　　头版背面是《跳蚤蹦的再高，能把锅盖掀了？——采访政保总局领导午木》……午木透露，有暴恐分子、被镇压漏网分子、封建会道门等一直没有停止过对我们的渗透和破坏，最近的破获的团伙人员组成就是一个例证……
-
+The back of the front page was "Can a Flea Jump High Enough to Flip a Pot Lid? - An Interview with Wu Mu, a Leader of the General Political Security Bureau." ...Wu Mu revealed that terrorists, remnants of suppressed elements, and feudal secret societies have never stopped their infiltration and sabotage against us. The composition of the recently cracked gang is a case in point...
