--- a/_posts/2014-6-14-6-42700.md
+++ b/_posts/2014-6-14-6-42700.md
@@ -1,98 +1,98 @@
 ---
 layout: post
-title: 第四百二十七节 联络图
+title: Chapter 427: The Contact Chart
 category: 6
 path: 2014-6-14-6-42700.md
 tag: [normal]
 ---
 
-　　卢炫的书房在第二进院的跨院，小小的院落自成一个小天地，不管是建造还是庭院景观设计都是整间住宅的精华。小院是专门请临高建筑里唯一专业的景观设计师[李潇侣][y156]设计的，闹得总设计师梅晚很是吃了一番醋。
+Lu Xuan's study was in the side courtyard of the second courtyard. The small courtyard was a world of its own. Both its construction and landscape design were the essence of the entire residence. The small courtyard was specially designed by [Li Xiaolü][y156], the only professional landscape designer in Lingao architecture, which made the chief designer Mei Wan quite jealous.
 
-　　既然精心打造，自然是不惜工本，花去的成本大约是整间住宅的三分之一。不过卢炫认为这个钱花得值，比起正房来，这里才是他的司令部。实际上，他平日里除了晚上睡觉之外很少去正院，大多数时候都在书房里度过。
+Since it was carefully crafted, it was naturally built without regard to cost, with the cost accounting for about one-third of the entire residence. However, Lu Xuan believed that the money was well spent. Compared to the main house, this was his headquarters. In fact, he rarely went to the main courtyard except to sleep at night, spending most of his time in the study.
 
-　　书房装潢陈设极为精致，大量使用了从企划院仓库里买来得抄家货。此刻他坐在书房里，望着院落里的假山，心不在焉的翻看着从保险柜里取出的“联络图”，脑袋里却一团乱麻。
+The study was exquisitely decorated and furnished, with a large number of confiscated goods bought from the Planning Commission's warehouse. At this moment, he was sitting in his study, looking at the rockery in the courtyard, absentmindedly flipping through the "contact chart" he had taken out of the safe, his mind in a mess.
 
-　　他手里的这份“联络图”，只是薄薄的一个纸面文件夹，却是他这五年来蛰伏大图书馆苦心经营的唯一成果。
+The "contact chart" in his hand was just a thin paper folder, but it was the only result of his five years of hard work in the Great Library.
 
-　　过去他每次取出“联络图”的时候，心情总是非常愉快的。
+In the past, he was always in a very happy mood whenever he took out the "contact chart."
 
-　　你们折腾来折腾去的要搞什么庇护制，骑士效忠、私兵……哼哼，真正的骑士在这呢。
+You guys are making such a fuss about the patronage system, knightly allegiance, private soldiers... Hmph, the real knight is here.
 
-　　这些年来他资助了十几个学员，这里面的大多数已经进入了各个政府部门和军队工作。掌握了一个让他颇感欣慰的名单。而且他还在每年不断的增加新的名字上去――这个名单才是他以后能够在元老院乃至整个帝国翻云覆雨的资本。
+Over the years, he had sponsored more than a dozen students, most of whom had already entered various government departments and the army. He had a list that made him quite gratified. And he was constantly adding new names to it every year—this list was his capital to stir up trouble in the Senate and even the entire empire in the future.
 
-　　可现在五年过去了，元老院的事业一日千里，元老院不但在海南站稳了脚跟。而且已经拥有傲视群枭的势力，尽管元老院的统治依然粗糙。但是它在不断的学习，不断的磨合。变得越来越成熟，这也意味着留给他翻盘的机会不多了。
+But now, five years have passed. The cause of the Senate has progressed by leaps and bounds. The Senate has not only established a firm foothold in Hainan, but also has the power to look down on all the heroes. Although the rule of the Senate is still rough, it is constantly learning and adapting, becoming more and more mature. This also means that there are not many opportunities left for him to turn the tables.
 
-　　卢炫的焦虑恰恰来源于此如果他还不能在元老院里占据一个理想的位置掌握足够的政治资源，他就不可能继续控制他手中的团队：他收留他们、供养他们、培训他们，但最终他必须带领他们继续上升，给他提供一个更大的平台才能维持住这个团队的凝聚力与向心力，否则他这些年的隐忍与付出都将成为别人的嫁衣，而他自己也将真正沦落成一个靠人庇护的酱油众――这是卢炫绝对不能看到的。
+Lu Xuan's anxiety came from this. If he could not occupy an ideal position in the Senate and master enough political resources, he would not be able to continue to control his team: he took them in, supported them, and trained them, but in the end, he had to lead them to continue to rise and provide them with a larger platform to maintain the team's cohesion and centripetal force. Otherwise, his years of forbearance and dedication would become a wedding dress for others, and he himself would be reduced to a soy sauce crowd relying on others for protection—this was something Lu Xuan absolutely could not see.
 
-　　他开始怀疑，自己现有的能力是否能支持得住这个野心。
+He began to doubt whether his existing ability could support this ambition.
 
-　　以往他已经隐隐约约的感到了“门下”的异心，然而他并没有太放在心上。但是今天的刘蕙的议论让他意识到自己绘制的蓝图的危机已经在眼前了。
+In the past, he had vaguely sensed the dissent of his "disciples," but he had not paid much attention to it. But today's discussion with Liu Hui made him realize that the crisis of the blueprint he had drawn was already at hand.
 
-　　他对张兰和刘蕙的那顿发作与其说是他一种情绪的释放。不如说是有意的敲打。刘蕙和张兰都是他的枕边人，在卢家庄的地位仅此于他。她们有文化又都在临高这个穿越众的核心区域生活多年，眼界远高于一般的土著。
+His outburst at Zhang Lan and Liu Hui was not so much a release of his emotions as a deliberate warning. Liu Hui and Zhang Lan were both his pillow companions, and their status in the Lu family village was second only to him. They were educated and had lived in the core area of the transmigrators in Lingao for many years, so their horizons were much higher than those of ordinary natives.
 
-　　卢炫在元老院的实际生存状态她们多少是能看到的。尽管这几年卢炫完全称得上是卢家庄上下的衣食父母，可这些在他庇佑下生活的人长大了、成熟了，混个温饱已经不足以让他们对自己感恩戴德。但维持现在这个局面已经是卢炫能力的极限――已经工作的十多个归化民虽然都进了体制内当差，但是没一个当上够层次的干部。大多还是普通职员和工人。
+They could more or less see Lu Xuan's actual living conditions in the Senate. Although Lu Xuan had been the breadwinner of the Lu family village for the past few years, these people who lived under his protection had grown up and matured. A full stomach was no longer enough to make them grateful to him. But maintaining the current situation was already the limit of Lu Xuan's ability—the dozen or so naturalized citizens who were already working had all entered the system, but none of them had become a cadre of a sufficient level. Most of them were still ordinary staff and workers.
 
-　　他资助的在芳草地上学的孩子虽然一批批毕业和分配，但是他们一旦进入民政人民委员会人力处的管辖范围之内，凭卢炫手中现在的资源，这些人的前途命运就不是他能够左右的了。
+Although the children he sponsored to study at Fangcaodi graduated and were assigned jobs in batches, once they entered the jurisdiction of the Human Resources Department of the Civil Affairs People's Committee, with the resources Lu Xuan had at hand, their future was not something he could control.
 
-　　而在卢家庄里教养的这些人。对庄外如烈火烹油、鲜花着锦一样的世界充满了憧憬，都是一副跃跃欲试的样子。“学成文武艺，货与帝王家”，元老院当然当得上这个“帝王”。但他卢炫不是，而且他的元老光环还在逐渐蜕散。
+And these people who were raised in the Lu family village were full of longing for the world outside the village, which was like a raging fire and a brocade of flowers. They were all eager to try. "After mastering both literary and martial arts, sell them to the emperor's family." The Senate was certainly worthy of being this "emperor." But Lu Xuan was not, and his aura as a Senator was gradually fading.
 
-　　他原本在庄内培养的这些体制外土著，原本是打算用作自己经营生意扩大财源的经营人才。换句话说，是自己未来获取利益的“白手套”。
+He had originally intended to cultivate these off-system natives in the village as business talents to expand his financial resources. In other words, they were his "white gloves" to obtain benefits in the future.
 
-　　但是。要这么干，第一要有钱。第二要有权。
+But to do that, first, you need money. Second, you need power.
 
-　　不幸的是，他现在既没有钱也没有权。有一点面子，但是只能办小事。
+Unfortunately, he now had neither money nor power. He had some face, but he could only handle small matters.
 
-　　承包给张有福的那个包工队，他现在也不方便自己收回来干：吃相太难看了，要知道现在有正儿八经自己产业的元老一个都没有，即使是那生意火爆的南海咖啡馆，法理上也不是他的，而是农委会的财产。
+He was not in a position to take back the construction team he had contracted to Zhang Youfu: it would look too ugly. You know, there was not a single Senator who had a legitimate industry of his own. Even the popular South China Sea Cafe was not legally his, but the property of the Agricultural Committee.
 
-　　理论上，元老的分红是非常可观的。但是实际上，元老基本上无法支配这笔分红。元老院执行的是高积累政策，元老分红账户实际上是被冻结的。作为元老，能够支配只有自己的工资和补贴。每个财政年度结束之后再根据当年的货币发行情况酌情允许提取一定数额现金。
+In theory, the dividends of the Senators were very considerable. But in fact, the Senators basically could not dispose of this dividend. The Senate implemented a high accumulation policy, and the Senators' dividend accounts were actually frozen. As a Senator, he could only dispose of his own salary and subsidies. After the end of each fiscal year, a certain amount of cash was allowed to be withdrawn according to the currency issuance of that year.
 
-　　就是这样，财政口还在挖空心思的想着“回笼货币”。以至于有元老吐槽办公厅的“特供商店”卖得各种“办公厅特别用”商品其实就是本时空的“高级点心”。
+Even so, the financial department was still racking its brains to "re-circulate the currency." So much so that some Senators complained that the various "special supply" goods sold in the General Office's "special supply store" were actually the "high-end snacks" of this time and space.
 
-　　卢炫的收入不幸在元老中间又是相当少的。虽然职务工资上他和其他元老没多大区别，但是在津贴这一块上他就差得太多了。毕竟大图书馆的工作即非重体力劳动；又不用顶风冒雨，日晒夜露，爬山越岭；也没有在工厂或者战场上随时随地有一命呜呼的危险。所以大图书馆的津贴标准是按照最低的中央机关行政岗计算的。卢炫因为经常兼职出差，在整个大图书馆里算是津贴拿得最高的。
+Unfortunately, Lu Xuan's income was quite low among the Senators. Although his position salary was not much different from that of other Senators, he was far behind in terms of allowances. After all, the work in the Great Library was not heavy manual labor; it did not require him to brave the wind and rain, the sun and the dew, or climb mountains and ridges; nor was there the danger of dying at any time in a factory or on a battlefield. Therefore, the allowance standard for the Great Library was calculated according to the lowest administrative post in the central government. Because Lu Xuan often went on business trips as a part-timer, he was considered to have the highest allowance in the entire Great Library.
 
-　　对于其他元老来说――比如坐在他对面的程元老，其实收入比他还要低，但是人没负担，照样可以云淡风轻过着惬意的生活，但是他就不行，他家大业大，元老院奇葩的税收政策更是进一步加剧了他的财政困难。
+For other Senators—for example, Senator Cheng sitting opposite him, his income was actually lower than his, but he had no burden and could still live a leisurely and comfortable life. But he couldn't. He had a large family and a large business. The Senate's strange tax policy further exacerbated his financial difficulties.
 
-　　其实从去年开始，卢家庄的财政就已经出现窘态，对“门下”的各种“赏赐”开始有“成例”也是那时候制定的。
+In fact, since last year, the finances of the Lu family village had been in a state of embarrassment. The "precedents" for various "rewards" to the "disciples" were also established at that time.
 
-　　仕途上自己的作用有限，经济支持上又后续乏力。人是很现实的动物，即使他有大恩于这些人，当他们发觉主人并不能给自己带来多大的好处之后，剩下的就只有逐渐疏远了。连带着，连卢家庄也开始有些不稳起来。特别是刘蕙――他暗暗懊恼自己当初不该送她去女仆培训班代培――虽然她从培训班上学来的现代知识对自己有用，但是同样也塞了一脑子乱七八糟的玩意，变得难以“管教”。光她和其他女仆的人际关系就是意见很头疼的事情，天知道她会在她们面前乱说什么。
+His role in his official career was limited, and his financial support was also lacking. People are very realistic animals. Even if he had been a great benefactor to these people, when they found that their master could not bring them much benefit, all that was left was to gradually alienate him. Along with that, even the Lu family village began to become a little unstable. Especially Liu Hui—he secretly regretted that he should not have sent her to the maid training class for training—although the modern knowledge she learned from the training class was useful to him, it also filled her head with a lot of messy things, making her difficult to "discipline." Just her interpersonal relationships with other maids were a headache. God knows what she would say in front of them.
 
-　　得好好的再敲打敲打她，让她知畏。他默默的想着，不然她终究是个隐患。
+He had to give her a good beating again to make her fear him. He thought to himself, otherwise she would eventually be a hidden danger.
 
-　　当然一味的敲打也不能解决问题，唯一出路就是自己迅速强大起来。否则他这些年的苦心不仅是镜花水月为他人做嫁衣，说不好那天元老院风气一变，他这个无权无势的又不安分守己的元老就会变成契卡的靶子，而卢家庄说不定就成了自己被批倒批臭的铁证。但开弓没有回头箭，世上没有后悔药，他必须硬着头皮走下去。
+Of course, a mere beating could not solve the problem. The only way out was to quickly become stronger. Otherwise, his years of hard work would not only be a fleeting illusion and a wedding dress for others, but it was also possible that one day the atmosphere of the Senate would change, and he, a powerless and restless Senator, would become the target of the Cheka, and the Lu family village might become the ironclad evidence of his being overthrown and discredited. But there was no turning back. There was no medicine for regret in the world. He had to bite the bullet and go on.
 
-　　“我不能再等了！”卢炫一把推开堆在桌上的舆情分析,腾的站了起来，一脸凛然。
+"I can't wait any longer!" Lu Xuan pushed aside the public opinion analysis piled on the table, stood up abruptly, his face凛然.
 
-　　叮当叮当，院门口的门铃被拉响了，这院子没有他吩咐任何人都不许进来。
+Ding-dong, ding-dong, the doorbell at the courtyard gate rang. No one was allowed to enter this courtyard without his permission.
 
-　　“什么事？”他不耐烦的冲着院门口喝问道。
+"What is it?" he asked impatiently at the courtyard gate.
 
-　　“老爷，”张兰在院门外怯生生的说道，“蕙姐――”
+"Master," Zhang Lan said timidly from outside the courtyard gate, "Sister Hui—"
 
-　　“进来说话！”
+"Come in and speak!"
 
-　　张兰赶紧进来，站在院子当间禀告道：“蕙姐晕，晕过去了……”
+Zhang Lan hurried in and stood in the middle of the courtyard to report: "Sister Hui fainted, fainted..."
 
-　　卢炫皱了下眉：挨了顿板子就晕过去了，这是哪一出？刚才验完刑她还能自己扶着栏杆走下去跪着，这没十多分钟就晕过去？
+Lu Xuan frowned: she fainted after being beaten? What kind of drama was this? After the punishment was verified, she could still walk down the railing and kneel. How could she faint in less than ten minutes?
 
-　　“送她回房歇着就是了。”
+"Just send her back to her room to rest."
 
-　　次日，于鄂水的办公室里，卢炫委顿的坐在于鄂水的面前，头发蓬乱，神情憔悴。
+The next day, in Yu E'shui's office, Lu Xuan sat dejectedly in front of Yu E'shui, his hair disheveled and his expression haggard.
 
-　　卢炫平常一本正经也好、插科打诨也好、装模作样的于鄂水早已见怪不怪，但卢炫这种颓废的样子却是头一回看到。关切的问：“怎么了？出什么事了？”
+Yu E'shui was used to Lu Xuan's usual seriousness, jokes, and pretentiousness, but this was the first time he had seen Lu Xuan in such a decadent state. He asked with concern, "What's wrong? What happened?"
 
-　　“哎……我看我是要成杨欣武第二啊，报应！报应啊……”卢炫长一声长叹后就是一连串哀嚎，把于鄂水弄得一头雾水。
+"Alas... I think I'm going to be the second Yang Xinwu. Retribution! Retribution..." After a long sigh, Lu Xuan let out a series of wails, leaving Yu E'shui completely confused.
 
-　　“到底怎么了？什么杨欣武第二啊？”
+"What's wrong? What second Yang Xinwu?"
 
-　　“前阵子女仆案发，我还在笑话他，说他连一个女仆的都管不住，搞出这么大的麻烦，简直就是元老院的耻辱。不成想，我自己……我自己也成元老院的的耻辱了……报应，报应啊！”
+"A while ago, when the maid case broke out, I was still laughing at him, saying that he couldn't even control a maid and caused such a big trouble, it was a disgrace to the Senate. I didn't expect that I... I myself have become a disgrace to the Senate... Retribution, retribution!"
 
-　　“你好说说话，什么耻辱？”看着卢炫一脸悲愤的模样，于鄂水赶紧问道。
+"Speak properly, what disgrace?" Seeing Lu Xuan's sad and indignant look, Yu E'shui asked quickly.
 
-　　卢炫看于鄂水不高兴，连忙正了正身形，说道：“闹点家务事。唉，我的情况，于馆长你是知道的……”
+Seeing that Yu E'shui was not happy, Lu Xuan quickly straightened up and said, "It's just some family matters. Alas, you know my situation, Director Yu..."
 
-　　于鄂水连连点头：“你不是和老勋一样，也娶了本地的土著的女儿嘛！小日子过得不错吧。”
+Yu E'shui nodded repeatedly: "Aren't you like Old Xun, you also married a local native's daughter! You're living a good life, right?"
 
-　　“小日子倒还行，可是你知道，我还有个生活秘书――”
+"Life is okay, but you know, I also have a life secretary—"
 
-　　“啊。对，对，齐人之福嘛，有什么不好的？元老院里有这个福分的人可不多啊。”
-[y156]: /characters/y156 "李潇侣"
+"Ah. Right, right, the blessing of having two women, what's not to like? There aren't many people in the Senate who have this blessing."
+[y156]: /characters/y156 "Li Xiaolü"
